处理加粗和波浪线内容

--- a/1/A/01.tex
+++ b/1/A/01.tex
@@ -20,7 +20,7 @@
 了力，后来人们把力的概念加以扩展，把凡是能和人力起相
 同效果的作用都叫做力．机车牵引列车前进，机车对列车施
 加了力．汽锤锻打工件，汽锤对工件施加了力．这样，人们建
-立了这样的认识：\textit{力是物体对物体的作用} ．
+立了这样的认识：\NoteUnderWave{力是物体对物体的作用} ．
 
 一个物体受到力的作用，一定有另一个物体施加这种作
 用．前者是受力物体，后者是施力物体，只要有力发生，就一
@@ -28,7 +28,7 @@
 力，而没有指明施力物体，但施力物体一定是存在的．
 
     力是有大小的．我们在初中学过，力的大小可以用测力
-计来测量．在国际单位制中力的单位是\textbf{牛顿} ，简称牛，国际符
+计来测量．在国际单位制中力的单位是\NoteBold{牛顿} ，简称牛，国际符
 号是N，日常生活和生产中常用的力的单位是千克力，牛顿
 和千克力的关系是：1千克力$=9.8$牛．
 
@@ -48,7 +48,7 @@
 的方向，箭头或箭尾表示力的
 作用点，箭头所沿的直线叫做
 力的作用线．这种表示力的方
-法，叫做\textbf{力的图示} ．图~\ref{fig_A_1-1} 中表示的是作用在小车上的100牛
+法，叫做\NoteBold{力的图示} ．图~\ref{fig_A_1-1} 中表示的是作用在小车上的100牛
 的力．
 
 \begin{figure} [htp]\centering
@@ -70,7 +70,7 @@
 
 \section{重力} 
     地球上一切物体都受到地球的吸引作用．这种由于地球
-的吸引而使物体受到的力叫做\textbf{重力} ．重力也常常叫做\textbf{重量} ．
+的吸引而使物体受到的力叫做\NoteBold{重力} ．重力也常常叫做\NoteBold{重量} ．
 
     重力不但有大小，而且有方向．悬挂物体的绳子，静止时
 总是竖直下垂的．自由落向地面的物体，总是竖直下落的，可
@@ -83,7 +83,7 @@
 小也等于物体所受的重力．
 
     一个物体的各部分都要受到地球对它的作用力，我们可
-以认为重力的作用集中于一点，这一点叫做物体的\textbf{重心} ．如
+以认为重力的作用集中于一点，这一点叫做物体的\NoteBold{重心} ．如
 图~\ref{fig_A_1-2} 那样用手指支持一根铅
 笔，我们可以找到一个位置，使
 铅笔水平地支持在手指上，手
@@ -135,7 +135,7 @@ $D$点的竖直线$DE$上．$AB$和$DE$的交点$C$就是物体的重心．
 跟它接触的圆木发生力的作用，可以把圆木推开（图~\ref{fig_A_1-6}）．
 物体的伸长、缩短、弯曲等等，总之物体的形状或体积的改变，叫
 做形变．上面的例子说明，发生形变的物体，由于要恢复原
-状，对跟它接触的物体会产生力的作用，这种力叫做\textbf{弹力} ．
+状，对跟它接触的物体会产生力的作用，这种力叫做\NoteBold{弹力} ．
 
 \begin{figure} [htp]
 	\centering
@@ -178,14 +178,14 @@ $D$点的竖直线$DE$上．$AB$和$DE$的交点$C$就是物体的重心．
 显示出来．把书放在桌面上，书压桌面，使桌面和书都发生极
 其微小的形变．发生形变的书要恢复原状，对桌面产生向下
 的弹力，这就是书对桌面的压力．发生形变的桌面要恢复原
-状，产生向上的弹力，这就是桌面对书的支持力．\textit{凡是支持物体对物体的支持力，
+状，产生向上的弹力，这就是桌面对书的支持力．\NoteUnderWave{凡是支持物体对物体的支持力，
 都是支持物因为发生形变而对物体产生弹力；支持力的方向总是垂直于支持面并指向
 被支持的物体} （图~\ref{fig_A_1-8}）．
 把电灯挂在电线上，电灯拉紧电线，使电灯和电线
 都发生极其微小的形变，发生形变的电灯要恢复原状，对电
 线产生向下的弹力，这就是电灯对电线的拉力．发生形变的
 电线要恢复原状，产生向上的弹力，这就是电线对电灯的拉
-力．\textit{凡是一根线（或绳）对物体的拉力，都是这根线（或绳）因
+力．\NoteUnderWave{凡是一根线（或绳）对物体的拉力，都是这根线（或绳）因
 为发生形变而对物体产生的弹力；拉力的方向总是指向线收
 缩的方向} （图~\ref{fig_A_1-9}）．
 
@@ -309,23 +309,23 @@ $D$点的竖直线$DE$上．$AB$和$DE$的交点$C$就是物体的重心．
 
 
     定量地研究各种形变中弹力和形变的关系比较复杂，我
-们经常遇到的是弹簧的拉伸（或压缩）形变．实验表明：\textit{弹簧
+们经常遇到的是弹簧的拉伸（或压缩）形变．实验表明：\NoteUnderWave{弹簧
 弹力的大小$f$和弹簧伸长（或缩短）的长度$x$成正比．} 
 写成公式就是
 \[f=kx\]
-其中$k$是比例常数，叫做弹簧的\textbf{劲度系数} ．劲度系数是一个
+其中$k$是比例常数，叫做弹簧的\NoteBold{劲度系数} ．劲度系数是一个
 有单位的量．在国际单位制中，$f$的单位是牛，$x$的单位是
 米，$k$的单位是牛/米．劲度系数在数值上等于弹簧伸长（或
 缩短）单位长度时的弹力．劲度系数跟弹簧的长度、弹簧的材
 料、弹簧丝的粗细等等都有关系．弹簧丝粗的硬弹簧比弹簧
 丝细的软弹簧劲度系数大．对于直杆和线的拉伸（或压缩）形
 变，也有上述正比关系，这个规律是英国科学家胡克发现的，
-叫做\textbf{胡克定律} ．
+叫做\NoteBold{胡克定律} ．
 
     胡克定律有它的适用范围．物体的形变过大，超出一定
 限度，上述正比关系将不再适用，这时即使撤去外力，物体也
-不能完全恢复原状．这个限度叫做\textbf{弹性限度} ．胡克定律在弹
-性限度内适用．弹性限度内的形变叫做\textbf{弹性形变} ．本书中提
+不能完全恢复原状．这个限度叫做\NoteBold{弹性限度} ．胡克定律在弹
+性限度内适用．弹性限度内的形变叫做\NoteBold{弹性形变} ．本书中提
 到的形变，除非特别指明，一般是指弹性形变．
 
 \subsection*{练习二} 
@@ -347,7 +347,7 @@ $D$点的竖直线$DE$上．$AB$和$DE$的交点$C$就是物体的重心．
 体在另一个物体表面上做相对滑动的时候，要受到另一个物
 体阻碍它运动的力，这种力叫做滑动摩擦力．滑动摩擦力的
 方向总跟接触面相切，并且跟物体的相对运动的方向相反（图~\ref{fig_A_1-12}）．
-实验表明：\textit{滑动摩擦力跟压力成正比
+实验表明：\NoteUnderWave{滑动摩擦力跟压力成正比
 也就是跟一个物体对另一个物体表面的垂直作用力成正比．} 
 用$f$表示滑动摩擦力的大小，用$N$表示压力的大小，那么
 \[f=\mu N,\]
@@ -358,7 +358,7 @@ $D$点的竖直线$DE$上．$AB$和$DE$的交点$C$就是物体的重心．
 开一些．
 } \label{fig_A_1-12} 
 \end{figure} 
-其中$\mu$是比例常数，叫做\textbf{滑动摩擦系数} ．滑动摩擦系数是由
+其中$\mu$是比例常数，叫做\NoteBold{滑动摩擦系数} ．滑动摩擦系数是由
 制成物体的材料决定的，材料不同，两物体间的滑动摩擦系数
 也不同．滑动摩擦系数还跟接触面的粗糙程度有关．在相同
 的压力下，滑动摩擦系数越大，滑动摩擦力就越大．滑动摩擦
@@ -520,8 +520,8 @@ $D$点的竖直线$DE$上．$AB$和$DE$的交点$C$就是物体的重心．
 
 观察和实验表明，两个物体之间的作用总是相互的，一
 个物体对另一个物体有力的作用，后一个物体一定同时对前
-一个物体有力的作用．\textit{力是物体与物体间的相互作用} ．物体
-间相互作用的这一对力，常常叫做\textbf{作用力} 和\textbf{反作用力} ．把力
+一个物体有力的作用．\NoteUnderWave{力是物体与物体间的相互作用} ．物体
+间相互作用的这一对力，常常叫做\NoteBold{作用力} 和\NoteBold{反作用力} ．把力
 分成为作用力和反作用力并不是绝对的，我们可以把其中一
 个力叫做作用力，另一个力就叫做反作用力．
 
@@ -540,9 +540,9 @@ $D$点的竖直线$DE$上．$AB$和$DE$的交点$C$就是物体的重心．
 也随着改变，但两个读数总相等，这说明作用力和反作用力
 大小相等，方向相反．
 
-    总结这类实验结果，得到结论：\textbf{两个物体之间的作用力和
+    总结这类实验结果，得到结论：\NoteBold{两个物体之间的作用力和
 反作用力总是大小相等，方向相反，作用在一条直线上．} 这就
-是\textbf{牛顿第三定律} ．
+是\NoteBold{牛顿第三定律} ．
 
 牛顿第三定律在生活和生产中应用很广泛．人走路时用
 脚蹬地，脚对地面施加一个作用力，地面同时给脚一个反作用
@@ -596,7 +596,7 @@ $D$点的竖直线$DE$上．$AB$和$DE$的交点$C$就是物体的重心．
 力情况对于解决力学问题十分重要．怎样来分析物体受力情
 况呢？下面先讨论几个具体例子．
 
-    (1) \textbf{在水平面上的物体 }  一本书放在水平桌面上，书受
+    (1) \NoteBold{在水平面上的物体 }  一本书放在水平桌面上，书受
 到两个力的作用．书由于受到地球的吸引而受到重力$G$，方
 向竖直向下．书压在桌面上使桌面发生极微小的形变，发生
 形变的桌面对书产生支持力$N$，方向竖直向上．书的受力图
@@ -646,7 +646,7 @@ $D$点的竖直线$DE$上．$AB$和$DE$的交点$C$就是物体的重心．
 等方向相反．
 
 
-    (2) \textbf{在斜面上运动的物体 }  一个木块沿着光滑的斜面下
+    (2) \NoteBold{在斜面上运动的物体 }  一个木块沿着光滑的斜面下
 滑，它受到几个力的作用？木块受到重力$G$，方向竖直向下．
 由于木块压斜面，斜面发生形变而对木块产生支持力$N$，方
 向垂直于斜面并指向被支持的木块．木块受到这两个力的作
@@ -685,7 +685,7 @@ $D$点的竖直线$DE$上．$AB$和$DE$的交点$C$就是物体的重心．
 力情况．明确了被研究的对象以后，把它从周围物体中隔离出
 来，分析周围有哪些物体对它施加力的作用，它是什么性质的
 力，力的大小和方向怎样，并把它们一一画在受力图上．这种
-分析力的方法叫做\textbf{隔离法} ．用隔离法分析力，既不要马虎从
+分析力的方法叫做\NoteBold{隔离法} ．用隔离法分析力，既不要马虎从
 事，随意丢掉任何一个力，也不要无中生有，脱离开力是物体
 对物体的作用而凭空想出某个多余的力．至于被研究的物体
 对周围其他物体的反作用力，一般可不予考虑；如果因问题的
@@ -753,8 +753,8 @@ $D$点的竖直线$DE$上．$AB$和$DE$的交点$C$就是物体的重心．
 时受到几个力．一个物体受到几个力共同作用的时候，我们
 常常可以求出这样一个力，这个力产生的效果跟原来几个力
 共同产生的效果相同．一个力，如果它产生的效果跟几个力
-共同产生的效果相同，这个力就叫做那几个力的\textbf{合力} ，求几
-个力的合力叫做\textbf{力的合成} ． 
+共同产生的效果相同，这个力就叫做那几个力的\NoteBold{合力} ，求几
+个力的合力叫做\NoteBold{力的合成} ． 
 
 \begin{figure} [htp]
 \centering
@@ -778,7 +778,7 @@ $D$点的竖直线$DE$上．$AB$和$DE$的交点$C$就是物体的重心．
 
 
     几个力如果都作用在物体的同一点，或者它们的作用线
-相交于同一点，这几个力叫故\textbf{共点力} ．现在我们先来研究作
+相交于同一点，这几个力叫故\NoteBold{共点力} ．现在我们先来研究作
 用于物体某一点上的两个力的合成．
 
     图~\ref{fig_A_1-22a} 表示橡皮条$GE$在力$F_1$和$F_2$的共同作用下，
@@ -806,14 +806,14 @@ $D$点的竖直线$DE$上．$AB$和$DE$的交点$C$就是物体的重心．
 
     可见，求两个互成角度的共点力的合力，可以用表示这两
 个力的线段为邻边作平行四边形，这两个邻边之间的对角线
-就表示合力的大小和方向，这叫做\textbf{力的平行四边形法则} ．
+就表示合力的大小和方向，这叫做\NoteBold{力的平行四边形法则} ．
 
     根据平行四边形对边平行而且相等的性质，力的平行四
 边形还可以用更简单的作画法来代替．在图~\ref{fig_A_1-23a} 中$F$是
 共点力$F_1$和$F_2$的合力．如图~\ref{fig_A_1-23b} 所示，从$O$点出发，把
 代表$F_1$和$F_2$的线段$OA$、$AC$首尾相接地画出来，连接$O$和
 $C$，从$O$指向$C$的线段就表示合力$F$的大小和方向．上述作
-图法叫做\textbf{三角形法} ．作三角形$OBC$（图~\ref{fig_A_1-23c}）同样可以求
+图法叫做\NoteBold{三角形法} ．作三角形$OBC$（图~\ref{fig_A_1-23c}）同样可以求
 出$F_1$和$F_2$的合力$F$．
 
 \begin{figure} [htp]
@@ -956,8 +956,8 @@ $\theta =0^\circ$, $30^\circ$, $60^\circ$, $90^\circ$, $120^\circ$, $150^\circ$,
 两个力产生的（图~\ref{fig_A_1-27}）：一个水平的力$F_1$使犁前进，一个竖
 直向上的力$F_2$把犁上提．可见力$F$可以用两个力$F_1$和$F_2$
 来代替几个力，如果它们产生的效果跟原来一个力产生的
-效果相同，这几个力就叫做原来那个力的\textbf{分力} ．求一个已知
-力的分力叫做\textbf{力的分解} ．
+效果相同，这几个力就叫做原来那个力的\NoteBold{分力} ．求一个已知
+力的分力叫做\NoteBold{力的分解} ．
 
 \begin{figure} [htp]\centering
 \includegraphics{fig/A/1-27.pdf} 
@@ -1091,9 +1091,9 @@ $30^\circ$角，当起重机吊着$4.0\times 10^4$牛的货物时，钢索和悬
 的方向就是物体运动的方向．
 
     这样，我们就接触到一类物理量．它们的共同特点是：既
-有大小，又有方向．这种既有大小又有方向的物理量，叫做\textbf{矢
+有大小，又有方向．这种既有大小又有方向的物理量，叫做\NoteBold{矢
 量} ．力是矢量，速度也是矢量．那些只有大小没有方向的物
-理量，叫做\textbf{标量} ．长度、质量、时间是标量，初中学过的功、温
+理量，叫做\NoteBold{标量} ．长度、质量、时间是标量，初中学过的功、温
 度等也是标量．
 
     矢量可以用一根带箭头的线段来表示．线段按一定标度
@@ -1187,7 +1187,7 @@ F_2&=F-F_1\\
 \end{equation} 
 这表示$F_2$的大小是11牛，方向与选定的正方向相同．
 
-需要强调指出的是：\textit{只有同一直线上的矢量，它们的运
+需要强调指出的是：\NoteUnderWave{只有同一直线上的矢量，它们的运
 算才可以像上述那样简化成代数运算．这是平行四边形法则
 在这种特殊情况下的运用} ．不在同一直线上的矢量，它们的运算不能
 这样简化成代数运算，仍必须按照平行四边形法则
