--- a/1/A/02.tex
+++ b/1/A/02.tex
@@ -2,7 +2,7 @@
 
 \section{机械运动}
  我们在初中学过，一个物体相对于另一个物体的位置变
-化叫做\textbf{机械运动}，简称运动．在自然界中没有不动的物体．房
+化叫做\NoteBold{机械运动}，简称运动．在自然界中没有不动的物体．房
 屋、桥梁、树术、山岭等总在原地不动，我们说它们是静止的．
 其实它们是随着地球一起运动的，不但地球在运动，太阳在
 银河系中也是运动的．小到原子和分子，大到宇宙中的天体，
@@ -19,7 +19,7 @@
 认为自己是静止的，在车厢里走动的乘务员是运动的，这是
 选取车厢作为参照来说的；乘客对车厢来说位置没有发生变
 化，乘务员对车厢来说位置发生了变化．研究物体的运动时，
-选来作为参照的另外的物体，叫做\textbf{参照物}．
+选来作为参照的另外的物体，叫做\NoteBold{参照物}．
 
     原则上，研究一个物体的运动时，参照物是可以任意选取
 的．观察在河里游泳的人的运动，可以选择河岸作参照物，也
@@ -34,7 +34,7 @@
 本的运动只有两种：平动和转动．
 
     从桌内拉出抽屉的时候，抽屉各部分的运动轨迹完全相
-同，也就是说，各部分的运动完全相同．这样的运动就是\textbf{平
+同，也就是说，各部分的运动完全相同．这样的运动就是\NoteBold{平
 动}．打桩时重锤的下落运动，汽缸里活塞的运动，车床上车刀
 （图~\ref{fig_A_2-1}）的运动，在直铁轨上行驶的火车车厢的运动，都是平
 动．
@@ -61,7 +61,7 @@
 \end{figure}
     
     推动石磨的时候，磨盘上的各部分都围绕着通过中心
-的轴线做圆周运动．这样的运动就是\textbf{转动}．脱粒机的滚筒的
+的轴线做圆周运动．这样的运动就是\NoteBold{转动}．脱粒机的滚筒的
 运动，机器上飞轮的运动，车床上工件的运动（图~\ref{fig_A_2-1}），都是
 转动．
 
@@ -76,7 +76,7 @@
 是一件简单的事情．可是，在某些倩况下，却可以不考虑物体
 的大小和形状，而使问题简化．在这些情形下，我们可以把物
 体看作一个有质量的点，或者说用一个有质量的点来代替整
-个物体，用来代替物体的有质量的点叫做\textbf{质点}．
+个物体，用来代替物体的有质量的点叫做\NoteBold{质点}．
 
     在什么情况下可以把物体当作质点，这要看具体情况而
 定．举例来说，当我们研究地球的公转时，由于地球的直径（约
@@ -226,10 +226,10 @@ $x_0=0$．这时质点的位移就可以用末位置的坐标来表示：
 
     火车在平直的铁路上行驶，如果它每分钟的位移是900
 米，每秒钟的位移是15米，也就是在相等的时间内位移相等，
-这列火车所做的运动就是\textbf{匀速直线运动}．
+这列火车所做的运动就是\NoteBold{匀速直线运动}．
 
-\textit{物体在一条直线上运动，如果在相等时间里的位移相等，
-这种运动就叫做匀速直线运动}．匀速直线运动有时简称为\textbf{匀速运动}．
+\NoteUnderWave{物体在一条直线上运动，如果在相等时间里的位移相等，
+这种运动就叫做匀速直线运动}．匀速直线运动有时简称为\NoteBold{匀速运动}．
 
     飞机在天空中匀速飞行，轮船在海洋上匀速航行，它们的
 运动虽然都是匀速运动，但还是有区别的．在相同的时间里，
@@ -241,8 +241,8 @@ $x_0=0$．这时质点的位移就可以用末位置的坐标来表示：
 恒量，不随时间而改变．这个比值越大，表示物体运动得越
 快．
 
-\textit{在匀速直线运动中，位移和时间的比值，叫做匀速直线
-运动的}\textbf{速度}．
+\NoteUnderWave{在匀速直线运动中，位移和时间的比值，叫做匀速直线
+运动的\NoteBold{速度}}．
 
 如果做匀速运动的物体在时间$t$内的位移是$s$，速度$v$
 就可以用下式来表示：
@@ -262,7 +262,7 @@ $x_0=0$．这时质点的位移就可以用末位置的坐标来表示：
 可以得到
   \[s=vt \]
 
-这个公式叫做匀速运动的\textbf{位移公式}，它表示出匀速运动
+这个公式叫做匀速运动的\NoteBold{位移公式}，它表示出匀速运动
 的位移跟时间的关系：位移跟时间成正比．利用这个公式，只
 要知道了速度$v$，就可以求出做匀速运动的物体在任何时间
 内的位移．如果还知道物体的初位置，就可以确定做匀速运
@@ -298,7 +298,7 @@ $x_0=0$．这时质点的位移就可以用末位置的坐标来表示：
     
     任意选择一个平面直角坐标
 系、用横轴表示时间，用纵轴表示位移，画出位移和时间的关
-系图线，这种图像叫做\textbf{位移—时间图像}，简称为\textbf{位移图像}，匀速直线运动的位移$s$
+系图线，这种图像叫做\NoteBold{位移—时间图像}，简称为\NoteBold{位移图像}，匀速直线运动的位移$s$
 是时间$t$的正比函数$s=vt$．
 \begin{figure}[htp]
     \centering
@@ -334,7 +334,7 @@ $x_0=0$．这时质点的位移就可以用末位置的坐标来表示：
     在直角三角形$P_1QP_2$中，比值
     $\dfrac{\Delta s}{\Delta t}=\dfrac{QP_2}{P_1Q}$越大，
 $\angle P_2P_1Q$也越大，直线$OP$就越陡．所以我们把
-$\Delta s/\Delta t$叫做直线的\textbf{斜
+$\Delta s/\Delta t$叫做直线的\NoteBold{斜
 率}，用字母$k$来表示．$\Delta s$是物体在$\Delta t$内的位移，比
 值 $\Delta s/\Delta t$
 是匀速运动的速度$v$，因此
@@ -351,7 +351,7 @@ $\Delta s/\Delta t$叫做直线的\textbf{斜
 的关系，也可以用图像来表示．
 
 在平面直角坐标系中，用横轴表示时间，用纵轴表示速
-度，画出速度和时间关系的图线，这种图像叫做运动的\textbf{速度—时间图像}，简称为\textbf{速度图像}．匀速运动的速度不随时间改变，
+度，画出速度和时间关系的图线，这种图像叫做运动的\NoteBold{速度—时间图像}，简称为\NoteBold{速度图像}．匀速运动的速度不随时间改变，
 它的速度图像是一条与横轴平行的直线，图~\ref{fig_A_2-10} 中的两条直
 线I和II分别表示$v=2$$\Ums$和$v=5$$\Ums$的匀速运动的
 速度图像．在同一个坐标平面上，图像的直线在纵轴上的截
@@ -428,7 +428,7 @@ $\Delta s/\Delta t$叫做直线的\textbf{斜
 是不相等的．火车进站的时候，运动越来越慢，在相等时间里
 的位移也是不相等的．
 
-\textit{物体在一条直线上运动，如果在相等时间里的位移不相等，这种运动就叫做\textbf{变速直线运动}}．变速直线运动有时简称为\textbf{变速运动}．
+\NoteUnderWave{物体在一条直线上运动，如果在相等时间里的位移不相等，这种运动就叫做\NoteBold{变速直线运动}}．变速直线运动有时简称为\NoteBold{变速运动}．
 
 \subsection{平均速度}
 
@@ -436,10 +436,10 @@ $\Delta s/\Delta t$叫做直线的\textbf{斜
 相等，所以它没有恒定的速度．那么，我们怎样来描述它的快
 慢呢？粗略的办法是把它看作匀速运动．一列火车，半小时
 内走了28千米，尽管它的运动时快时慢，我们仍然可以设想
-火车在这半小时内是匀速运动的，这样它的速度就是$56 \Ukmh$．这个$56 \Ukmh$，就是火车在这半个小时内的\textbf{平
+火车在这半小时内是匀速运动的，这样它的速度就是$56 \Ukmh$．这个$56 \Ukmh$，就是火车在这半个小时内的\NoteBold{平
 均速度}．
 
-\textit{在变速直线运动中，运动物体的位移和所用时间的比值，
+\NoteUnderWave{在变速直线运动中，运动物体的位移和所用时间的比值，
 叫做这段时间里的平均速度}．
 如果用$\bar v$来表示平均速度，那么
 \[\bar v=\frac{s}{t}\]
@@ -455,7 +455,7 @@ $\Delta s/\Delta t$叫做直线的\textbf{斜
 平均速度只能粗略地描述做变速运动的物体
 的运动情况，要精确地描述变速直线运动，还需要知道物体在
 每一时刻（或位置）的运动速度．运动物体在某一时刻（或某
-一位置）的速度，叫做\textbf{瞬时速度}．
+一位置）的速度，叫做\NoteBold{瞬时速度}．
 
 物体在某一时刻或某一位置的速度的意义是什么呢？图~\ref{fig_A_2-14} 
 表示一辆做变速运动的汽车．我们要确定汽车经过$A$点
@@ -483,12 +483,12 @@ $\Delta s/\Delta t$叫做直线的\textbf{斜
 
 用数学语言可以更为精确地表达上面所讲的意思．在图~\ref{fig_A_2-14} 
 中从$A$起取一小段位移$\Delta s$，求出这小段位移内的平均
-速度$\Delta s/\Delta t$， 当$\Delta t$\textbf{趋近于}零时，平均速度\textbf{趋近于}某一固定数
+速度$\Delta s/\Delta t$， 当$\Delta t$\NoteBold{趋近于}零时，平均速度\NoteBold{趋近于}某一固定数
 值—一极限值，这个极限值就是汽车经过$A$点的瞬时速度．
 
     瞬时速度既有大小，又有方向，是矢量．在直线运动中，
 瞬时速度的方向就是物体经过该点时的运动方向．瞬时速度
-的大小叫做\textbf{瞬时速率}，简称\textbf{速率}，它是一个表示物体运动快慢
+的大小叫做\NoteBold{瞬时速率}，简称\NoteBold{速率}，它是一个表示物体运动快慢
 程度的标量，在某些问题中，如果只需考虑瞬时速度的大小，
 可以用速率的概念．
 
@@ -530,9 +530,9 @@ $\Delta s/\Delta t$叫做直线的\textbf{斜
 动方式在自然界中是的确存在的．这种运动，就是我们现在
 要研究的匀变速直线运动．
 
-\textit{在一条直线上运动的物体，如果在相等的时间里速度的
+\NoteUnderWave{在一条直线上运动的物体，如果在相等的时间里速度的
 变化相等，
-物体的运动就叫做\textbf{匀变速直线运动}}，或者简称为\textbf{匀变速运动}．
+物体的运动就叫做\NoteBold{匀变速直线运动}}，或者简称为\NoteBold{匀变速运动}．
 
 举例来说，一个做直线运动的物体，在某一时刻它的速度
 是3$\Ums$，过了1秒钟变成4$\Ums$，再过1秒钟变成5$\Ums$，
@@ -563,7 +563,7 @@ $\Delta s/\Delta t$叫做直线的\textbf{斜
 的变化跟发生这个变化所用的时间的比值是一个恒量，不随
 时间而改变．这个比值越大，表示速度变化得越快．
 
-\textit{在匀变速直线运动中，速度的变化和所用的时间的比值，
+\NoteUnderWave{在匀变速直线运动中，速度的变化和所用的时间的比值，
 叫做匀变速直线运动的加速度}．
 
 用$v_0$表示运动物体开始时刻的速度（初速度），用$v_t$表
@@ -676,7 +676,7 @@ $\Delta s/\Delta t$叫做直线的\textbf{斜
 
     前一节里讲过，匀变速运动的加速度公式是
 \[a=\frac{v_t-v_0}{t} \]
-把这个公式变形，就得到匀变速直线运动的\textbf{速度公式}
+把这个公式变形，就得到匀变速直线运动的\NoteBold{速度公式}
 \[v_t=v_0+at \]
 
     这个公式表示出匀变速运动的瞬时速度是怎样随着时间
@@ -844,7 +844,7 @@ S_2&=\frac{1}{2}AR\times RP=\frac{1}{2}at^2
 由此可得运动物体在时间$t$内的位移为
 \[s=v_0t+\frac{1}{2}at^2 \]
 
-    这个公式叫做匀变速直线运动的\textbf{位移公式}．它表示出匀
+    这个公式叫做匀变速直线运动的\NoteBold{位移公式}．它表示出匀
 变速运动的位移和时间的关系．根据这个公式，如果已经知
 道物体的初速度和加速度，就可以求出物体在任何时间内发
 生的位移，从而可以确定物体在任一时刻的位置．
@@ -1185,7 +1185,7 @@ s_3&=(v_0+2at)t +\frac{1}{2}at^2\\
 
 
 
-物体只在重力作用下，从静止开始下落的运动，叫做\textbf{自由落体运动}．这种运动只有在没有空气的空间里才能发生．在有空气的空间里，如果空气阻力的作用比较小，可以忽略不计，物体的下落也可以看作是自由落体运动．\textit{不同物体的自由落体运动，它们的运动情况是相同的}．
+物体只在重力作用下，从静止开始下落的运动，叫做\NoteBold{自由落体运动}．这种运动只有在没有空气的空间里才能发生．在有空气的空间里，如果空气阻力的作用比较小，可以忽略不计，物体的下落也可以看作是自由落体运动．\NoteUnderWave{不同物体的自由落体运动，它们的运动情况是相同的}．
 
 直观告诉人们，自由落体运动是变速运动，但它是不是一种匀变速运动呢？下而用实验来研究这个问题．
 
@@ -1193,7 +1193,7 @@ s_3&=(v_0+2at)t +\frac{1}{2}at^2\\
 \subsection{自由落体加速度}
 图~\ref{fig_A_2-21} 是自由落体（小球）的闪光照
 片，它是每隔1/30秒的时间拍摄的，由这张照片可以测出小球在各个连续相等时间里的位移．小球最初几个位置比较密集，测量起来误差较大，我们从某个稍大些的位置间隔开始测量．
-表 \ref{tab-A-2.1} 第一列是这些间隔的标号，第二列是这些间隔的长度，即小球在各个1/30秒内的位移，第三列是后一间隔的长度减去前一间隔的长度所得的结果．这些值在误差范围内可以认为是相等的，从练习九第6题知道，这表示小球的下落是匀变速运动．可见，\textit{自由落体运动是初速度为零的匀变速运动}．
+表 \ref{tab-A-2.1} 第一列是这些间隔的标号，第二列是这些间隔的长度，即小球在各个1/30秒内的位移，第三列是后一间隔的长度减去前一间隔的长度所得的结果．这些值在误差范围内可以认为是相等的，从练习九第6题知道，这表示小球的下落是匀变速运动．可见，\NoteUnderWave{自由落体运动是初速度为零的匀变速运动}．
 
 \begin{figure}[htp]
 \centering
@@ -1201,7 +1201,7 @@ s_3&=(v_0+2at)t +\frac{1}{2}at^2\\
 \caption{自由落体的闪光照片}\label{fig_A_2-21}
 \end{figure}
 
-不同的自由落体，它们的运动情况相同：它们在做初速度为零的匀变速运动中，在相同的时间内发生相同的位移．由此可以知道，在同一地点，一切物体在自由落体运动中的加速度都相同．这个加速度叫做自由落体加速度，也叫\textbf{重力加速度}，通常用$g$来表示．
+不同的自由落体，它们的运动情况相同：它们在做初速度为零的匀变速运动中，在相同的时间内发生相同的位移．由此可以知道，在同一地点，一切物体在自由落体运动中的加速度都相同．这个加速度叫做自由落体加速度，也叫\NoteBold{重力加速度}，通常用$g$来表示．
 
 重力加速度$g$的方向总是竖直向下的，它的大小可以用实验来测定．表 \ref{tab-A-2.1} 中$\Delta s$的平均值是1.08厘米，利用$\Delta s=at^2$就可以求出$g$的数值：
 \[\begin{split}
@@ -1274,7 +1274,7 @@ s&=\frac{1}{2}gt^2
 
 
 \section{竖直上抛运动}
-将物体用一定的初速度沿竖直方向向上抛出去，物体所做的运动叫做\textbf{竖直上抛运动}．竖直上抛的物体，在上升过程中，速度越来越小，加速度的方向跟速度的方向相反，是竖直向下的；当速度减小到零的时候，物体上升到最大高度．然后物体从这个高度自由下落，速度越来越大，加速度的方向跟速度的方向相同，也是竖直向下的．如果不考虑空气的阻
+将物体用一定的初速度沿竖直方向向上抛出去，物体所做的运动叫做\NoteBold{竖直上抛运动}．竖直上抛的物体，在上升过程中，速度越来越小，加速度的方向跟速度的方向相反，是竖直向下的；当速度减小到零的时候，物体上升到最大高度．然后物体从这个高度自由下落，速度越来越大，加速度的方向跟速度的方向相同，也是竖直向下的．如果不考虑空气的阻
 力，这两个过程的加速度都是重力加速度$g$．因此，在处理竖直上抛运动的问题时，可以分两步进行计算：上升过程用初速度不为零的匀变速直线运动公式来计算，下降过程用自由落体公式来计算．
 
 由于上升运动和下降运动的加速度矢量是相同的，我们也可以把竖直上抛运动看做是一个统一的匀变速直线运动，而上升运动和下降运动不过是这个统一的运动的两个过程．这样，我们就可以用匀变速运动的速度公式和位移公式来统一讨论竖直上抛运动．在讨论这类问题中，我们习惯上总是
