--- a/1/A/03.tex
+++ b/1/A/03.tex
@@ -1,7 +1,7 @@
 \chapter{运动定律}\label{chapter-law-of-motion}
 
 
-前一章我们学习了怎样描述物体的运动，但是没有进一步讨论物体为什么做这种或那种运动．要讨论这个问题，必须知道运动和力的关系．这一章我们就来研究运动和力的关系，阐明力是使物体运动状态发生改变的原因．在力学中，只研究物体怎样运动而不涉及运动和力的关系的分科，叫做\textbf{运动学}；研究运动和力的关系的分科，叫做\textbf{动力学}．
+前一章我们学习了怎样描述物体的运动，但是没有进一步讨论物体为什么做这种或那种运动．要讨论这个问题，必须知道运动和力的关系．这一章我们就来研究运动和力的关系，阐明力是使物体运动状态发生改变的原因．在力学中，只研究物体怎样运动而不涉及运动和力的关系的分科，叫做\NoteBold{运动学}；研究运动和力的关系的分科，叫做\NoteBold{动力学}．
 
 根据动力学的知识，如果知道了物体的受力情况，就可以确定物体的运动状况；或者反过来，如果知道了物体的运动状况，也可以确定物体的受力情况．这样，我们就不但能够描述运动，而且能够创造条件来控制物体的运动，使物体的运动符合人们的要求．
 
@@ -69,10 +69,10 @@
 \subsection{牛顿第一定律} 
 牛顿在伽利略等人的研究基础上，并根据他自己的研究，系统地总结了力学的知识，提出了三条运动定律，其中第一条定律的内容是：
 
-\textbf{一切物体总保持匀速直线运动状态或静止状态，直到有
+\NoteBold{一切物体总保持匀速直线运动状态或静止状态，直到有
 外力迫使它改变这种状态为止．}
 
-这就是\textbf{牛顿第一定律}，物体的这种保持原来的匀速直线运动状态或静止状态的性质叫做\textbf{惯性}，牛顿第一定律又叫做\textbf{惯性定律}．
+这就是\NoteBold{牛顿第一定律}，物体的这种保持原来的匀速直线运动状态或静止状态的性质叫做\NoteBold{惯性}，牛顿第一定律又叫做\NoteBold{惯性定律}．
 
 汽车里的乘客，当汽车突然开动时，身体要向后面倾倒，这是因为汽车已经开始前进而乘客由于惯性要保持静止状态
 的缘故．
@@ -132,11 +132,11 @@
 列车出站时，由于受到机车牵引力的作用，由静止开始运动，并且速度不断增大；列车进站时，由于受到阻力的作用，速
 度不断减小，最后停下来．
 抛出的手榴弹，射出的炮弹，由于受到重力的作用，速度的方向不断改变而做曲线运动．
-可见，物体的运动状态发生改变，一定是受到外力作用的结果；力是物体运动状态发生改变的原因．物体的运动状态发生改变时，速度的大小和方向发生改变，有了加速度．由此得到结论：\textit{力是使物体产生加速度的原因}．
+可见，物体的运动状态发生改变，一定是受到外力作用的结果；力是物体运动状态发生改变的原因．物体的运动状态发生改变时，速度的大小和方向发生改变，有了加速度．由此得到结论：\NoteUnderWave{力是使物体产生加速度的原因}．
 
 物体运动状态的改变，不但跟物体所受的外力有关，而且跟物体本身的性质有关．
 一辆空车和一辆装满货物的车，在相同牵引力的作用下，空车用较短的时间可以达到某一速度，装满货物的车要较长的时间才能达到相同的速度．空车的质量小，产生的加速度大；装满货物的车质量大，产生的加速度小．这说明，质量不同的物体，它们的运动状态的改变的难易程度并不相同，或者说它们的惯性的大小并不相同．在外力相同的情况下，质量大的物体得到的加速度小，它的运动状态难改变，惯性大；质量小的物体得到的加速度大，它的运动状态容易改变，惯性小．
-这样，我们看到质量在动力学中所起的作用，质量越大，物体的惯性就越大．\textit{质量是物体惯性大小的量度}．
+这样，我们看到质量在动力学中所起的作用，质量越大，物体的惯性就越大．\NoteUnderWave{质量是物体惯性大小的量度}．
 
 \begin{figure}[htp]
     \centering
@@ -222,7 +222,7 @@
 
 总起来说，结论是：
 
-\textit{对质量相同的物体来说，物体的加速度跟物体所受的外力成正比；加速度的方向和外力的方向相同}．加速度的大小和力的大小的关系，写成公式就是
+\NoteUnderWave{对质量相同的物体来说，物体的加速度跟物体所受的外力成正比；加速度的方向和外力的方向相同}．加速度的大小和力的大小的关系，写成公式就是
 \[\frac{a_1}{a_2}=\frac{F_1}{F_2} \]
 或者
 \[a\propto F\]
@@ -289,7 +289,7 @@
 实验的数据，作出$a-1/m$图像．你得到的图像是一条直线吗？
 
 
-我们从实验中得到的结论是：\textit{在相同外力作用下，加速度跟质量成反比}．写成公式就是
+我们从实验中得到的结论是：\NoteUnderWave{在相同外力作用下，加速度跟质量成反比}．写成公式就是
 \[\frac{a_1}{a_2}=\frac{m_2}{m_1} \]
 或者
 \[a\propto \frac{1}{m} \]
@@ -343,7 +343,7 @@
 
 总结前两节的结果，关于加速度跟力和质量的关系，我们得到下述结论：
 
-\textbf{物体的加速度跟物体所受的外力成正比，跟物体的质量成反比，加速度的方向和外力的方向相同}．这就是\textbf{牛顿第二定律}．
+\NoteBold{物体的加速度跟物体所受的外力成正比，跟物体的质量成反比，加速度的方向和外力的方向相同}．这就是\NoteBold{牛顿第二定律}．
 
 牛顿第二定律说明，只有受到外力的作用，物体才具有加速度．外力停止作用，加速度随即消失．在持续不断的恒定外力作用下，物体具有持续不断的恒定加速度．外力随着时间而改变，加速度就随着时间而改变．
 
@@ -362,7 +362,7 @@
 
 
 \subsection{力的独立作用原理}
-上面讲的是物体受到一个力作用的情况，物体受到几个力的作用时，情况又是怎样的呢？当物体受到几个力的作用时，每个力各自独立地使物体产生一个加速度，就像其他的力不存在一样，这个性质叫做\textbf{力的独立作用原理}．因此物体受到几个力的作用，就产生几个加速度，物体实际的加速度就是这几个加速度的矢量和．
+上面讲的是物体受到一个力作用的情况，物体受到几个力的作用时，情况又是怎样的呢？当物体受到几个力的作用时，每个力各自独立地使物体产生一个加速度，就像其他的力不存在一样，这个性质叫做\NoteBold{力的独立作用原理}．因此物体受到几个力的作用，就产生几个加速度，物体实际的加速度就是这几个加速度的矢量和．
 \begin{figure}[htp]
     \centering
     \includegraphics{fig/A/3-7.pdf}
@@ -379,7 +379,7 @@
 
 这样，我们可以把牛顿第二定律进一步表述如下：
 
-\textbf{物体的加速度跟所受外力的合力成正比，跟物体的质量成反比，加速度的方向跟合外力的方向相同．}
+\NoteBold{物体的加速度跟所受外力的合力成正比，跟物体的质量成反比，加速度的方向跟合外力的方向相同．}
 
 牛顿第二定律的公式可以写成
 \[F_{\text{合}}=ma\]
@@ -525,14 +525,14 @@
 
 可见物理公式在确定物理量的数量关系的同时，也确定
 了物理量的单位关系．因此，我们可以选定几个物理量的单
-位作为\textbf{基本单位}，根据物理公式中其他物理量和这几个物理
+位作为\NoteBold{基本单位}，根据物理公式中其他物理量和这几个物理
 量的关系，推导出其他物理量的单位．例如选定位移的单位
 （米）和时间的单位（秒），利用公式$v=s/t$
 可以推导出速度的单
 位（$\UmsA$），再利用公式$a=(v_t-v_0)/t$可以推导出加速度的单位
 （$\UmsqA$）．如果再选定质量的单位（千克），利用公式$F=ma$
 就可以推导出力的单位（$\UkgA\cdot \UmsqA$即牛顿）．这些推导出
-来的单位叫做\textbf{导出单位}．基本单位和导出单位一起组成了\textbf{单
+来的单位叫做\NoteBold{导出单位}．基本单位和导出单位一起组成了\NoteBold{单
 位制}．
 
 在力学中，我们选定长度、质量和时间三个物理量的单位
@@ -574,7 +574,7 @@ v_t&=at=2.0\Umsq \times 5.0\Us=10\Ums
 \begin{enumerate}
 \item 在厘米$\cdot$克$\cdot$秒制中，力的单位达因是这样定义的：
 使质量是1克的物体产生1$\Ucmsq$的加速度的力，叫做1
-\textbf{达因}．试证明: $1\UN=10^5\Udyn$．
+\NoteBold{达因}．试证明: $1\UN=10^5\Udyn$．
 \item 有两个力，一个是100达因，一个是20牛，哪个力
 大？大的是小的的多少倍？
 \item 一个原来静止的物体，质量是600克，受到0.2牛的
@@ -883,7 +883,7 @@ T&=m\sqrt{a^2+g^2}\\
 上升时，物体对体重计的压力的大小也等于$G+ma$，体重计
 的读数也大于物体的重量．像这样，当物体存在向上的加速
 度时，它对支持物的压力（或对悬挂物的拉力）大于物体的重
-量的现象，叫做\textbf{超重现象}．
+量的现象，叫做\NoteBold{超重现象}．
 
     当挂着物体的弹簧秤加速下降时，加速度的方向向下（图~\ref{fig_A_3-13b}）．取向下的方向为正方向．对物体应用牛顿第二定
 律$F_{\text{合}}=G-T=ma$，得到
@@ -894,7 +894,7 @@ $G-ma$，这时表示物体对弹簧秤拉力的弹簧秤读数小于物体
 的重量$G$．同样，当升降机带着物体和体重计一起加速下降
 时，体重计的读数也小于物体的重量．像这样，当物体存在向
 下的加速度时，它对支持物的压力（或对悬挂物的拉力）小于
-物体的重量的现象，叫做\textbf{失重现象}．
+物体的重量的现象，叫做\NoteBold{失重现象}．
 
 \begin{figure}[htp]
     \centering
