--- a/1/A/04.tex
+++ b/1/A/04.tex
@@ -36,7 +36,7 @@
 的带有水的伞绕着伞柄旋转，也可以看到水滴是沿着伞边各
 点所画圆周的切线飞出的．
 
-从这些和类似的观察知道，\textit{曲线运动中速度的方向是时
+从这些和类似的观察知道，\NoteUnderWave{曲线运动中速度的方向是时
 刻改变的，质点在某一点（或某一时刻）的瞬时速度的方向在
 曲线的这一点的切线上}（图~\ref{fig_A_4-3}）．
 
@@ -49,7 +49,7 @@
 我们知道，速度是个矢量，既有大小，又有方向，不论速度
 的大小是否改变，只要速度的方向发生改变，就表示速度矢量
 发生了变化，也就是具有加速度．曲线运动中速度的方向时
-刻在改变，所以\textit{曲线运动是变速运动}．
+刻在改变，所以\NoteUnderWave{曲线运动是变速运动}．
 
 \subsection{物体做曲线运动的条件}
 
@@ -105,7 +105,7 @@
 例如，在上面轮船渡河的例子中，如果知道了轮船在静水中的速度$v_1$的大小和方向，
 以及河水流动的速度$v_2$的大小和方向，应用平行四边形法则，
 就可以求出轮船合运动的速度$v$（图~\ref{fig_A_4-6}）．
-这种已知分运动求合运动，叫做\textbf{运动的合成}．
+这种已知分运动求合运动，叫做\NoteBold{运动的合成}．
 
 \begin{figure}[htbp]
     \centering
@@ -126,7 +126,7 @@ v_y&=v\sin 30^{\circ}=150\Ukmh\\
     \caption{速度的分解}\label{fig_A_4-7}
 \end{figure}
 
-这种已知合运动求分运动，叫做\textbf{运动的分解}．
+这种已知合运动求分运动，叫做\NoteBold{运动的分解}．
 
 在图~\ref{fig_A_4-5} 轮船渡河的例子中，由于轮船在$AB$方向是匀速行驶的，河水在$AA'$方向是匀速流动的，轮船的两个分运动的速度矢量都是恒定的，轮船的合运动的速度矢量也是恒定的，所以合运动是匀速直线运动．但一般来说，两个直线运动的合运动，并不一定都是直线运动．在轮船渡河的例子中，如果轮船在$AB$方向是加速行驶的，河水在$AA'$方向的流动
 匀速的，那么轮船的合运动就不是直线运动，而是曲线运动了（图~\ref{fig_A_4-8}）．
@@ -151,7 +151,7 @@ v_y&=v\sin 30^{\circ}=150\Ukmh\\
 \section{平抛物体的运动}
 \subsection{平抛物体的运动} 
 
-将物体用一定的初速度沿水平方向抛出去，物体所做的运动叫做\textbf{平抛运动}．把桌上的小球打一下，使它有一个水平的初速度离开桌面，小球离开桌面后所做的曲线运动就是平抛运动．在平抛运动中，物体受到跟速度方向成角度的重力（不考虑空气阻力），所以做曲线运动．
+将物体用一定的初速度沿水平方向抛出去，物体所做的运动叫做\NoteBold{平抛运动}．把桌上的小球打一下，使它有一个水平的初速度离开桌面，小球离开桌面后所做的曲线运动就是平抛运动．在平抛运动中，物体受到跟速度方向成角度的重力（不考虑空气阻力），所以做曲线运动．
 
 \begin{figure}[htbp]
     \centering
@@ -249,7 +249,7 @@ x&=v_0\sqrt{\frac{2y}{g}}\\
 \section{斜抛物体的运动}
 \subsection{斜抛物体的运动} 
 
-将物体用一定的初速度向斜上方抛出去，物体所做的运动叫做\textbf{斜抛运动}．
+将物体用一定的初速度向斜上方抛出去，物体所做的运动叫做\NoteBold{斜抛运动}．
 投出的标枪和手榴弹，向斜上方射出的子弹和炮弹，它们的运动都是斜抛运动．
 在斜抛运动中，物体由于受到跟速度成角度的重力（不考虑空气阻力），所以做曲线运动．
 做斜抛运动的物体先是沿着曲线上升，升到一个最高点，然后再沿着曲线下降．
@@ -361,7 +361,7 @@ $\theta$的增大，$\sin 2\theta$增大，射程也增大，当$\theta=45^{\cir
 面我们主要研究匀速圆周运动．
 
     质点沿圆周运动，如果在相等的时间里通过的圆弧长度
-都相等，这种运动就叫做\textbf{匀速圆周运动}．砂轮上每一点的运
+都相等，这种运动就叫做\NoteBold{匀速圆周运动}．砂轮上每一点的运
 动，电子钟指针上每一点的运动，都可以看作匀速圆周运动．
 
     质点做匀速圆周运动的时候，它通过的弧长$\Delta s$跟所用
@@ -370,7 +370,7 @@ $\theta$的增大，$\sin 2\theta$增大，射程也增大，当$\theta=45^{\cir
 \[v=\frac{\Delta s}{\Delta t} \]
 可以看出，$v$的数值等于质点在单位时间内通过的弧长．
 
-    质点做匀速圆周运动时，运动一周所用的时间叫做\textbf{周期}．
+    质点做匀速圆周运动时，运动一周所用的时间叫做\NoteBold{周期}．
 如果质点沿半径为$r$的圆周做匀速圆周运动，周期是$T$，那么
 它的速度的大小可以根据下式求出：
 \begin{equation}\label{eq_A_4-1}
@@ -393,7 +393,7 @@ v=\frac{2\pi r}{T}
     在匀速圆周运动的情况下，在任何相等的时间里质点通
 过的圆弧长度都相等，连接质点和圆心的半径转过的角度也
 都相等．即半径转过的角度$\Delta \phi$跟所用的时间$\Delta t$之比是个
-定值．我们把这个比值叫做匀速圆周运动的\textbf{角速度}，角速度
+定值．我们把这个比值叫做匀速圆周运动的\NoteBold{角速度}，角速度
 的符号是$\omega$，写成公式就是
 \[\omega=\frac{\Delta \phi}{\Delta t}\]
 可以看出，角速度的数值等于在单位时间里半径转过的角度．
@@ -409,7 +409,7 @@ v=\frac{2\pi r}{T}
 \end{equation}
 
     研究匀速圆周运动时，为了跟角速度区别开，习惯上常常
-把前面讲过的匀速圆周运动的速度叫做\textbf{线速度}．在时间$\Delta t$
+把前面讲过的匀速圆周运动的速度叫做\NoteBold{线速度}．在时间$\Delta t$
 内，如果做匀速圆周运动的质点通过的弧长是$\Delta s$，半径$r$转
 过的角度是$\Delta \phi$（弧度），由于
 \[\Delta s=r\cdot \Delta \phi, \qquad v=\frac{\Delta s}{\Delta t}=r\frac{\Delta \phi}{\Delta t} \]
@@ -491,7 +491,7 @@ $\Delta v/\Delta t$的极限值
 \end{figure}
 
 
-在图~\ref{fig_A_4-18b} 所示的矢量三角形中，$v_A$和$v_B$的大小相等，当$\Delta t$趋近于零时，$\Delta \phi$也趋近于零，这时$\Delta v$便垂直于$v_A$．而$v_A$的方向是在圆周的切线上，所以$\Delta v$的方向是沿着半径指向圆心的．可见，\textbf{质点做匀速圆周运动时，它在任一点的加速度都是沿着半径指向圆心的}．因此，匀速圆周运动的加速度叫做\textbf{向心加速度}．向心加速度只改变速度的方向，不改变速度的大小．
+在图~\ref{fig_A_4-18b} 所示的矢量三角形中，$v_A$和$v_B$的大小相等，当$\Delta t$趋近于零时，$\Delta \phi$也趋近于零，这时$\Delta v$便垂直于$v_A$．而$v_A$的方向是在圆周的切线上，所以$\Delta v$的方向是沿着半径指向圆心的．可见，\NoteBold{质点做匀速圆周运动时，它在任一点的加速度都是沿着半径指向圆心的}．因此，匀速圆周运动的加速度叫做\NoteBold{向心加速度}．向心加速度只改变速度的方向，不改变速度的大小．
 
 \subsection{向心加速度的大小} 
 
@@ -512,7 +512,7 @@ $\Delta v/\Delta t$的极限值
 向心加速度的大小也可以用角速度和圆周半径来表示，根据$v=\omega r$的关系，上式可以改写成
 \[a_n=\omega^2 r \]
 
-在匀速圆周运动中，由于$r$、$v$和$\omega$是不变的，所以向心加速度的大小不变；但是向心加速度的方向却时刻在改变，在圆周上不同点处，向心加速度的方向不同，沿着该点的半径指向圆心．而加速度是既有大小又有方向的矢量，所以\textit{匀速圆周运动是一种变加速运动}．
+在匀速圆周运动中，由于$r$、$v$和$\omega$是不变的，所以向心加速度的大小不变；但是向心加速度的方向却时刻在改变，在圆周上不同点处，向心加速度的方向不同，沿着该点的半径指向圆心．而加速度是既有大小又有方向的矢量，所以\NoteUnderWave{匀速圆周运动是一种变加速运动}．
 
 向心加速度的公式$a_n=v^2/r$和$a_n=\omega^2 r$虽然是从匀速圆周运动推得的，但也适用于变速圆周运动，即线速度（或角速度）时刻改变的圆周运动．在变速圆周运动中，向心加速度的大小是随着线速度的变化（或角速度）而变化的．利用上面的公式求物体在圆周上某点向心加速度的大小时，必须用物
 体在该点的线速度（或角速度）的即时值．
@@ -544,7 +544,7 @@ $\Delta v/\Delta t$的极限值
 \[F=ma_n=m\omega^2 r \]
 
 我们知道，向心加速度的
-方向是指向圆心的，加速度的方向跟力的方向又总是一致的，所以使物体产生向心加速度的力的方向也一定是指向圆心的．因此，习惯上常把使物体产生向心加速度的力叫做\textbf{向心力}．
+方向是指向圆心的，加速度的方向跟力的方向又总是一致的，所以使物体产生向心加速度的力的方向也一定是指向圆心的．因此，习惯上常把使物体产生向心加速度的力叫做\NoteBold{向心力}．
 
 \begin{figure}[htbp]
     \centering
@@ -705,7 +705,7 @@ $F^{\prime}=0$，即外轨与轮缘不相互挤压．
 \end{figure}
 
 
-\textit{做匀速圆周运动的物体，在合外力突然消失或者合外力不足以提供所需的向心力时将做逐渐远离圆心的运动，这种运动叫做\textbf{离心运动}}．
+\NoteUnderWave{做匀速圆周运动的物体，在合外力突然消失或者合外力不足以提供所需的向心力时将做逐渐远离圆心的运动，这种运动叫做\NoteBold{离心运动}}．
 
 \subsection{离心机械}
 
