--- a/1/A/05.tex
+++ b/1/A/05.tex
@@ -24,15 +24,15 @@
 丹麦天文学家第谷（$1546 \sim 1601$）认为，要认识行星运动的规律，需要积累高度精确的观测数据．
 他连续二十年对行星的位置进行了精确的测量，积累了大量的数据．第谷逝世后，他的助手开普勒（$1571 \sim 1630$）仔细研究了第谷的观测资料，企图阐明行星运动的真实轨道，来发展和完善日心说．开普勒经过四年多的刻苦计算，先后否定了十九种设想，最后发现行星运行的真实轨道不是圆，而是椭圆，并于1609年发表了两条关于行星运动的定律：
 
-1. \textit{所有的行星分别在大小不同的椭圆轨道上围绕太阳
+1. \NoteUnderWave{所有的行星分别在大小不同的椭圆轨道上围绕太阳
 运动，太阳是在这些椭圆的一个焦点上．}
 
-这叫做\textbf{开普勒第一定律}．
+这叫做\NoteBold{开普勒第一定律}．
 
-2. 对每个行星来说，\textit{太阳和行星的连线在相等的时间内
+2. 对每个行星来说，\NoteUnderWave{太阳和行星的连线在相等的时间内
 扫过相等的面积．}
 
-这叫做\textbf{开普勒第二定律}．如图~\ref{fig_A_5-2} 所示，行星沿着椭圆
+这叫做\NoteBold{开普勒第二定律}．如图~\ref{fig_A_5-2} 所示，行星沿着椭圆
 轨道运行，太阳位于椭圆的一个焦点上．如果时间间隔相等，
 即$t_2-t_1=t_4-t_3$，那么面积$S_A=S_B$．由此可见，行星在
 近日点$a$的速率最大，在远日点$b$的速率最小．
@@ -44,9 +44,9 @@
 
 
 开普勒在发表了第一定律和第二定律后，进一步研究了	
-不同行星的运动之间的相互关系，在1619年又发表了行星运动的第三条定律，即\textbf{开普勒第三定律}：
+不同行星的运动之间的相互关系，在1619年又发表了行星运动的第三条定律，即\NoteBold{开普勒第三定律}：
 
-3. \textit{所有行星的椭圆轨道的半长轴的三次方跟公转周期
+3. \NoteUnderWave{所有行星的椭圆轨道的半长轴的三次方跟公转周期
 的平方的比值都相等．}
 
 
@@ -114,9 +114,9 @@
 他经过计算，证明月球围绕地球运动的向心加速度是地面上重力加速度的1/3600，而月心和地心间的距离是地球半径的60倍，这说明地球的引力是跟距离的平方成反比的，从而证实了重力与天体之间的引力的确是同一性质的力．
 
 上面的研究结果表明，太阳对行星的引力，行星对卫星的引力，以及地球对地面上物体的引力，都遵循同样的规律，是同一种性质的力．
-于是牛顿把这种引力规律做了合理的推广，在1687年正式发表了\textbf{万有引力定律}：
+于是牛顿把这种引力规律做了合理的推广，在1687年正式发表了\NoteBold{万有引力定律}：
 
-\textbf{任何两个物体都是相互吸引的，引力的大小跟两个物体的质量的乘积成正比，跟它们的距离的平方成反比．}
+\NoteBold{任何两个物体都是相互吸引的，引力的大小跟两个物体的质量的乘积成正比，跟它们的距离的平方成反比．}
 
 如果用$m_1$和$m_2$表示两个物体的质量，用$r$表示它们的距离，那么万有引力定律可以用下面的公式来表示：
 \[ F=G\frac{m_1m_2}{r^2}\]
@@ -127,7 +127,7 @@
 万有引力定律的发现，是人类在认识自然规律方面取得的一个重大成果．它揭示了自然界物体间普遍存在着的一种基本相互作用——引力作用的规律，它把地球上的力学推广到天体上去，创立了将天体运动和地面物体的运动统一起来的理论，对以后物理学和天文学的发展有很大的影响．万有引力定律的发现，对人类文化历史的发展也有重要的意义．在牛顿以前，人们认为天体的运动是神秘的，隐藏着不可认识的规律．牛顿的发现，使人们解放了思想，建立了信心，相信天地间的事物和支配宇宙的自然规律都是可以认识的．
 
 \section{万有引力常量的测定}
-万有引力定律公式中的比例常数$G$是适用于任何两个物体的普适恒量，叫做\textbf{万有引力常量}．
+万有引力定律公式中的比例常数$G$是适用于任何两个物体的普适恒量，叫做\NoteBold{万有引力常量}．
 
 牛顿发现了万有引力定律，但是没有给出引力常量$G$的数值．用实验测定$G$的大小是很不容易的，因为一般物体间的引力非常小，很难精确测定，所以在万有引力定律发现后的百余年间，一直没有测出引力常量的准确数值．
 有一些科学家，为了测出物体间的引力，曾利用山峰、海岛等质量大的物体做过实验，但都没有取得令人满意的结果．
@@ -222,7 +222,7 @@ M&= \frac{4\times 3.14^2\times (1.49\times 10^{11})^2}{6.67\times 10^{-11}\times
 地球对物体的引力，是万有引力的一种表现，如果用$M$表示地球的质量，用$R$表示地球的半径，用$m$表示物体的质量，根据万有引力定律，物体在地球表面上受到的地球引力是$F=G\frac{Mm}{R^2}$．物体的重量正是由这种引力产生的．
 
 但是物体的重量并不等于地球对物体的引力，这是因为地球在不停地自转，地球上的一切物体都随着地球自转而绕
-地轴做匀速圆周运动，这就需要向心力．这个向心力的方向是垂直指向地轴的，它的大小是$f=m\omega^2r$，式中的$r$是物体距地轴的距离，$\omega$是地球自转的角速度．这个向心力来自哪里？只能来自地球对物体的引力$F$，它是引力$F$的一个分力（图~\ref{fig_A_5-4}）．\textit{引力$F$的另一个分力才是物体的重量$mg$}．
+地轴做匀速圆周运动，这就需要向心力．这个向心力的方向是垂直指向地轴的，它的大小是$f=m\omega^2r$，式中的$r$是物体距地轴的距离，$\omega$是地球自转的角速度．这个向心力来自哪里？只能来自地球对物体的引力$F$，它是引力$F$的一个分力（图~\ref{fig_A_5-4}）．\NoteUnderWave{引力$F$的另一个分力才是物体的重量$mg$}．
 \begin{figure}[htbp]
 	\centering
 	\includegraphics{fig/A/5-4.pdf}
@@ -276,11 +276,11 @@ M&= \frac{4\times 3.14^2\times (1.49\times 10^{11})^2}{6.67\times 10^{-11}\times
 可以得到
 \[v=\sqrt{gR_{\text{地}}}\]
 将$g=0.0098 \Ukmsq$和$R_{\text{地}}=6400$千米代入上式，得到$v=7.9\Ukms$．
-这就是人造地球卫星在地面附近环绕地球做匀速圆周运动必须具有的速度，叫做\textbf{第一宇宙速度}，也叫\textbf{环绕速度}．
+这就是人造地球卫星在地面附近环绕地球做匀速圆周运动必须具有的速度，叫做\NoteBold{第一宇宙速度}，也叫\NoteBold{环绕速度}．
 
 如果人造地球卫星进入轨道的水平速度大于$7.9\Ukms$，而小于$11.2\Ukms$，它绕地球运动的轨迹就不是圆，而是椭圆（图~\ref{fig_A_5-6}）．当物体的速度等于或大于$11.2\Ukms$的
 时候，物体就可以挣脱地球引力的束缚，成为绕太阳运动的人造行星，或飞到其他行星上去．
-所以$11.2\Ukms$这个速度叫做\textbf{第二宇宙速度}，也叫\textbf{脱离速度}．
+所以$11.2\Ukms$这个速度叫做\NoteBold{第二宇宙速度}，也叫\NoteBold{脱离速度}．
 \begin{figure}[htbp]
 	\centering
 	\includegraphics{fig/A/5-6.pdf}
@@ -288,7 +288,7 @@ M&= \frac{4\times 3.14^2\times (1.49\times 10^{11})^2}{6.67\times 10^{-11}\times
 \end{figure}
 
 达到第二宇宙速度的物体还受着太阳引力的束缚，要想
-使物体挣脱太阳的束缚，飞到太阳系以外的宇宙空间去，必须使它的速度等于或大于$16.7\Ukms$，这个速度叫做\textbf{第三宇宙速度}，也叫\textbf{逃逸速度}．
+使物体挣脱太阳的束缚，飞到太阳系以外的宇宙空间去，必须使它的速度等于或大于$16.7\Ukms$，这个速度叫做\NoteBold{第三宇宙速度}，也叫\NoteBold{逃逸速度}．
 
 三个宇宙速度的值都很大，要得到这样大的速度需要利用多级火箭．
 
