--- a/1/A/06.tex
+++ b/1/A/06.tex
@@ -3,8 +3,8 @@
 
 我们知道，如果已知物体所受的力，根据牛顿第二定律就可以求出这个物体的加速度．
 然而知道受力物体在什么条件下不产生加速度，这个问题往往也很重要．我们知道，一个物体既可以做平动，也可以做转动．
-如果一个物体既不做平动，也不做转动，即保持静止，或者做匀速度直线运动或匀速转动，我们就说这个物体处于\textbf{平衡状态}．
-要使物体保持平衡状态，作用在物体上的力必须满足一定的条件，这个条件叫做\textbf{平衡条件}．
+如果一个物体既不做平动，也不做转动，即保持静止，或者做匀速度直线运动或匀速转动，我们就说这个物体处于\NoteBold{平衡状态}．
+要使物体保持平衡状态，作用在物体上的力必须满足一定的条件，这个条件叫做\NoteBold{平衡条件}．
 
 研究物体的平衡很有实际意义．
 工程技术上的很多物体，例如桥梁、起重机、建筑物等，都要保持平衡状态．
@@ -37,7 +37,7 @@
 
 用实验还可以证明，在三个以上共点力作用下物体的平衡条件也是合力等于零．
 
-因此，我们得到结论：\textbf{在共点力作用下物体的平衡条件是合力等于零}．如果用$F_{\text{合}}$表示合力，这个平衡条件可以写成
+因此，我们得到结论：\NoteBold{在共点力作用下物体的平衡条件是合力等于零}．如果用$F_{\text{合}}$表示合力，这个平衡条件可以写成
 \[F_{\text{合}}=0\] 
 
 这个结论其实可以从牛顿第二定律推导出来．从牛顿第二定律的公式$F_{\text{合}}=ma$知道，只有$F_{\text{合}}=0$，加速度$a$才等于零，物体才能保持平衡状态．
@@ -83,7 +83,7 @@
 \section{力对物体的转动作用}
 \subsection{转动}
 
-转动是一种常见的运动．物体在转动的时候，它的各点都做圆周运动，这些圆周的中心在同一直线上，这条直线叫做\textbf{转动轴}．
+转动是一种常见的运动．物体在转动的时候，它的各点都做圆周运动，这些圆周的中心在同一直线上，这条直线叫做\NoteBold{转动轴}．
 \begin{figure}[htbp]
     \centering
     \includegraphics{fig/A/6-6.pdf}
@@ -113,10 +113,10 @@
     \caption{作用在杠杆上的力和它们的力臂}\label{fig_A_6-7}
 \end{figure}
 
-力和转动轴之间的距离，也就是从转动轴到力的作用线的垂直距离，叫做\textbf{力臂}．
+力和转动轴之间的距离，也就是从转动轴到力的作用线的垂直距离，叫做\NoteBold{力臂}．
 图~\ref{fig_A_6-7} 表示有两个力$F_1$和$F_2$作用
 在杠杆上，杠杆的转动轴垂直于纸面，$L_1$是力$F_1$的力臂，$L_2$是力$F_2$的力臂．
-力和力臂的乘积叫做力对转动轴的\textbf{力矩}．
+力和力臂的乘积叫做力对转动轴的\NoteBold{力矩}．
 如果用$F$表示力，用$L$表示力臂，用$M$表示力矩，那么
 \[M=FL\]
 
@@ -154,7 +154,7 @@
 
 改变力和力臂，再做这个实验，可以得到同样的结果．在有固定转动轴的物体上，如果所有向时针方向转动的力矩之和等于所有向反时针方向转动的力矩之和，或者考虑到力矩的正负，所有力短的代数和为零，那么，物体将处于平衡状态．
 
-结论：\textbf{有固定转动轴的物体的平衡条件是力矩的代数和等于零}，即
+结论：\NoteBold{有固定转动轴的物体的平衡条件是力矩的代数和等于零}，即
 \[M_1+M_2+M_3\cdots=0 \]
 或者
 \[M_{\text{合}}=0\]
@@ -207,7 +207,7 @@
 \end{figure}
 
 
-两个大小相等方向相反而不在同一直线上的力，叫做\textbf{力偶}．\textit{力偶的作用是使物体只发生转动}．在实际上常常利用力偶来使物体转动．用两手转动汽车的方向盘（图~\ref{fig_A_6-13}），用两手转动套筒（图~\ref{fig_A_6-14}），拿钥匙开锁，用螺丝刀拧螺丝钉，都是常见的例子．
+两个大小相等方向相反而不在同一直线上的力，叫做\NoteBold{力偶}．\NoteUnderWave{力偶的作用是使物体只发生转动}．在实际上常常利用力偶来使物体转动．用两手转动汽车的方向盘（图~\ref{fig_A_6-13}），用两手转动套筒（图~\ref{fig_A_6-14}），拿钥匙开锁，用螺丝刀拧螺丝钉，都是常见的例子．
 \begin{figure}[htbp]
     \centering
     \begin{minipage}[t]{0.48\textwidth}
@@ -239,7 +239,7 @@
 
 我们知道，力对物体的转动作用决定于力矩．所以力偶的转动作用决定于它的两个力的力矩的代数和．
 从图~\ref{fig_A_6-15} 可以知道，力偶的两个力对任一点$O$的力矩的代数和是$M=FL+F(d-L)=Fd$．其中$d$是力偶的两个力之间的垂直
-距离，叫做\textbf{力偶臂}．力偶的一个力和力偶臂的乘积$Fd$叫做\textbf{力偶矩}．从上面的讨论知道，力偶的转动作用决定于力偶矩．
+距离，叫做\NoteBold{力偶臂}．力偶的一个力和力偶臂的乘积$Fd$叫做\NoteBold{力偶矩}．从上面的讨论知道，力偶的转动作用决定于力偶矩．
 
 跟力矩一样，力偶矩可以使物体向不同的方向转动．一般也是规定使物体向反时针方向转动的力偶矩是正的，使物体向顺时针方向转动的力偶矩是负的．图~\ref{fig_A_6-15} 中的力偶矩是正的．
 
@@ -274,11 +274,11 @@
 我们研究平衡是否稳定，就是要看平衡遭到破坏之后，物体是否能够回到原来的平衡位置．
 放在凹面底部的小球稍微偏离平衡位置之后，小球的重心升高，重力和支持力不再保持平衡，重力的作用是使小球回到平衡
 位置，恢复平衡．
-从图~\ref{fig_A_6-16} 看出，这时重力和支持力的合力是指向平衡位置的，这种平衡叫做\textbf{稳定平衡}．
+从图~\ref{fig_A_6-16} 看出，这时重力和支持力的合力是指向平衡位置的，这种平衡叫做\NoteBold{稳定平衡}．
 放在凸面顶部的小球稍微偏离平衡位置之后，小球的重心降低，重力和支持力也不再保持平衡，重力的作用是使小球继续远离原来的位置而不能恢复平衡．
-从图~\ref{fig_A_6-16} 看出，这时重心和支持力的合力是指向远离平衡位置的方向的，这种平衡其实很难实现，叫做\textbf{不稳平衡}．
+从图~\ref{fig_A_6-16} 看出，这时重心和支持力的合力是指向远离平衡位置的方向的，这种平衡其实很难实现，叫做\NoteBold{不稳平衡}．
 平面上的小球偏离原来的位置之后，重心的高度不变，重力和支持力依然保持平衡，也就是说，小球在平面的任何位置都能平衡．
-这种平衡叫做\textbf{随遇平衡}．
+这种平衡叫做\NoteBold{随遇平衡}．
 
 上面讨论了有支点的物体的平衡，这对有支轴的物体的平衡也是正确的．图~\ref{fig_A_6-17} 表示有支轴的物体的三种平衡情况．在这三种情况中重力的作用线都通过支轴，力矩为零，物体都处于平衡位置．在第一种情形里，物体的重心在支轴的正下方，物体稍微偏离平衡位置之后，重心升高，重力的力矩将使物体回到原来的位置，恢复平衡，因而属于稳定平衡．在第二种情形里，物体的重心在支轴的正上方，稍微偏离平衡位置之后，重心降低，重力的力矩将使物体继续远离原来的位置而不能恢复平衡，这种平衡也很难实现，属于不稳平衡．在第三种情形里，物体的重心就在支轴上，物体偏离原来的位置
 之后，重心的高度不变，重力的力矩仍旧为零，物体在任何位置都能平衡，因而属于随遇平衡．
@@ -314,7 +314,7 @@
 平放的砖和竖放的砖都处于稳定平衡，它们是不是还有什么区别呢？区别在于它们稳定程度不同．
 竖放的砖容易使它的重力作用线超出支面，容易倾倒，稳定程度较小；平放的砖不容易使它的重力作用线超出支面，不容易倾倒，稳定程度较大．
 
-稳定程度的大小通常用\textbf{稳度}来表示．稳度的大小跟物体重心的高低和支面的大小都有关系．
+稳定程度的大小通常用\NoteBold{稳度}来表示．稳度的大小跟物体重心的高低和支面的大小都有关系．
 \begin{figure}[htbp]
 	\centering
 	\includegraphics{fig/A/6-19.pdf}
