--- a/1/A/08.tex
+++ b/1/A/08.tex
@@ -10,12 +10,12 @@
 $v=at=Ft/m$．由此得到
 \[Ft=mv\]
 
-可见，要使原来静止的某物体获得某一速度，可以有不同的方法，既可以用较大的力作用较短的时间，也可以用较小的力作用较长的时间；只要力和力的作用时间的乘积$Ft$相同，这个物体总得到相同的速度．这就是说，对一定质量的物体，力所产生的改变物体速度的效果，是由$Ft$这个物理量决定的，在物理学中，\textit{力和力的作用时间的乘积$Ft$叫做力的\textbf{冲量}}．
+可见，要使原来静止的某物体获得某一速度，可以有不同的方法，既可以用较大的力作用较短的时间，也可以用较小的力作用较长的时间；只要力和力的作用时间的乘积$Ft$相同，这个物体总得到相同的速度．这就是说，对一定质量的物体，力所产生的改变物体速度的效果，是由$Ft$这个物理量决定的，在物理学中，\NoteUnderWave{力和力的作用时间的乘积$Ft$叫做力的\NoteBold{冲量}}．
 
 冲量是个矢量，它的方向由力的方向决定．如果在作用时
 间内力的方向不变，冲量的方向就是力的方向．冲量的单位由力和时间的单位决定，在国际单位制里，冲量的单位是$\UNsA$．
 
-从上式还可以看出，原来静止的不同的物体，在相同冲量的作用下，它们得到的速度不同，质量大的物体得到的速度小，质量小的物体得到的速度大，但是它们的质量和速度的乘积$mv$却是相同的，都等于它们受到的冲量．在物理学中，\textit{质量和速度的乘积$mv$叫做\textbf{动量}}．
+从上式还可以看出，原来静止的不同的物体，在相同冲量的作用下，它们得到的速度不同，质量大的物体得到的速度小，质量小的物体得到的速度大，但是它们的质量和速度的乘积$mv$却是相同的，都等于它们受到的冲量．在物理学中，\NoteUnderWave{质量和速度的乘积$mv$叫做\NoteBold{动量}}．
 
 动量常用符号$p$表示．
 动量也是矢量，它的方向就是速度的方向．在国际单位制中，动量的单位是$\UkgmsA$．
@@ -59,7 +59,7 @@ $v=at=Ft/m$．由此得到
 \[Ft=mat=mv'-mv\]
 由于变化前的动量$p=mv$，变化后的动量$p'=mv'$，所以上式可以改写成
 \[Ft=p'-p\]
-这就是说，\textbf{物体所受合外力的冲量等于它的动量的变化}．这个结论叫做\textbf{动量定理}．
+这就是说，\NoteBold{物体所受合外力的冲量等于它的动量的变化}．这个结论叫做\NoteBold{动量定理}．
 
 从动量定理可以知道，如果一个物体的动量的变化是一定的，那么，它受力作用的时间越短，这个力就越大，力作用的时间越长，这个力就越小．利用这个道理可以解释为什么茶杯掉在石头上立即摔碎，掉在软的东西上不易摔碎．茶杯碰到物体以前，以一定的速度运动着，动量为$mv$，碰到物体后，停止运动，动量变为0．在这个过程中，茶杯动量的变化是$-mv$，这个值等于茶杯受到的作用力的冲量．掉在石头上，
 茶杯从运动到停止经历的时间短，受到的石头的作用力大，因此碎掉．掉在软的东西上，茶杯从运动到停止经历的时间长，
@@ -170,7 +170,7 @@ $v=at=Ft/m$．由此得到
 闪光照相的快慢这次是每秒7.5次，用前述方法，我们可以知道原来大滑块的速度是0.71$\Ums$，两个滑块粘合后它们的共同速度是0.43$\Ums$．
 因此，大滑块失去的向左的动量是0.084$\Ukgms$，小滑块获得的向左的动量是0.086$\Ukgms$．在实验误差范围内，它们的动量变化也是大小相等、方向相反的．
 
-上述实验还是属于比较特殊的情况：物体在碰撞前后都在同一直线上运动，这种碰撞叫做\textbf{正碰}．
+上述实验还是属于比较特殊的情况：物体在碰撞前后都在同一直线上运动，这种碰撞叫做\NoteBold{正碰}．
 当发生斜碰时，也就是碰撞前后物体不在同一直线上运动时，用实验同样可以证明：碰撞物体的动量的变化也是大小相等、方向相反的．这类实验分析起来比较复杂，这里就不讲了．
 
 \section{动量守恒定律}\label{sec-A-08-law-of-conservation-of-momentum}
@@ -180,12 +180,12 @@ $v=at=Ft/m$．由此得到
 上述的结论还可以换一个说法．我们把相互作用的物体的动量的矢量和叫做它们的总动量，由于相互作用的物体的动量的变化总是大小相等，方向相反，所以动量的变化为零，因此物体相互作用前的总动量保持不变，这就是动量守恒．
 
 我们还应该把动量守恒的条件仔细讨论一下．
-在相互作用的物体构成的系统里，每个物体，既可以受到来自系统内其他物体的力，也可能受到来自系统外其他物体的力，前者叫做\textbf{内力}，后者叫做\textbf{外力}．
+在相互作用的物体构成的系统里，每个物体，既可以受到来自系统内其他物体的力，也可能受到来自系统外其他物体的力，前者叫做\NoteBold{内力}，后者叫做\NoteBold{外力}．
 以图~\ref{fig_A_8-3} 的滑块为例，每个滑块除了受
 到相互作用的内力以外，都还受到向下的重力和向上的支持力，重力和支持力作用在同一滑块上，大小相等，方向相反，合力为零．对图~\ref{fig_A_8-5} 中的系统进行同样的分析，也可以看到系统中的物体受到的外力的合力为零．
 外力的合力为零或者整个系统根本不受到外力，就是动量守恒的条件．
 
-由此得出结论：\textbf{系统不受外力或所受外力的合力为零，这个系统的动量就保持不变}．这个结论叫做\textbf{动量守恒定律}．
+由此得出结论：\NoteBold{系统不受外力或所受外力的合力为零，这个系统的动量就保持不变}．这个结论叫做\NoteBold{动量守恒定律}．
 
 对于在一条直线上运动的两个物体组成的系统，动量守恒定律的一般表达式为
 \[m_1v_1+m_2v_2=m_1v'_1+m_2v'_2 \]
@@ -308,9 +308,9 @@ F_{21}&=m_2a_2=m_2\frac{v'_2-v_2}{t}=\frac{p'_2-p_2}{t}
 所以，并非所有的碰撞动能都守恒．有的碰撞动能守恒，
 有的碰撞动能不守恒．
 正如惠更斯指出的那样，只有在碰撞后物体不发生永久形变、不裂成碎块、不粘在一起、不发热以及不发生其他内部变化的情况下，动能才是守恒的．
-我们把这种动量和动能同时守恒的碰撞叫做\textbf{弹性碰撞}．
+我们把这种动量和动能同时守恒的碰撞叫做\NoteBold{弹性碰撞}．
 
-大多数的碰撞，动能都不守恒，都要有一部分动能转化成其他形式的能，这样的碰撞叫做\textbf{非弹性碰撞}．在非弹性碰撞中，如果物体在相碰后粘合在一起，这时动能的损失最大，这种碰撞叫做\textbf{完全非弹性碰撞}．
+大多数的碰撞，动能都不守恒，都要有一部分动能转化成其他形式的能，这样的碰撞叫做\NoteBold{非弹性碰撞}．在非弹性碰撞中，如果物体在相碰后粘合在一起，这时动能的损失最大，这种碰撞叫做\NoteBold{完全非弹性碰撞}．
 
 钢球、玻璃球、硬木球等坚硬物体之间的碰撞，其实也并
 不是完全的弹性碰撞，在碰撞时动能也是有损失的，只是在通常情况下，动能的损失很小，不到百分之三、四，因此我们可以把它们当成弹性碰撞来处理．真正的弹性碰撞，只有在分子、原子以及更小的粒子之间才会遇到．
@@ -375,7 +375,7 @@ F_{21}&=m_2a_2=m_2\frac{v'_2-v_2}{t}=\frac{p'_2-p_2}{t}
 打炮的时候，炮弹从炮筒中飞出，炮身就向后退．这个现象可以用动量守恒定律来说明．
 射击前，炮弹静止在炮筒里，它们的总动量为零，炮弹射出后以很大的速度向前运动，炮弹具有了动量，但是根据动量守恒定律，炮弹和炮筒的动量之和还应该等于零，因此炮身得到与炮弹的动量大小相等、方向相反的动量．
 只是由于炮身的质量比炮弹的大得多，所以炮身向后运动的速度很小．
-炮身的这种后退运动叫做\textbf{反冲运动}．
+炮身的这种后退运动叫做\NoteBold{反冲运动}．
 炮身的反冲运动是不利的，为了使大炮回到原来的位置并重新瞄准，要花不少时间，这就降低了射击速度．现代的大炮都安装了使大炮在发射后自动迅速复位的装置．
 此外，人们还发明了无后座力炮，这种炮在发射时火药气从炮身后面的开口喷出，炮身不受火药气的向后的压力，因此发射时不后退．
 
