--- a/1/A/09.tex
+++ b/1/A/09.tex
@@ -14,7 +14,7 @@
 
 \subsubsection{产生振动的条件} 
 
-\textit{物体（或者物体的一部分）在平衡位置附近来回做往复运动，叫做\textbf{机械振动}}，常常简称为振动．挂在弹簧下端的重物的上下振动（图~\ref{fig_A_9-1}），单摆的小球的左右摆动，是振动的典型例子．
+\NoteUnderWave{物体（或者物体的一部分）在平衡位置附近来回做往复运动，叫做\NoteBold{机械振动}}，常常简称为振动．挂在弹簧下端的重物的上下振动（图~\ref{fig_A_9-1}），单摆的小球的左右摆动，是振动的典型例子．
 
 \begin{figure}[htbp]
 	\centering
@@ -27,9 +27,9 @@
 把单摆的小球拉开再放手，小球就在平衡位置附近左右振动，经过多次重复，最后停在平衡位置．击一下鼓或敲一下锣，鼓膜或锣面就在平衡位置附近做起伏振动，经过多次重复，最后停在平衡位置．
 
 为什么物体会做这样的运动呢？从地面竖直上抛的物体能返回地面，是因为受到指向地面的力的作用．与此类似，物体所以能在平衡位置附近做往复运动而不远离，并经多次重复以后还停在平衡位置，是因为受到指向平衡位置的力的作用．
-使振动物体回到平衡位置的力叫做\textbf{回复力}．
+使振动物体回到平衡位置的力叫做\NoteBold{回复力}．
 
-\textit{每当物体离开平衡位置就会受到回复力的作用，这是产
+\NoteUnderWave{每当物体离开平衡位置就会受到回复力的作用，这是产
 生振动的第一个必要条件}．
 应该注意，回复力也是根据力的效果命名的，它可能是弹力，可能是重力，还可能是它们的合力或分力．
 后面将讲到回复力的实例．
@@ -37,7 +37,7 @@
 同一个单摆，在空气里，由于阻力很小，衰减很慢，可以重复摆动许多次才停下．在水里，阻力相当大，衰减很快，摆不了几次就停下．
 在很粘的油里，阻力很大，离开平衡位置的摆球虽然还能缓慢地回到平衡位置，但是到达平衡位置时的速度
 实际等于零，所以不会产生振动．
-可见，\textit{产生振动的第二个必要条件是阻力足够小}．
+可见，\NoteUnderWave{产生振动的第二个必要条件是阻力足够小}．
 
 \subsubsection{表征振动的物理量}
 
@@ -46,7 +46,7 @@
 但是振动有它自己的特点，需要引入新的物理量来表示这种特点．
 至于怎样确定振动物体在任一时刻的位置和速度，因为计算比较复杂，本书就不讲了．
 
-振动是一种往复运动，振动物体的位移不像匀速或变速直线运动那样可以继续增大下去，而是有一个最大位移，否则就不成其为振动了．\textit{振动物体离开平衡位置的最大距离叫做\textbf{振幅}}．图~\ref{fig_A_9-1} 中振动的振幅就等于$OB$或$OC$．振幅是表示振动幅度的大小或振动强弱的物理量．
+振动是一种往复运动，振动物体的位移不像匀速或变速直线运动那样可以继续增大下去，而是有一个最大位移，否则就不成其为振动了．\NoteUnderWave{振动物体离开平衡位置的最大距离叫做\NoteBold{振幅}}．图~\ref{fig_A_9-1} 中振动的振幅就等于$OB$或$OC$．振幅是表示振动幅度的大小或振动强弱的物理量．
 
 
 
@@ -54,12 +54,12 @@
 振动的最大特点是重复性，或者说周期性．
 所谓周期性，就是振动物体的位移和速度经过一定时间之后又重复地回到原来的数值．例如在图~\ref{fig_A_9-1} 中，振动物体由$B$点经过$O$到达$C$点，再经过$O$回到$B$点，即完成一次全振动，位移和速度就
 重复地回到原来的数值．
-\textit{完成一次全振动经过的时间叫做\textbf{周期}}．
+\NoteUnderWave{完成一次全振动经过的时间叫做\NoteBold{周期}}．
 周期是表示振动快慢的物理量．
 
 振动的快慢也可以用频率来表示．
-\textit{在1秒内完成全振动的次数叫做\textbf{频率}}．
-频率的单位是\textbf{赫兹}，简称赫，国际符号是Hz．
+\NoteUnderWave{在1秒内完成全振动的次数叫做\NoteBold{频率}}．
+频率的单位是\NoteBold{赫兹}，简称赫，国际符号是Hz．
 1秒钟振动1次就是1赫．1秒钟振动$n$次就是$n$赫．
 
 如果用$T$（秒）表示周期，用$f$（赫）表示频率，那么
@@ -111,17 +111,17 @@
 \[F=-kx\]
 式中$k$是比例常数，对于弹簧振子来说，就等于弹簧的劲度系数．式中的负号表示回复力的方向跟位移的方向相反．
 
-这种\textit{在跟对平衡位置的位移成正比而方向相反的回复力
-作用下的振动，叫做\textbf{简谐振动}}．
+这种\NoteUnderWave{在跟对平衡位置的位移成正比而方向相反的回复力
+作用下的振动，叫做\NoteBold{简谐振动}}．
 
 用$m$代表振子的质量，用$a$代表振子的加速度，根据牛顿
 第二定律$F=ma$ 可以得到
 \[a=-\frac{k}{m}x\]
 
-上式表明，在简谐振动中，加速度也跟位移成正比而方向相反．在图~\ref{fig_A_9-2} 里，当振子从$O$向右运动时，加速度的方向向左，并且随着位移增大而增大，即振子做\textit{变减速}运动．
-到速度减小到零时，振子运动到右端最大位移处$B$，加速度也增大到最大值．振子从$B$向$O$运动的过程中，加速度的方向仍向左，并且随位移的减小而减小，即振子做初速度为零的\textit{变加速}运动．当振子回到$O$点时，位移减小到零，加速度也减小到零，而速度增大到最大值，方向向左．由于惯性，振子就以这个速度继续向左运动，在越过$O$点以后，加速度的方向向右，
-并且随位移的增大而增大，振子做\textit{变减速}运动．
-到速度减小到零时，振子运动到左端最大位移处$C$，加速度也增大到最大值．然后振子从$C$向右运动，加速度的方向仍向右，并且随位移的减小而减小，即振子做初速度为零的\textit{变加速}运动．当振子回到$O$点时，位移、加速度都减小到零，而速度增大到最大值，方向向右．此后将重复上述的过程．
+上式表明，在简谐振动中，加速度也跟位移成正比而方向相反．在图~\ref{fig_A_9-2} 里，当振子从$O$向右运动时，加速度的方向向左，并且随着位移增大而增大，即振子做\NoteUnderWave{变减速}运动．
+到速度减小到零时，振子运动到右端最大位移处$B$，加速度也增大到最大值．振子从$B$向$O$运动的过程中，加速度的方向仍向左，并且随位移的减小而减小，即振子做初速度为零的\NoteUnderWave{变加速}运动．当振子回到$O$点时，位移减小到零，加速度也减小到零，而速度增大到最大值，方向向左．由于惯性，振子就以这个速度继续向左运动，在越过$O$点以后，加速度的方向向右，
+并且随位移的增大而增大，振子做\NoteUnderWave{变减速}运动．
+到速度减小到零时，振子运动到左端最大位移处$C$，加速度也增大到最大值．然后振子从$C$向右运动，加速度的方向仍向右，并且随位移的减小而减小，即振子做初速度为零的\NoteUnderWave{变加速}运动．当振子回到$O$点时，位移、加速度都减小到零，而速度增大到最大值，方向向右．此后将重复上述的过程．
 
 值得注意的是，在简谐振动中速度与加速度的变化不一样，加速度最大时速度等于零，加速度等于零时速度最大．
 
@@ -132,11 +132,11 @@
 
 计算表明，弹簧振子的周期由下式确定：
 \[T=2\pi\sqrt{\frac{m}{k}} \]
-可见，\textit{弹簧振子的周期跟质量的平方根成正比，跟弹簧的劲度系数的平方根成反比，而跟振幅无关}．
+可见，\NoteUnderWave{弹簧振子的周期跟质量的平方根成正比，跟弹簧的劲度系数的平方根成反比，而跟振幅无关}．
 
 上式对其他简谐振动也适用，只是对其他简谐振动，$k$的含义不同了．下一节讲到单摆就可以看出这一点．因此上式就是简谐振动的周期公式．
 
-由周期公式知道，对于一个确定的简谐振动系统来说，$m$和$k$都是恒量，所以$T$也是恒量，只由系统本身的特性决定，叫做系统的\textbf{固有周期}．因为$f=1/T$，所以$f$也只由系统本身的特性决定，叫做系统的\textbf{固有频率}．值得注意的是固有周期和固有频率都跟振幅没有关系．
+由周期公式知道，对于一个确定的简谐振动系统来说，$m$和$k$都是恒量，所以$T$也是恒量，只由系统本身的特性决定，叫做系统的\NoteBold{固有周期}．因为$f=1/T$，所以$f$也只由系统本身的特性决定，叫做系统的\NoteBold{固有频率}．值得注意的是固有周期和固有频率都跟振幅没有关系．
 	
 \subsection*{练习二}
 
@@ -186,7 +186,7 @@
 可以用一个常数$k$来代替，所以上式可以写成
 \[F=-kx\]
 
-可见，\textit{在摆角很小的情况下，单摆振动时回复力跟位移成正比而方向相反，是做简谐振动}．
+可见，\NoteUnderWave{在摆角很小的情况下，单摆振动时回复力跟位移成正比而方向相反，是做简谐振动}．
 
 \subsubsection{单摆的周期公式}
 
@@ -194,7 +194,7 @@
 可以得到
 \[T=2\pi\sqrt{\frac{\ell}{g}}\]
 
-这就是单摆的周期公式，它表明\textit{在摆角很小的情况下\footnote{根据周期公式算出的$T$值与实际测定值间的误差，随摆角增大而增大，摆角为7$^\circ$时，误差为0.1\%；15$^\circ$时，0.5\%；28$^\circ$时，1\%．单摆最大摆角一般应小于5$^\circ$.}，单摆的周期跟摆长的平方根成正比，跟重力加速度的平方根成反比，而跟摆锤的质量、振幅无关}．
+这就是单摆的周期公式，它表明\NoteUnderWave{在摆角很小的情况下}\footnote{根据周期公式算出的$T$值与实际测定值间的误差，随摆角增大而增大，摆角为7$^\circ$时，误差为0.1\%；15$^\circ$时，0.5\%；28$^\circ$时，1\%．单摆最大摆角一般应小于5$^\circ$.}，\NoteUnderWave{单摆的周期跟摆长的平方根成正比，跟重力加速度的平方根成反比，而跟摆锤的质量、振幅无关}．
 
 在一定的地点，$g$的值一定，一定摆长的单摆就有恒定不变的周期．摆的这个性质被利用在摆钟上计量时间．相反，如果测出摆长$\ell$和周期$T$，也可以利用单摆的周期公式确定$g$的值．由于单摆的摆长$\ell$和周期$T$都容易测量，所以利用单摆可以很方便地测定重力加速度$g$的值，不像利用自由落体运动测$g$那样麻烦．
 
@@ -211,7 +211,7 @@
 拿两个摆长相等的单摆来，把它们的摆锤移到平衡位置的一侧，先后放开手让它们振动起来．这两个摆的摆长相等，振动频率是相同的．振幅可以不同．振幅即使相同，也可以看出它们振动的区别来．它们的振动步调不一致，它们不是同时通过平衡位置，也不是同时运动到同一侧的最大位移．这时我们说这两个摆的相是不同的．
 相，又叫做相位、位相或周相．
 
-两个频率相同的简谐振动，如果它们的振动步调一致，我们就说它们的相是相同的，简称为\textbf{同相}．在这种情况下，它们总是同时向同一方向运动，同时经过平衡位置，同时运动到同一侧的最大位移．两个摆长相等的单摆，把它们的摆锤移到
+两个频率相同的简谐振动，如果它们的振动步调一致，我们就说它们的相是相同的，简称为\NoteBold{同相}．在这种情况下，它们总是同时向同一方向运动，同时经过平衡位置，同时运动到同一侧的最大位移．两个摆长相等的单摆，把它们的摆锤移到
 平衡位置的同一侧，同时放开手让它们开始振动，它们的振动就是同相的（图~\ref{fig_A_9-4}）．
 \begin{figure}[htbp]
     \centering
@@ -221,7 +221,7 @@
 
 
 多数情况下，两个简谐振动的步调并不一致，即它们的相
-不同，或者说它们存在着\textbf{相差}．其中有一种特殊情形，即振动步调正好相反，这种情形叫做\textbf{反相}．两个摆长相等的单摆，一个从平衡位置右侧，另一个从平衡位置左侧同时被释放，它们
+不同，或者说它们存在着\NoteBold{相差}．其中有一种特殊情形，即振动步调正好相反，这种情形叫做\NoteBold{反相}．两个摆长相等的单摆，一个从平衡位置右侧，另一个从平衡位置左侧同时被释放，它们
 的振动步调就正好相反（图~\ref{fig_A_9-5}）．它们的运动方向总是相反的；一个从右向左经过平衡位置的时候，另一个正好从左向右经过平衡位置；一个到达左侧最大位移的时候，另一个正好到达右侧的最大位移等等．
 \begin{figure}[htbp]
     \centering
@@ -320,7 +320,7 @@
 
 简谐振动是一种理想化的振动，一旦供给振动系统一定的能量来使它开始振动，由于机械能守恒，它就要以一定的振幅永不停息地振动下去．可是实际上振动系统不可避免地要受到摩擦和其他阻力，即受到阻尼的作用．
 振动系统克服阻尼作用做功，系统的机械能就要损耗．
-这样，机械能随着时间逐渐减少，振动的振幅也逐渐减小．待到机械能耗尽之时，振动就停下来了．这种振幅逐渐减小的振动叫做\textbf{阻尼振动}．图~\ref{fig_A_9-11} 是阻尼振动的图像．
+这样，机械能随着时间逐渐减少，振动的振幅也逐渐减小．待到机械能耗尽之时，振动就停下来了．这种振幅逐渐减小的振动叫做\NoteBold{阻尼振动}．图~\ref{fig_A_9-11} 是阻尼振动的图像．
 
 \begin{figure}[htbp]
     \centering
@@ -349,18 +349,18 @@
 
 \subsubsection{受迫振动}
 
-像弹簧振子和单摆那样，在外力使它们偏离平衡位置后，它们就在系统内部的弹力或重力作用下振动起来，而不再需要其他外力推动，这种振动叫做\textbf{自由振动}．由于阻力不可避免，实际的自由振动必然是阻尼振动，最终要停下来．
+像弹簧振子和单摆那样，在外力使它们偏离平衡位置后，它们就在系统内部的弹力或重力作用下振动起来，而不再需要其他外力推动，这种振动叫做\NoteBold{自由振动}．由于阻力不可避免，实际的自由振动必然是阻尼振动，最终要停下来．
 怎样才能得到持续的周期性振动呢？
 
 得到持续的周期性振动的最简单的方法，是用周期性外力作用于振动物体．
-物体在周期性外力作用下的振动叫做\textbf{受迫振动}．
+物体在周期性外力作用下的振动叫做\NoteBold{受迫振动}．
 \begin{figure}[htbp]
     \centering
     \includegraphics{fig/A/9-12.pdf}
     \caption{受迫振动}\label{fig_A_9-12}
 \end{figure}
 
-受迫振动的频率跟什么有关系呢？我们用图~\ref{fig_A_9-12} 所示的装置来研究这个问题．匀速地转动把手，把手就给弹簧振子以周期性的策动力，使振子做受迫振动．这个策动力的周期跟把手转动的周期是相同的．用不同的转速匀速转动把手，可以看到，振子做受迫振动的周期总等于策动力的周期．所以，\textit{物体做受迫振动的频率等于策动力的频率，而跟物体的固有频率没有关系}．
+受迫振动的频率跟什么有关系呢？我们用图~\ref{fig_A_9-12} 所示的装置来研究这个问题．匀速地转动把手，把手就给弹簧振子以周期性的策动力，使振子做受迫振动．这个策动力的周期跟把手转动的周期是相同的．用不同的转速匀速转动把手，可以看到，振子做受迫振动的周期总等于策动力的周期．所以，\NoteUnderWave{物体做受迫振动的频率等于策动力的频率，而跟物体的固有频率没有关系}．
 
 利用受迫振动来得到持续的周期性振动的例子是非常多
 的．例如缝纫机针持续地上下振动，空气压缩机活塞持续地往
@@ -390,7 +390,7 @@
 
 图~\ref{fig_A_9-14} 的曲线表示出了受迫振动的振幅$A$跟策动力频率$f$的关系：策动力的频率$f$等于振动物体的固有频率$f_{\text{固}}$时振幅最大；策动力的频率跟固有频率相差越大，振幅越小．
 
-\textit{当策动力的频率跟物体的固有频率相等的时候，受迫振动的振幅最大，这种现象叫做\textbf{共振}．}
+\NoteUnderWave{当策动力的频率跟物体的固有频率相等的时候，受迫振动的振幅最大，这种现象叫做\NoteBold{共振}．}
 
 共振，每个推过秋千的人都有这种经验．秋千是个摆，有
 它的固有频率．轻推一下使它微微摆动以后，只要按着它的固有频率周期性地施加推力，每当它往回摆时轻轻推它一下，尽管每次的推力都很小，经过一段时间，秋千也会荡得很高，即发生共振．
@@ -427,7 +427,7 @@
 水波是在水中传播的，空气中的声波是在空气中传播的，地震波是在地壳中传播的．借以传播波的物质常常叫做媒质．波要靠媒质来传播，这是机械波的特点．
 
 
-波为什么会在媒质中传播呢？原来媒质的各部分之间存在着相互作用力，如果媒质的某一部分发生了振动，那么，由于它对周围其他部分有力的作用，就带动周围各部分振动起来．同样，周围各部分又带动较远的各部分振动起来．这样，振动在媒质内不会局限在一个地方，而要在媒质内传播出去．\textit{机械振动在媒质中的传播叫做\textbf{机械波}}．在力学里提到波，通常就是指机械波．
+波为什么会在媒质中传播呢？原来媒质的各部分之间存在着相互作用力，如果媒质的某一部分发生了振动，那么，由于它对周围其他部分有力的作用，就带动周围各部分振动起来．同样，周围各部分又带动较远的各部分振动起来．这样，振动在媒质内不会局限在一个地方，而要在媒质内传播出去．\NoteUnderWave{机械振动在媒质中的传播叫做\NoteBold{机械波}}．在力学里提到波，通常就是指机械波．
 
 现在稍微细致地看一下机械振动在媒质中是怎样传播的．
 
@@ -456,21 +456,21 @@
 当金属球沿着弹簧方向左右振动时，在弹簧上就有疏密相间的波向右传去．
 我们也可以把弹簧看作一列由弹力联系着的质点．金属球振动起来以后，依次带动后面的质点，而且后一个质点也是总比前一个迟一些开始振动，使相邻质点振动的相不同．这里质点是左右振动的，因而从整体上看形成疏密相间的波向前传播（图~\ref{fig_A_9-16b}）．质点也不随波迁移，传播的也只是运动形式——振动．
 
-\textit{机械波向外传播的只是运动形式——机械振动，媒质本身并不随波迁移．}
+\NoteUnderWave{机械波向外传播的只是运动形式——机械振动，媒质本身并不随波迁移．}
 
 随着波的传来，本来静止的质点开始振动起来，表明它获得了能量．
 这个能量是从波源通过前面的质点依次传来的．
 所以波在传播振动的同时，也将波源的能量传递出去．
 持续地供给波源以能量，就能够持续地从波源以波的形式把能量传递出去．
-\textit{波是传递能量的一种方式}．
+\NoteUnderWave{波是传递能量的一种方式}．
 
 \subsubsection{横波和纵波} 
 
 按照质点振动方向与波的传播方向之间的关系，可以把波分成横波和纵波．
 
-\textit{振动方向与波的传播方向垂直的波叫做\textbf{横波}}．图~\ref{fig_A_9-15} 所示绳子上的波是横波的例子，质点上下振动，波向右传播，这两个方向互相垂直．
+\NoteUnderWave{振动方向与波的传播方向垂直的波叫做\NoteBold{横波}}．图~\ref{fig_A_9-15} 所示绳子上的波是横波的例子，质点上下振动，波向右传播，这两个方向互相垂直．
 
-\textit{振动方向与波的传播方向在同一直线上的波叫做\textbf{纵波}}．
+\NoteUnderWave{振动方向与波的传播方向在同一直线上的波叫做\NoteBold{纵波}}．
 图~\ref{fig_A_9-16} 所示沿弹簧传播的疏密波是纵波的例子，质点左右振动，波向右传，这两个方向在同一直线上．
 \begin{figure}[htbp]
     \centering
@@ -499,7 +499,7 @@
 所以这两个质点的振动同相．
 同样，质点2和质点14，质点3和质点15的振动也是同相．
 
-\textit{沿着波的传播方向，两个相邻的同相质点间的距离，叫做波长}．波长通常用字母$\lambda$表示．
+\NoteUnderWave{沿着波的传播方向，两个相邻的同相质点间的距离，叫做波长}．波长通常用字母$\lambda$表示．
 
 图~\ref{fig_A_9-15} 中质点1和质点13间的距离，质点2和质点14间的距离，质点3和质点15间的距离等等，都等于波长．
 
@@ -512,7 +512,7 @@
 \[v=\frac{\lambda}{T}\]
 由于振动周期$T$与振动频率$f$互为倒数，即$T=1/f$，$f=1/T$，所以上面的式子可以写成
 \[v=\lambda f\]
-即\textit{波速等于波长和频率的乘积}．这个关系，虽然我们是从机械波得到的，但是它对于今后将要学习的电磁波、光波也是适用的．
+即\NoteUnderWave{波速等于波长和频率的乘积}．这个关系，虽然我们是从机械波得到的，但是它对于今后将要学习的电磁波、光波也是适用的．
 
 机械波在媒质中传播的速率是由媒质本身的性质决定的，在不同媒质中传播的速率并不相同．
 
@@ -533,7 +533,7 @@
 波的运动情况可以用图像直观地表示出来．反之，知道了一列波的图像，也可以对图像进行分析，从而了解这列波的运动情况．
 
 用横坐标表示在波的传播方向上媒质各质点的平衡位置，纵坐标表示某一时刻各质点的位移矢量，连接各位移矢量
-末端得到的曲线，叫做\textbf{波的图像}，它表示某一时刻媒质各质点离开平衡位置的情况．
+末端得到的曲线，叫做\NoteBold{波的图像}，它表示某一时刻媒质各质点离开平衡位置的情况．
 \begin{figure}[htbp]
     \centering
     \begin{subfigure}{0.8\linewidth}
@@ -590,7 +590,7 @@
 
 
 把图~\ref{fig_A_9-18} 和图~\ref{fig_A_9-19} 所示的波的图像跟图~\ref{fig_A_9-7} 所示的振动图像相比，会看到它们很相似．实际上，由简谐振动在媒质中传播所形成的波——简谐波，在任何时刻的图像都是正弦（或余弦）曲线，媒质的任何质点的振动图像也都是正弦（或余弦）曲线．例如，图~\ref{fig_A_9-20a} 是在一条绳上传播的简谐波在某一时刻的图像，图~\ref{fig_A_9-20b} 是这列波传播过程中绳上某一点的振动图像．
-这两条曲线变化规律相同，都按正弦（或余弦）规律变化，但是它们的物理意义不同．\textit{波的图像表示的是某一时刻各个质点的位移，振动图像表示的是某一质点在各个时刻的
+这两条曲线变化规律相同，都按正弦（或余弦）规律变化，但是它们的物理意义不同．\NoteUnderWave{波的图像表示的是某一时刻各个质点的位移，振动图像表示的是某一质点在各个时刻的
 位移}．在波的图像中，相邻两个最大值之间的距离等于波长$\lambda$，在振动图像中，相邻两个最大值之间的间隔等于周期$T$．
 \begin{figure}[htbp]
     \centering
@@ -672,12 +672,12 @@
 我们发现两个波在彼此相遇并互相穿过后，波的形状和相遇前一样，传播的情形也和相遇前一样（图~\ref{fig_A_9-21e}），也就是它们都
 保持自己的状态而不受相遇波的影响．同样，两列水波互相穿过，仍然保持各自的状态继续传播，就像没跟另一列波相遇一样．
 
-\textit{几列波相遇时能够保持各自的状态而不互相干扰，这是波的一个基本性质．}
+\NoteUnderWave{几列波相遇时能够保持各自的状态而不互相干扰，这是波的一个基本性质．}
 
 两列波相遇互相穿过时，在两列波重叠的区域里的媒质质点的位移将怎样呢？根据运动合成的知识知道，每个质点都同时参与这两列波引起的振动，合振动的位移等于两个分振动引起的位移的矢量和．在图~\ref{fig_A_9-21} 里也可以看出两波重
 叠的瞬间（图~\ref{fig_A_9-21c}），最大位移等于两波振幅之和．
 
-\textit{两列波重叠区域里任何一点的总位移，都等于两列波分别引起的位移的矢量和．}
+\NoteUnderWave{两列波重叠区域里任何一点的总位移，都等于两列波分别引起的位移的矢量和．}
 
 \subsubsection{波的干涉} 
 
@@ -703,19 +703,19 @@
     \caption{水波的干涉图样}\label{fig_A_9-23}
 \end{figure}
 
-\textit{频率相同的两列波叠加，使某些区域的振动加强，某些区域的振动减弱，并且振动加强和振动减弱的区域互相间隔，这种现象叫\textbf{波的干涉}}，形成的图样叫\textbf{干涉图样}．
+\NoteUnderWave{频率相同的两列波叠加，使某些区域的振动加强，某些区域的振动减弱，并且振动加强和振动减弱的区域互相间隔，这种现象叫\NoteBold{波的干涉}}，形成的图样叫\NoteBold{干涉图样}．
 
-\textit{不仅水波，一切波都能发生干涉，干涉是波特有的现象．}
+\NoteUnderWave{不仅水波，一切波都能发生干涉，干涉是波特有的现象．}
 
 如果两个波源的频率不同，或者两个波源没有固定的相差，那么它们发出的两列波互相叠加时，就不会出现稳定的加强区和减弱区．
 因为各点合振动的振幅是随时变化的，没有振动总是得到加强或总是得到减弱的区域，而都是有时振动加强，有时振动减弱，紊乱地振动着．这样的波源不能产生稳定的干涉现象，也就是不能形成干涉图样．
-所以，\textit{要得到稳定的干涉现象，观察到干涉图样，两个波源必须是频率相同、相差恒定}，这样的波源叫\textbf{相干波源}．对于水波等机械波，相干波源是容易得到的，但在研究其他波（例如光波）的干涉时，就不容易得到相干波源，而必须采用巧妙的办法，到光学部分我们将会学到．
+所以，\NoteUnderWave{要得到稳定的干涉现象，观察到干涉图样，两个波源必须是频率相同、相差恒定}，这样的波源叫\NoteBold{相干波源}．对于水波等机械波，相干波源是容易得到的，但在研究其他波（例如光波）的干涉时，就不容易得到相干波源，而必须采用巧妙的办法，到光学部分我们将会学到．
 
 \subsection{波的衍射}
 
 微风激起的水波，遇到突出水面的小石、芦苇，会绕过它们，继续传播，好像它们并不存在．在水波演示槽的水里放一个小障碍物，可以清楚地看到水波能绕过障碍物而继续传播．
 
-\textit{波绕过障碍物的现象，叫做\textbf{波的衍射}}．
+\NoteUnderWave{波绕过障碍物的现象，叫做\NoteBold{波的衍射}}．
 
 是不是任何条件下都能发生波的衍射呢？
 \begin{figure}[htbp]
@@ -738,9 +738,9 @@
 我们利用水波演示槽观察水波通过孔的情形．在图~\ref{fig_A_9-24} 所示的两次实验中，水波的波长相同，孔的宽度不同．在孔的宽度跟波长差不多的情况下（图~\ref{fig_A_9-24a}），孔后的整个区域里传播着以孔为中心的环形波，即发生了明显的衍射现象．在孔的宽度比波长大好多倍的情况下（图~\ref{fig_A_9-24b}），在孔的后面，水波是在连接波源和孔边的两条直线所限制的区域里传播的，只在离孔比较远的地方，波才稍微弯绕到“影子”区域里．
 
 
-可见，\textit{能够发生明显的衍射现象的条件是：障碍物或孔的尺寸跟波长相差不多}．
+可见，\NoteUnderWave{能够发生明显的衍射现象的条件是：障碍物或孔的尺寸跟波长相差不多}．
 
-\textit{一切波都发生衍射，衍射也是波的特有现象}．
+\NoteUnderWave{一切波都发生衍射，衍射也是波的特有现象}．
 
 \section{声学的初步知识}
 \subsection{声波}
@@ -749,7 +749,7 @@
 声音在人类生活中具有重要意义，人类就是靠声
 音传递语言、交流思想的．
 
-声音是怎样发生的呢？\textit{简单的观察告诉我们：一切发声
+声音是怎样发生的呢？\NoteUnderWave{简单的观察告诉我们：一切发声
 的物体都在振动，它们就是声源．}
 \begin{figure}[htbp]
     \centering
@@ -789,7 +789,7 @@
 \end{figure}
 
 因为空气质点的振动方向与声波的传播方向在同一直线
-上，所以\textit{声波是纵波}．
+上，所以\NoteUnderWave{声波是纵波}．
 
 声波不仅能在气体中传播，在固体和液体中也能够传播．
 在桌面的一端放一只表，把耳朵贴在桌面的另一端，可以听到
@@ -896,7 +896,7 @@
 \subsubsection{声音的共鸣}
 
 
-声音的共振现象叫\textbf{共鸣}．取两只频率相同
+声音的共振现象叫\NoteBold{共鸣}．取两只频率相同
 的音叉并列放在一起，敲响共中的一只，然后用手按住使它停
 止振动，就可以听到没有被敲的那只音叉发出了声音．被敲
 响的那只音叉振动时发出声波，传到另一只音叉，对它产生周
@@ -1031,7 +1031,7 @@
 声源的振幅越大，声波传递的能量越多，或者确切地说，
 单位时间内通过垂直于声波传播方向的单位面积的能量越
 多．在声学中，单位时间内通过垂直于声波传播方向的单位
-面积的能量叫做\textbf{声强}．人们对响度的感觉客观上决定于
+面积的能量叫做\NoteBold{声强}．人们对响度的感觉客观上决定于
 声强．
 
 对于频率在$20 \sim 20000$赫这个范围内的声波，声强过小
@@ -1093,8 +1093,8 @@ $10^{-12} \UWmq $
 
 图~\ref{fig_A_9-33b} 是频率为100赫的钢琴声的波形曲线．
 用专门分析声音的仪器进行分析，发现它是由16个频率不同的简
-谐波组成的．这些频率成整数倍，其中频率最低的声音叫\textbf{基音}，
-频率是100赫，其余的叫\textbf{泛音}，频率分别为200赫、300赫
+谐波组成的．这些频率成整数倍，其中频率最低的声音叫\NoteBold{基音}，
+频率是100赫，其余的叫\NoteBold{泛音}，频率分别为200赫、300赫
 等等．图~\ref{fig_A_9-33a} 表示出了这16个简谐波的频率和振幅，这
 样的图叫声谱．
 图~\ref{fig_A_9-34} 是频率为100赫的黑管声的波形曲
@@ -1183,8 +1183,8 @@ $30\sim 40$分贝．
 \subsection{超声波$^\star$}
 频率低于20赫兹和高于20000赫兹的声波，都不能引起
 人的听觉．
-低于20赫兹的声波叫\textbf{次声波}．高于20000赫兹的
-声波叫\textbf{超声波}．
+低于20赫兹的声波叫\NoteBold{次声波}．高于20000赫兹的
+声波叫\NoteBold{超声波}．
 
 地震、台风、核爆炸、火箭起飞都能产生次声波．
 所以建
