--- a/1/A/app_01.tex
+++ b/1/A/app_01.tex
@@ -8,8 +8,8 @@
 
 做物理实验，不仅要观察物理现象，还要找到现象中的数量关系，这就需要知道有关物理量的数值．
 
-要知道物理量的数值，必须进行测量．测量的结果不可能是绝对精确的．例如，用刻度尺来量长度，用天平来称质量，用温度计来测温度，用电流表或电压表来测电流或电压，测量出来的数值跟被测物理量的真实值都不能完全一致，测出的数值与真实值的差异叫做\textbf{误差}．
-从来源看，误差可以分成\textbf{系统误差}和\textbf{偶然误差}两种．
+要知道物理量的数值，必须进行测量．测量的结果不可能是绝对精确的．例如，用刻度尺来量长度，用天平来称质量，用温度计来测温度，用电流表或电压表来测电流或电压，测量出来的数值跟被测物理量的真实值都不能完全一致，测出的数值与真实值的差异叫做\NoteBold{误差}．
+从来源看，误差可以分成\NoteBold{系统误差}和\NoteBold{偶然误差}两种．
 
 系统误差是由于仪器本身不精确、或实验方法粗略、或实验原理不完善而产生的．例如，天平的两臂不严格相等或砝
 码不准，称质量时没有考虑空气浮力的影响，做热学实验时没有考虑散热损失等，都会产生系统误差．系统误差的特点是在多次重做同一实验时，误差总是同样地偏大或偏小，不会出现这几次偏大另几次偏小的情况．要减小系统误差，必须校准测量仪器，改进实验方法，设计在原理上更为完善的实验．
@@ -19,7 +19,7 @@
 
 测量既然总有误差，测得的数值就只能是近似数．例如，
 用毫米刻度的尺量出书本的长度是184.2毫米，最末一位数字2是估计出来的，是不可靠数字，但是仍然有意义，仍要写出来．
-这种带有一位不可靠数字的近似数字，叫做\textbf{有效数字}．
+这种带有一位不可靠数字的近似数字，叫做\NoteBold{有效数字}．
 
 在有效数字中，数2.7、2.70、2.700的含义是不同的，它们分别代表二位、三位、四位有效数字．
 数2.7表示最末一位数字7是不可靠的，而数2.70和2.700则表示最末一位数字0是不可靠的．因此，小数最后的零是有意义的，不能随便舍去或添加．但是，小数的第一个非零数字前面的零是用来表示小数点位置的，不是有效数字．例如，0.92、0.085、 0.0063都是两位有效数字．
@@ -279,7 +279,7 @@ $3.65\times 10^4$千米．
 首先判断小车是否做匀变速运动．
 
 观察纸带上的点可以发现，由于打点计时器打点很快，各点间的距离不大，特别是最初几个点比较密集．
-为了避免由此而产生的在测量和计算上的困难，我们可以不从第一个点开始，而在后面找一个比较方便的点开始．另外，我们还可以不用每打一次点的时间作为时间的单位，例如用每打五次点的时间作为时间的单位．这样，我们在选好的开始点下标明0，在第六点标明1，在第十一点标明2，$\cdots$，这些点叫做\textbf{计数点}．
+为了避免由此而产生的在测量和计算上的困难，我们可以不从第一个点开始，而在后面找一个比较方便的点开始．另外，我们还可以不用每打一次点的时间作为时间的单位，例如用每打五次点的时间作为时间的单位．这样，我们在选好的开始点下标明0，在第六点标明1，在第十一点标明2，$\cdots$，这些点叫做\NoteBold{计数点}．
 
 \begin{figure}[htbp]
     \centering
