--- a/1/A/app_03.tex
+++ b/1/A/app_03.tex
@@ -3,13 +3,13 @@
 我们知道，物理公式在确定物理量的数量关系的同时，也
 确定了物理量的单位关系．因此，只要我们选定为数不多的
 几个物理量的单位，就能够利用它们推导出其他物理量的单
-位．这些被任意选定的物理量叫做\textbf{基本量}，如力学中的长度、
+位．这些被任意选定的物理量叫做\NoteBold{基本量}，如力学中的长度、
 质量和时间就是三个基本量．
 基本量的单位，如米、千克、秒
-等，叫做\textbf{基本单位}．
+等，叫做\NoteBold{基本单位}．
 由基本量根据有关公式推导出来的其他
-物理量，叫做\textbf{导出量}．
-导出量的单位叫做\textbf{导出单位}．
+物理量，叫做\NoteBold{导出量}．
+导出量的单位叫做\NoteBold{导出单位}．
 
 
 所谓单位制，就是有关基本单位、导出单位等一系列单位
@@ -95,13 +95,13 @@
 既然导出量
 可以从基本量导出，那么每个导出量一定可以用基本量的某
 种组合表示出来．表示一个物理量是由哪些基本量组成和怎
-样组成的式子，叫做这个物理量的\textbf{量纲式}．
+样组成的式子，叫做这个物理量的\NoteBold{量纲式}．
 在国际单位制中，
 所有的力学量都是由长度、质量、时间这三个基本量组成的，
 如果用$L $，$ M $，$ T$分别表示这三个基本量，那么，一个物理量$Q$
 的量纲式的一般形式就是
 \[[Q]=\qty[L^{\alpha}M^{\beta}T^{\gamma}]\]
-其中$\alpha, \beta, \gamma$分别叫做物理量$Q$对于长度、质量、时间的\textbf{量纲}．
+其中$\alpha, \beta, \gamma$分别叫做物理量$Q$对于长度、质量、时间的\NoteBold{量纲}．
 
 下面举出几个物理量的量纲式：
 \begin{itemize}
