--- a/1/B/02.tex
+++ b/1/B/02.tex
@@ -11,7 +11,7 @@
 温度升高，物体分子的热运动加剧，分子热运动的平均动能也增加．
 温度越高，分子热运动的平均动能越大．
 温度越低，分子热运动的平均动能越小．
-从分子运动论的观点看来，\textit{温度是物体分子热运动的平均动能的标志}．这样，分子运动论使我们懂得了温度的微观含义．
+从分子运动论的观点看来，\NoteUnderWave{温度是物体分子热运动的平均动能的标志}．这样，分子运动论使我们懂得了温度的微观含义．
 
 \subsection{分子势能} 
 
@@ -26,7 +26,7 @@
 
 \subsection{物体的内能} 
 
-物体中所有分子的热运动的动能和分子势能的总和，叫做物体的\textbf{内能}．一切物体都是由不停地做无规则热运动并且相互作用着的分子组成的，因此任何物体都具有内能．
+物体中所有分子的热运动的动能和分子势能的总和，叫做物体的\NoteBold{内能}．一切物体都是由不停地做无规则热运动并且相互作用着的分子组成的，因此任何物体都具有内能．
 
 由于分子热运动的平均动能跟温度有关系，分子势能跟体积有关系，因此物体的内能跟物体的温度和体积有关系．温度升高时，分子的动能增加，因而物体的内能增加．体积变化时，分子势能发生变化，因而物体的内能发生变化．
 
@@ -80,9 +80,9 @@
 但做功并不是改变物体内能的唯一方式．灼热的火炉使它上面和周围的物体温度升高，这些物体的内能增加．
 火炉熄灭后，这些物体的温度降低，内能又减少．
 在这样的过程中，物体的内能改变了，但是并没有做功．
-这种没有做功而使物体内能改变的物理过程叫做\textbf{热传递}．
+这种没有做功而使物体内能改变的物理过程叫做\NoteBold{热传递}．
 
-可见，\textit{能够改变物体内能的物理过程有两种：做功和热传递}．
+可见，\NoteUnderWave{能够改变物体内能的物理过程有两种：做功和热传递}．
 
 做功使物体的内能发生变化的时候，内能的变化就用功的数值来量度．
 外界对物体做多少功，物体的内能就增加多少；物体对外界做多少功，物体的内能就减少多少．
@@ -96,7 +96,7 @@
 \section{热功当量}
 既然做功和热传递对改变物体的内能是等效的，功和热量都可以用来量度内能的变化，那么功和热量之间就应该有确定的数量关系．
 
-我们在初中学过，热量的单位是卡路里（简称卡，$\UcalA$），使1克水的温度升高1$\Ucede$所需的热量就是1卡．如果功和热量之间有确定的数量关系，1卡的热量相当于多少焦耳的功？相当于单位热量的功的数值叫做\textbf{热功当量}．历史上第一个用实验来测定热功当量的人是英国物理学家焦耳．他用各种不同的方法测定了热功当量，下面我们介绍其中最著名的一种（图~\ref{fig_B_2-2}）.
+我们在初中学过，热量的单位是卡路里（简称卡，$\UcalA$），使1克水的温度升高1$\Ucede$所需的热量就是1卡．如果功和热量之间有确定的数量关系，1卡的热量相当于多少焦耳的功？相当于单位热量的功的数值叫做\NoteBold{热功当量}．历史上第一个用实验来测定热功当量的人是英国物理学家焦耳．他用各种不同的方法测定了热功当量，下面我们介绍其中最著名的一种（图~\ref{fig_B_2-2}）.
 
 \begin{figure}[htbp]
     \centering
@@ -158,7 +158,7 @@ $$W=2Mgh $$
 
 在一般情况下，如果物体跟外界同时发生做功和热传递的过程，那么，外界对物体所做的功$W$加上物体从外界吸收的热量$Q$，等于物体内能的增加$\Delta E$．即
 \[W+Q=\Delta E\]
-上式所表示的功、热量跟内能变化之间的定量关系，在物理学中叫做\textbf{热力学第一定律}．
+上式所表示的功、热量跟内能变化之间的定量关系，在物理学中叫做\NoteBold{热力学第一定律}．
 
 \subsection{能的转化和守恒定律} 
 现在我们从能的转化的观点来考察热力学第一定律．我们知道，功是能的转化的量度，做功使内能发生变化时，其他形式的能和内能发生相互转化．在摩擦生热的现象中，克服摩擦力做多少功，就有多少机械能转
@@ -172,7 +172,7 @@ $$W=2Mgh $$
 大量的事实证明：各种形式的能都可以相互转化，并且在转化中守恒．
 
 
-\textbf{能量既不会凭空产生，也不会凭空消失，它只能从一种形式转化为别的形式，或者从一个物体转移到别的物体．}这就是\textbf{能的转化和守恒定律}．
+\NoteBold{能量既不会凭空产生，也不会凭空消失，它只能从一种形式转化为别的形式，或者从一个物体转移到别的物体．}这就是\NoteBold{能的转化和守恒定律}．
 
 现在我们利用这个定律来分析一下射到地球上的太阳能的转化．太阳把地面晒热，把空气晒热，把水面晒热并使一部分水蒸发．变热的空气上升，使空气流动而形成风，太阳能转化成空气的机械能．蒸发的水蒸气上升到空中形成云，以雨雪等形式落下来，通过江河流入海洋，太阳能转化成水的机械
 能．太阳能的一部分被植物叶子吸收，发生光合作用，生成各
