--- a/1/B/05.tex
+++ b/1/B/05.tex
@@ -4,9 +4,9 @@
 在初中我们学过一些物态变化的知识，这一章进一步扩大和加深这方面的知识，同时学习一些新知识．
 
 \section{熔解和凝固}
-物质从固态变成液态叫做\textbf{熔解}，从液态变成固态叫做\textbf{凝固}．
+物质从固态变成液态叫做\NoteBold{熔解}，从液态变成固态叫做\NoteBold{凝固}．
 
-我们知道，固体分晶体和非晶体．晶体物质和非晶体物质在熔解和凝固时情况是不同的．晶体有一定的熔解温度——\textbf{熔点}．给晶体加热，当温度升高到熔点时，晶体开始熔解，在熔解过程中温度保持不变，到全部熔解后，温度才继续上升．它们的液体冷却时，温度降低到熔点时开始凝固，在凝固过程中温度也保持不变，到全部凝固后，温度才继续下降．
+我们知道，固体分晶体和非晶体．晶体物质和非晶体物质在熔解和凝固时情况是不同的．晶体有一定的熔解温度——\NoteBold{熔点}．给晶体加热，当温度升高到熔点时，晶体开始熔解，在熔解过程中温度保持不变，到全部熔解后，温度才继续上升．它们的液体冷却时，温度降低到熔点时开始凝固，在凝固过程中温度也保持不变，到全部凝固后，温度才继续下降．
 
 非晶体没有一定的熔点．
 温度升高时，非晶体先是由硬变软，再逐渐变成粘稠状液体，最后逐渐变成液体．在整个过程中，温度不停地上升，没有一定的熔解温度．
@@ -63,7 +63,7 @@
 晶体在熔解过程中不断从外界吸收热量，但温度却保持不变．吸收的热量绝大部分用于破坏晶体的点阵结构，增加分子势能．
 对大多数熔解时体积增大的物质来说，还有一部分热量用来克服外界压强做功．不过体积变化不大，这个功很小．
 
-质量相等的不同晶体溶解时吸收的热量是不同的．\textit{单位质量的某种物质熔解成同温度的液体时吸收的热量，叫做这种物质的\textbf{熔解热}}．在国际单位制中，熔解热的单位是焦/千克（$\UJkgA$）．
+质量相等的不同晶体溶解时吸收的热量是不同的．\NoteUnderWave{单位质量的某种物质熔解成同温度的液体时吸收的热量，叫做这种物质的\NoteBold{熔解热}}．在国际单位制中，熔解热的单位是焦/千克（$\UJkgA$）．
 
 液体凝固时要放出热量．单位质量的某种物质凝固时放出的热量等于它的熔解热．显然这是符合能量守恒定律的．
 
@@ -131,7 +131,7 @@
 \section{蒸发}
 物质从液态变成气态，叫做汽化．汽化有两种方式：蒸发和沸腾．蒸发是在液体表面进行的汽化现象．这一节我们先来研究蒸发．
 
-我们知道，液体中的分子都在不停地运动着，它们的平均动能跟温度有关系．但在任何温度下，总有一部分分子的动能比平均动能大．那些处在液体表面层附近的动能足够大的分子，能够挣脱周围分子的引力，飞出液面，形成蒸气，这就是\textbf{蒸发}．
+我们知道，液体中的分子都在不停地运动着，它们的平均动能跟温度有关系．但在任何温度下，总有一部分分子的动能比平均动能大．那些处在液体表面层附近的动能足够大的分子，能够挣脱周围分子的引力，飞出液面，形成蒸气，这就是\NoteBold{蒸发}．
 蒸气也常叫做汽．
 
 液体温度越高，分子的平均动能就越大，具有足够大的动能因而能够飞出液面的分子也就越多．所以，温度越高，蒸发得越快．泼在地上的水夏天干得快，冬天干得慢，就是这个原因．
@@ -154,7 +154,7 @@
 盛在密闭容器里的液体，即使过很长时间，也不会蒸发完，这是什么原因呢？原来在容器中的液面上同时进行着两种相反的过程：一方面分子从液面飞出来；另一方面由于液面上的汽分子不停地做无规则的热运动，有的汽分子撞到液面上又会回到液体中去（图~\ref{fig_B_5-2}）．在密闭的容器中，随着液体的
 不断蒸发，液面上汽的密度不断增大，回到液体中的分子数也逐渐增多．
 最后，当汽的密度增大到一定程度时，就会达到这样的状态：在单位时间内回到液体中的分子数等于从液面飞出去的分子数．这时汽的密度不再增大，液体也不再减少，
-液体和汽之间达到了平衡状态，这种平衡叫做\textbf{动态平衡}．我们把跟液体处于动态平衡的汽叫做\textbf{饱和汽}．把没有达到饱和状态的汽叫做\textbf{未饱和汽}．在一定温度下，饱和汽的密度是一定的，未饱和汽的密度小于饱和汽的密度．
+液体和汽之间达到了平衡状态，这种平衡叫做\NoteBold{动态平衡}．我们把跟液体处于动态平衡的汽叫做\NoteBold{饱和汽}．把没有达到饱和状态的汽叫做\NoteBold{未饱和汽}．在一定温度下，饱和汽的密度是一定的，未饱和汽的密度小于饱和汽的密度．
 
 \begin{figure}[htbp]
   \centering
@@ -180,7 +180,7 @@
 
 \subsection{饱和汽压跟温度的关系} 
 
-用热毛巾把图~\ref{fig_B_5-3} 中的$b$管包住，使管内的温度升高，可以看到管中的水银面下降．这表示温度升高时饱和汽压增大．如果使管内的温度降低，管中的水银面就上升，表示温度降低时饱和汽压减小．可见，\textit{饱和汽压随温度的升高而增大，随温度的降低而减小．}
+用热毛巾把图~\ref{fig_B_5-3} 中的$b$管包住，使管内的温度升高，可以看到管中的水银面下降．这表示温度升高时饱和汽压增大．如果使管内的温度降低，管中的水银面就上升，表示温度降低时饱和汽压减小．可见，\NoteUnderWave{饱和汽压随温度的升高而增大，随温度的降低而减小．}
 
 饱和汽压随温度的升高而增大，这是由两方面的原因引起的．
 一个原因是温度升高时，饱和汽的密度增大，因此压强增大．
@@ -250,7 +250,7 @@
 \end{enumerate}
 
 \section{沸腾}
-给液体加热，当液体升高到一定温度时，液体内部涌现出大量的气泡，升到液面破裂开，放出汽．这时整个液体发生剧烈的汽化，这种现象叫做\textbf{沸腾}．
+给液体加热，当液体升高到一定温度时，液体内部涌现出大量的气泡，升到液面破裂开，放出汽．这时整个液体发生剧烈的汽化，这种现象叫做\NoteBold{沸腾}．
 
 现在我们来研究一下水的沸腾过程．
 给盛水的烧杯加热，原来吸附在杯底和杯壁上的空气以及溶解在水里的空气就分离出来，形成一些小气泡．由于周围的水向气泡里蒸发，所以气泡里包含的是饱和水汽和空气．杯底受热温度升高时，气泡膨胀，当体积胀大到一定程度时，气泡就脱离杯底浮起．在达到沸腾温度以前，气泡在上升过程中体积是逐渐缩小的（图~\ref{fig_B_5-6a}）．
@@ -275,9 +275,9 @@
 由于在上升过程中周围的水还在不断向泡内蒸发，所以体积还会继续增大，直到升到液面破裂开（图~\ref{fig_B_5-6b}）．这时从气泡里放出的主要是水蒸气．
 这时水就沸腾了．沸腾时，在液体表面和液体内部同时发生汽化，这是沸腾和蒸发的主要区别．
 
-从上面水的沸腾过程可以看出，\textit{液体只有在它的饱和汽压等于外界压强时才能沸腾．}在外界压强是1标准大气压的情况下，水在100$\Ucede$沸腾，就是因为100$\Ucede$时水的饱和汽压为760毫米汞柱，等于外界的大气压强．
+从上面水的沸腾过程可以看出，\NoteUnderWave{液体只有在它的饱和汽压等于外界压强时才能沸腾．}在外界压强是1标准大气压的情况下，水在100$\Ucede$沸腾，就是因为100$\Ucede$时水的饱和汽压为760毫米汞柱，等于外界的大气压强．
 
-液体沸腾时的温度叫做\textbf{沸点}．外部压强改变时，液体的沸点也改变．在外部压强增大时，液体需要升到较高的温度时饱和汽压才能等于外部压强，所以沸点升高．在外部压强
+液体沸腾时的温度叫做\NoteBold{沸点}．外部压强改变时，液体的沸点也改变．在外部压强增大时，液体需要升到较高的温度时饱和汽压才能等于外部压强，所以沸点升高．在外部压强
 减小时，液体在较低的温度下饱和汽压就能等于外部压强，所以沸点降低．上述结论可以用实验来证明．把一杯温度低于100$\Ucede$的热水放在抽气机的玻璃罩里，抽出罩里的空气，当罩里空气的压强降低到一定程度时，热水就沸腾起来（图~\ref{fig_B_5-7}）．
 \begin{figure}[htbp]
   \centering
@@ -294,7 +294,7 @@
 \section{汽化热}
 水沸腾后，虽然继续给它加热，但是水的温度并不上升，只是有更多的水变成了水蒸气．可见，水在沸腾过程中要吸收热量．液体变为蒸气时，体积膨胀，分子间的距离增大．沸腾过程中吸收的热量，一部分用来克服分子间的引力做功增大分子势能，另一部分用于体积膨胀时克服外界压强做功．
 
-\textit{单位质量的某种液体，变为同温度的气体时吸收的热量，叫做这种液体的\textbf{汽化热}．}
+\NoteUnderWave{单位质量的某种液体，变为同温度的气体时吸收的热量，叫做这种液体的\NoteBold{汽化热}．}
 
 汽化热常用字母$L$表示．在国际单位制中，汽化热的单位是焦/千克（$\UJkgA$）．
 
@@ -401,7 +401,7 @@
 他们运用增大压强和冷却的办法，把许多气体都液化了，其中有氨、氯、二氧化硫、氯化氢、硫化氢、二氧化碳等．但是，研究中发现，有几种气体，例如氧、氢、氮等，一直不能被液化．
 于是当时便以为这些气体是不能液化的所谓“永久气体”．
 
-后来，进一步的研究表明，各种气体都有一个特殊的温度，在这个温度以上，无论怎样增大压强也不能使气体液化，这个温度叫做\textbf{临界温度}．氧、氢、氮等气体所以没有被液化，就是因为它们的临界温度很低，当时的低温技术尚
+后来，进一步的研究表明，各种气体都有一个特殊的温度，在这个温度以上，无论怎样增大压强也不能使气体液化，这个温度叫做\NoteBold{临界温度}．氧、氢、氮等气体所以没有被液化，就是因为它们的临界温度很低，当时的低温技术尚
 未获得这样低的温度．于是科学家们便努力提高低温技术，结果在二十世纪初，所有的气体都被液化了．
 最后一个被液化的气体是氦，它于1908年被液化，后来还被凝固成了固态．
 
@@ -438,12 +438,12 @@
 泼在地上的水和江河湖海里的水都在蒸发，动植物的表皮和动物的呼吸也在不断地散发出水蒸气，所以我们周围的空气总含有水蒸气．一定体积的空气中含的水蒸气越多，空气就越潮湿；含的水蒸气越少，空气就越干燥．空气的干湿程度跟我们的生活和生产有密切的关系．空气太潮湿，我们会感到沉闷和窒息，东西也容易发霉；空气太干燥，我们的口腔和鼻腔会感到干燥难受，植物容易枯萎．在某些生产部门以及贮藏物品和保存名贵书画等艺术品的地方，如纺织厂、博物馆等，都要求空气保持一定的湿度．
 
 空气的湿度可以用空气中所含水蒸气的密度，即单位体积的空气中所含水蒸气的质量来表示．由于直接测量空气中水蒸气的密度比较困难，而水蒸气的压强是随水蒸气密度的增大而增大的，所以通常都用空气中水蒸气的压强来表示空气的湿度．
-空气中所含水蒸气的压强叫做空气的\textbf{绝对湿度}．例如，空气里水蒸气的压强是15毫米汞柱，这时空气的绝对湿度就是15毫米汞柱．
+空气中所含水蒸气的压强叫做空气的\NoteBold{绝对湿度}．例如，空气里水蒸气的压强是15毫米汞柱，这时空气的绝对湿度就是15毫米汞柱．
 
 空气湿度对蒸发的快慢、植物的枯萎、动物的感觉的影响不是由空气的绝对湿度来决定，而是跟空气中的水蒸气离饱和状态的远近有关系．由于饱和水蒸气的压强随温度的升高而增大，所以在空气的绝对湿度一定的情况下，气温高时，水蒸气离饱和状态远；气温低时，水蒸气离饱和状态近．例如空气
 的绝对湿度是9毫米汞柱，在气温是20$\Ucede$时，水蒸气离饱和状态较远（20$\Ucede$时水的饱和汽压是17.5毫米汞柱），我们就感到空气比较干燥；在气温是10$\Ucede$时，水蒸气接近饱和（10$\Ucede$时水的饱和汽压是9.2毫米汞柱），我们就感到空气很潮湿．为了表示空气中水蒸气离饱和状态的远近，物理学中引入了相对湿度的概念．
 
-\textit{某温度时空气的绝对湿度跟同一温度下水的饱和汽压的百分比，叫做这时空气的\textbf{相对湿度}}．
+\NoteUnderWave{某温度时空气的绝对湿度跟同一温度下水的饱和汽压的百分比，叫做这时空气的\NoteBold{相对湿度}}．
 
 如果气温为20$\Ucede$时绝对湿度$p=9$毫米汞柱，因为20$\Ucede$时水的饱和汽压$P=17.5$毫米汞柱，所以这时空气的相对湿度
 \[B=\frac{9}{17.5}\times 100\%=51\% \]
@@ -494,7 +494,7 @@
 空气里的未饱和水蒸气，当气温逐渐降低时将逐渐接近饱和．
 当气温降低到某一温度时，水蒸气达到饱和状态，这时将有水蒸气凝结成水，在物体表面上形成一层细小的露滴．
 
-\textit{使空气里的水蒸气刚好达到饱和时的温度，称为\textbf{露点}．}
+\NoteUnderWave{使空气里的水蒸气刚好达到饱和时的温度，称为\NoteBold{露点}．}
 
 空气中含的水蒸气多，气温只要少许降低一点，就达到露点，水蒸气就达到饱和；反之，空气中含的水蒸气少，气温要降低较多，才能达到露点，水蒸气才达到饱和．
 因此，根据露点和气温的差值，可以大致判断出空气中水蒸气的饱和程度，从而判断出相对湿度的大小．
@@ -513,10 +513,10 @@
 知道了绝对湿度，再查出原来温度下的饱和汽压，就可以求出相对湿度．
 
 \subsection{湿度计} 
-既然测出露点就能求出空气的绝对湿度和相对湿度，所以测定露点的仪器就是一种湿度计．这种湿度计叫做\textbf{露点湿度计}．
+既然测出露点就能求出空气的绝对湿度和相对湿度，所以测定露点的仪器就是一种湿度计．这种湿度计叫做\NoteBold{露点湿度计}．
 
 
-还有两种常用的湿度计，一种叫做\textbf{干湿泡湿度计}（图~\ref{fig_B_5-10}）．它由两支完全相同的温度计组成．
+还有两种常用的湿度计，一种叫做\NoteBold{干湿泡湿度计}（图~\ref{fig_B_5-10}）．它由两支完全相同的温度计组成．
 温度计$A$叫做干泡
 温度计，用来测量空气的温度；温度计$B$叫做湿泡温度计，它的水银泡上包着棉纱，棉纱的下端浸在水中，由于水的蒸发，温度计$B$指示的温度总是低于$A$的．$A$、$B$的温度差叫做干湿泡温度差．
 空气的相对湿度越小，即空气越干燥，湿泡温度计$B$上的水蒸发得越快，$B$的温度就降得越低，两支温度计的温度差就越大；反之，空气的相对湿度越大，即空气越潮湿，温度计$B$上的水蒸发得就越慢，$A$、$B$的温度差就越小．
@@ -541,7 +541,7 @@
 
 
 
-另一种常用的湿度计叫做\textbf{毛发湿度计}（图~\ref{fig_B_5-11}）．它是利用人的头发在脱脂以后，其长度会随着空气的相对湿度而变化制成的．毛发湿度计由一根或一束脱脂的毛发、指针和刻度盘组成．空气的相对湿度增大时，毛发伸长；相对湿度减小时，毛发缩短．毛发长度的变化控制指针的偏转，从刻度盘上就可以直接读出相对湿度．
+另一种常用的湿度计叫做\NoteBold{毛发湿度计}（图~\ref{fig_B_5-11}）．它是利用人的头发在脱脂以后，其长度会随着空气的相对湿度而变化制成的．毛发湿度计由一根或一束脱脂的毛发、指针和刻度盘组成．空气的相对湿度增大时，毛发伸长；相对湿度减小时，毛发缩短．毛发长度的变化控制指针的偏转，从刻度盘上就可以直接读出相对湿度．
 
 三种湿度计各有不同的优缺点．露点湿度计测量准确，但是结构比较复杂，测出露点后要进行查表、计算等，使用起来不太方便．干湿泡湿度计使用比较方便，也比较准确，所以生活中大都使用这种湿度计．毛发湿度计结构简单，不易损坏，可以直接读数，还可以和自动记录装置联合使用，缺点是不太准确，要经常进行校准．
 
