--- a/1/C/04.tex
+++ b/1/C/04.tex
@@ -9,8 +9,8 @@
 
 
 在图~\ref{fig_C_4-1} 所示的电路中，先把开关扳到电池组一边，给电容器充电．稍后再把开关扳到线圈一边，让电容器通过线圈放电．
-我们会看到电流表的指针左右摆动，表明电路里产生了大小和方向作周期性变化的交变电流．通常把这样产生的交变电流叫做\textbf{振荡电流}．
-能够产生振荡电流的电路叫做\textbf{振荡电路}，图~\ref{fig_C_4-1} 中由电感线圈和电容器组成的电路就是一种简单的振荡电路，简称$LC$回路．
+我们会看到电流表的指针左右摆动，表明电路里产生了大小和方向作周期性变化的交变电流．通常把这样产生的交变电流叫做\NoteBold{振荡电流}．
+能够产生振荡电流的电路叫做\NoteBold{振荡电路}，图~\ref{fig_C_4-1} 中由电感线圈和电容器组成的电路就是一种简单的振荡电路，简称$LC$回路．
 
 \begin{figure}[htbp]
 	\centering
@@ -67,15 +67,15 @@
 路里的磁场能又逐渐转化为电场能．
 充电完了时，电流减小到零，电容器极板上的电荷达到最大值，磁场能全部转化为电场能（图~\ref{fig_C_4-2c}）．
 
-此后电容器再放电，再充电，这样不断地充电和放电，电路中就有了振荡电流，同时电场能和磁场能发生周期性的转化．这种现象叫做\textbf{电磁振荡}．
+此后电容器再放电，再充电，这样不断地充电和放电，电路中就有了振荡电流，同时电场能和磁场能发生周期性的转化．这种现象叫做\NoteBold{电磁振荡}．
 
-图~\ref{fig_C_4-2} 中的电磁振荡跟机械振动中的自由振动类似，叫做\textbf{自由振荡}．最初给电容器充电，相当于使单摆的摆锤偏离平衡位置，给摆锤一定的重力势能．
+图~\ref{fig_C_4-2} 中的电磁振荡跟机械振动中的自由振动类似，叫做\NoteBold{自由振荡}．最初给电容器充电，相当于使单摆的摆锤偏离平衡位置，给摆锤一定的重力势能．
 电路中电场能和磁场能的相互转化，相当于单摆中重力势能和动能的相互转化．
 
 \subsection{无阻尼振荡和阻尼振荡}
 
-在自由振荡中，如果没有能量损失，振荡应该持续下去，振荡电流的振幅应该保持不变．这种振荡叫做\textbf{无阻尼振荡}（图~\ref{fig_C_4-3a}）．可是，实际上在电磁振荡中总要有能量损失，一部分能量由于电路中有电阻而转化为热，还有一部分能量辐射到周围空间中去．这样，振荡电路
-的能量逐渐损耗，振荡电流的振幅逐渐减小，直到最后停止下来．这种振荡叫做\textbf{阻尼振荡}（图~\ref{fig_C_4-3b}）．
+在自由振荡中，如果没有能量损失，振荡应该持续下去，振荡电流的振幅应该保持不变．这种振荡叫做\NoteBold{无阻尼振荡}（图~\ref{fig_C_4-3a}）．可是，实际上在电磁振荡中总要有能量损失，一部分能量由于电路中有电阻而转化为热，还有一部分能量辐射到周围空间中去．这样，振荡电路
+的能量逐渐损耗，振荡电流的振幅逐渐减小，直到最后停止下来．这种振荡叫做\NoteBold{阻尼振荡}（图~\ref{fig_C_4-3b}）．
 \begin{figure}[htbp]
     \centering
     \begin{subfigure}{0.8\linewidth}
@@ -93,7 +93,7 @@
 \end{figure}
 
 实际工作中常常需要保持振幅不变的等幅振荡．
-这种等幅振荡要用\textbf{振荡器}来产生．振荡器靠晶体管（或电子管）周期地把电源的能量补充到振荡电路中，用来补偿振荡过程中的能量损耗，以维持等幅振荡．
+这种等幅振荡要用\NoteBold{振荡器}来产生．振荡器靠晶体管（或电子管）周期地把电源的能量补充到振荡电路中，用来补偿振荡过程中的能量损耗，以维持等幅振荡．
 
 \subsection*{练习一}
 \begin{enumerate}
@@ -104,9 +104,9 @@
 
 
 \section{电磁振荡的周期和频率}
-电磁振荡完成一次周期性变化需要的时间叫做\textbf{周期}，一秒钟内完成的周期性变化的次数叫做\textbf{频率}．
+电磁振荡完成一次周期性变化需要的时间叫做\NoteBold{周期}，一秒钟内完成的周期性变化的次数叫做\NoteBold{频率}．
 
-振荡电路里发生无阻尼自由振荡的周期和频率，叫做振荡电路的\textbf{固有周期}和\textbf{固有频率}，简称振荡电路的周期和频率．
+振荡电路里发生无阻尼自由振荡的周期和频率，叫做振荡电路的\NoteBold{固有周期}和\NoteBold{固有频率}，简称振荡电路的周期和频率．
 
 $LC$回路的周期和频率跟哪些因素有关呢？让我们改变
 电容和电感的大小，重做图~\ref{fig_C_4-1} 的实验．
@@ -139,7 +139,7 @@ $LC$回路的周期和频率跟哪些因素有关呢？让我们改变
 十九世纪六十年代，英国物理学家麦克斯韦（$1831 \sim 1879$）在总结前人研究电磁现象的基础上，建立了完整的电磁场理论．
 这个理论不仅全面地说明了当时已知的电磁现象，而且成功地预言了电磁波的存在．下面我们简要地介绍一下这个理论的要点．
 
-麦克斯韦用场的观点分析了电磁感应现象，并作出结论：\textit{变化的磁场能够在周围的空间产生电场}．这是电磁场理论的第一个要点．
+麦克斯韦用场的观点分析了电磁感应现象，并作出结论：\NoteUnderWave{变化的磁场能够在周围的空间产生电场}．这是电磁场理论的第一个要点．
 如图~\ref{fig_C_4-4a} 所示，在变化的磁场中放一个闭合
 电路，电路中就产生感生电流．
 这是我们学过的电磁感应现象．我们知道，要产生电流，必须有使电荷做定向移动的电场存在．
@@ -162,7 +162,7 @@ $LC$回路的周期和频率跟哪些因素有关呢？让我们改变
 麦克斯韦还指出：变化的磁场所产生的电场，是由磁场的变化情况决定的．
 如果磁场的变化是均匀的，即在相等的时间内磁感应强度的变化相等，产生的电场就是稳定的，即电场强度不随时间而变化．如果磁场的变化是不均匀的，产生的电场就是变化的．
 
-既然变化的磁场能够产生电场，相反地，变化的电场是否也能够产生磁场呢？麦克斯韦用场的观点分析了电磁现象，认为\textit{变化的电场能够在周围的空间产生磁场}．
+既然变化的磁场能够产生电场，相反地，变化的电场是否也能够产生磁场呢？麦克斯韦用场的观点分析了电磁现象，认为\NoteUnderWave{变化的电场能够在周围的空间产生磁场}．
 这是电磁场理论的第二个要点．
 一个静止的电荷，它产生的是静电场，即空间各点的电场强度不随时间而变化．
 这个电荷一旦运动起来，电场就发生变化，即空间各点的电场强度将随着时间而变化．另一方面，运动电荷要产生磁场．用场的观点来分析这个问题，就可以说：这个磁场是由变化的电场产生的．
@@ -177,14 +177,14 @@ $LC$回路的周期和频率跟哪些因素有关呢？让我们改变
 变化的电场所产生的磁场，是由电场的变化情况决定的．
 如果电场的变化是均匀的，产生的磁场就是稳定的．如果电场的变化是不均匀的，产生的磁场就是变化的．
 
-变化的磁场产生电场，变化的电场产生磁场，这是麦克斯韦理论的两大支柱．按照这个理论，变化的电场和磁场总是相互联系的，形成一个不可分离的统一的场，这就是\textbf{电磁场}．电场和磁场只是这个统一的电磁场的两种具体表现．
+变化的磁场产生电场，变化的电场产生磁场，这是麦克斯韦理论的两大支柱．按照这个理论，变化的电场和磁场总是相互联系的，形成一个不可分离的统一的场，这就是\NoteBold{电磁场}．电场和磁场只是这个统一的电磁场的两种具体表现．
 
 \section{电磁波}
 \subsection{电磁波的产生}
 
 从麦克斯韦的电磁场理论可以知道：如果在空间某处发生了不均匀变化的电场，就会在邻近的空间引起变化的磁场，这个变化的磁场又会在较远的空间引起新的变化的电场，接着又在更远的空间引起新的变化的磁场．
 这样，变化的电场和变化的磁场并不局限于空间某个区域，而要由近及远向周围空间传播开去．
-电磁场这样由近及远地传播就形成\textbf{电磁波}．
+电磁场这样由近及远地传播就形成\NoteBold{电磁波}．
 
 
 在图~\ref{fig_C_4-1} 所示的振荡电路中有振荡电流时，会产生周期性变化的电场和磁场，这种电场和磁场的变化是不均匀的，因而会激起电磁波向外传播（图~\ref{fig_C_4-6}）．电磁波的周期和频率等于激起电磁波的振荡电流的周期和频率．
@@ -353,7 +353,7 @@ $LC$回路的周期和频率跟哪些因素有关呢？让我们改变
 
 
 
-无线电技术中使用的电磁波通常叫做\textbf{无线电波}．
+无线电技术中使用的电磁波通常叫做\NoteBold{无线电波}．
 无线电波的波长从几毫米到几十千米．
 例如中央人民广播电台发射一种频率为15.55兆赫的无线电波，波长为19.3米．通常根
 据波长或频率把无线电波分成几个波段，如表~\ref{tab_C_4-1} 所示．
@@ -395,9 +395,9 @@ $LC$回路的周期和频率跟哪些因素有关呢？让我们改变
 无线电技术中发射信号，先把要传递的信号转变为电信号．
 这种电信号频率比较低，不能直接用来发射电磁波．
 如果把这种电信号“加”到高频等幅振荡电流上，那么，载有信号的高频振荡电流产生的电磁波就载着要传递的信号一起发射出去．
-把要传递的电信号“加”到高频等幅振荡电流上叫做\textbf{调制}．进行调制的装置叫做\textbf{调制器}．要传递的电信号叫做调制信号．
+把要传递的电信号“加”到高频等幅振荡电流上叫做\NoteBold{调制}．进行调制的装置叫做\NoteBold{调制器}．要传递的电信号叫做调制信号．
 
-常用的调制方法有\textbf{调幅}和\textbf{调频}．
+常用的调制方法有\NoteBold{调幅}和\NoteBold{调频}．
 调幅是使高频振荡电流的振幅随着调制信号而改变．
 调频是使高频振荡电流的频率随着调制信号而改变．
 
@@ -440,7 +440,7 @@ $LC$回路的周期和频率跟哪些因素有关呢？让我们改变
 接在振荡器和线圈$L_2$之间的话筒就是一个最简单的调制器．由声源发出的声音振动使话筒里的碳粒发生时松时紧的变化，它的电阻也发生时大时小的变化．
 所以，虽然振荡器产生的是高频等幅振荡电流
 （图~\ref{fig_C_4-14b}），但在线圈$L_2$中通过的却是振幅随声音而改变的高频调幅电流（图~\ref{fig_C_4-14c}）．由于$L_2$和$L_1$的互感作用，通过开放电路中的也是这种高频调幅电流．
-于是从开放电路就发射出振幅随声音而改变的电磁波．这种电磁波叫做\textbf{调幅波}．
+于是从开放电路就发射出振幅随声音而改变的电磁波．这种电磁波叫做\NoteBold{调幅波}．
 
 根据这节和前节所讲的，我们看到，在电磁波的发送中必须有振荡器、调制器、天线和地线．振荡器产生高频等幅振荡电流，经过调制器后，成为被调制的高频振荡电流，于是开放电路就发射出带有调制信号的电磁波．为了使电磁波能传得
 很远，还需要用放大器把被调制的高频振荡电流加以放大，以增强开放电路发射电磁波的功率．
@@ -459,7 +459,7 @@ $LC$回路的周期和频率跟哪些因素有关呢？让我们改变
 我们首先要从这些电台发出的电磁波中把我们要接收的选出来，通常这叫做选台．不进行选台，例如在收音机中，如果同时把各个广播电台发出的电磁波都接收下来，
 并且把它们都转变成声音，那只能是一片嘈杂声，什么也听不清楚．怎样才能从许多电台中选出我们需要的那个电台呢？这就要设法使它发出的电磁波在接收电路里激起的感生电流最强，而其他电台发出的电磁波激起的感生电流都非常弱．
 
-在无线电技术里是利用\textbf{电谐振}现象来实现这一点的．
+在无线电技术里是利用\NoteBold{电谐振}现象来实现这一点的．
 电谐振相当于机械振动中的共振，下面说明这种现象．
 
 用莱顿瓶\footnote{莱顿瓶是由玻璃圆筒和贴在玻璃筒内外面上的锡箔构成的．它是一个电容器，两层锡箔是电容器的两极，它们之间的玻璃是电介质．内层的锡箔跟伸到瓶口外的带有金属球的金属棒相连接．}和带有间隙$AB$的矩形线圈组成第一个电路
@@ -490,7 +490,7 @@ $LC$回路的周期和频率跟哪些因素有关呢？让我们改变
 上面的实验说明激起的振荡电流的强弱跟接收电路的固有频率有关系．当两个线圈的大小完全相同时，它们的自感是相同的；而两个莱顿瓶是一样的，它们的电容也相同．因此两个电路的固有频率相同．
 这就是说，当接收电路的固有频率跟接收到的电磁波的频率相同时，激起的振荡电流最强，这就是电谐振现象．
 
-使接收电路产生电谐振的过程叫做\textbf{调谐}．
+使接收电路产生电谐振的过程叫做\NoteBold{调谐}．
 能够调谐的接收电路叫做调谐电路．
 
 
@@ -510,7 +510,7 @@ $LC$回路的周期和频率跟哪些因素有关呢？让我们改变
 高频电流的周期非常短，半周期更短，而振动片的惯性相当大，所以在振动片还没有来得及在电流的作用下向某个方向运动的时候，就立刻有一个几乎同样大的作用要使它向反方向运动，结果振动片实际上不发生振动．
 因此，在电磁波的接收中还必须设法从经过调制的高频振荡电流中取出发射时加上去的调制信号．
 
-从经过调制的高频振荡电流中取出调制信号的过程，叫做\textbf{检波}．检波是调制的逆过程，也叫做\textbf{解调}．由于调制的方法不同，检波的方法也不同．
+从经过调制的高频振荡电流中取出调制信号的过程，叫做\NoteBold{检波}．检波是调制的逆过程，也叫做\NoteBold{解调}．由于调制的方法不同，检波的方法也不同．
 下面介绍收音机中对调幅波的检波．
 \begin{figure}[htbp]
     \centering
