--- a/1/C/05.tex
+++ b/1/C/05.tex
@@ -25,7 +25,7 @@
 们反射光．
 
 电灯、蜡烛、太阳、萤火虫等，能够自行发光，我们把这样
-的物体叫做\textbf{光源}．
+的物体叫做\NoteBold{光源}．
 
 光具有能量，它可以使物体变热，使照相底片感光，使光
 电池供电．
@@ -45,7 +45,7 @@
 \end{figure}
 
 在研究光的传播规律时，为了方便，常用一条直线来表示
-光的传播方向，这样的直线，叫做\textbf{光线}．光线是个很有用的概
+光的传播方向，这样的直线，叫做\NoteBold{光线}．光线是个很有用的概
 念，利用光线我们就可以用几何学的方法来研究光的传播问题．
 应该注意的是，光线并不是实际存在的东西．
 实际中只
@@ -205,15 +205,15 @@ $$c=299792458\Ums$$
 当光从一种媒质射入另一种媒质，例如
 从空气射入玻璃或水里时，在两种媒质的分界面上，光将改变
 传播方向，一部分光被反射回原来的媒质中．
-这种现象叫做\textbf{光的反射}．
+这种现象叫做\NoteBold{光的反射}．
 
-我们在初中学过，光的反射遵守下面的\textbf{反射定律}（图~\ref{fig_C_5-7}）：
+我们在初中学过，光的反射遵守下面的\NoteBold{反射定律}（图~\ref{fig_C_5-7}）：
 
 
-（1）\textit{反射光线跟入射光线和法线在同一平面上，反射光
+（1）\NoteUnderWave{反射光线跟入射光线和法线在同一平面上，反射光
 线和入射光线分居在法线的两侧}；
 
-（2）\textit{反射角等于入射角}．
+（2）\NoteUnderWave{反射角等于入射角}．
 
 
 根据光的反射定律，如果使光线沿着反射光线的路径射
@@ -272,7 +272,7 @@ $AC$和$BE$是从它们的反向延长线的交点$S'$射来的．
 同学们自己证明一下），$S'$就是$S$在平面镜中的像．
 因为光
 线实际上不是从$S'$发出的，$S'$并不是光线的实际交点，而是
-光线的反向延长线的交点，所以光学中把这样的像叫做\textbf{虚像}．
+光线的反向延长线的交点，所以光学中把这样的像叫做\NoteBold{虚像}．
 
 从$S$点发出的垂直于镜面的光线$SO$，经镜面反射后，沿
 原路返回．这条反射光线的反向延长线也通过$S'$点．根据
@@ -342,8 +342,8 @@ $AC$和$BE$是从它们的反向延长线的交点$S'$射来的．
 \end{enumerate}
     
 \section{球面镜}
-反射面是球面一部分的镜叫做\textbf{球面镜}．用球面的内表面
-作反射面的叫做\textbf{凹镜}，用球面的外表面作反射面的叫做\textbf{凸镜}．
+反射面是球面一部分的镜叫做\NoteBold{球面镜}．用球面的内表面
+作反射面的叫做\NoteBold{凹镜}，用球面的外表面作反射面的叫做\NoteBold{凸镜}．
 
 \subsection{球面镜的焦点和焦距}
 
@@ -419,7 +419,7 @@ $P$的直线叫做主光轴，简称主轴．靠近主轴射向镜面的光线
 地方，用一张透明纸作光屏，在蜡烛和凹镜之间移动光屏，直
 到在光屏上出现清晰的蜡烛的像．可以看到，这时的像是倒
 立缩小的（图~\ref{fig_C_5-16a}）．这个像是由反射光线实际会聚而成
-的，能够用光屏接收到，所以光学中把这样的像叫做\textbf{实像}．
+的，能够用光屏接收到，所以光学中把这样的像叫做\NoteBold{实像}．
 把蜡烛向凹镜移近，同时使光屏远离凹镜，当蜡烛位于二
 倍焦距以内焦点以外时，从光屏上可以看到倒立放大的实像
 （图~\ref{fig_C_5-16b}）．使蜡灿进一步靠近镜面，当蜡烛位于焦点以内
@@ -487,7 +487,7 @@ $P$的直线叫做主光轴，简称主轴．靠近主轴射向镜面的光线
 回到空气中；另一部分光线射入玻璃中，并改变了原来的传播
 方向（图~\ref{fig_C_5-19}）．光从一种媒质
 射入另一种媒质时，传播方向
-发生改变的现象，叫做\textbf{光的折射}．
+发生改变的现象，叫做\NoteBold{光的折射}．
 \begin{figure}[htbp]
     \centering
     \includegraphics{fig/C/5-19.pdf}
@@ -537,13 +537,13 @@ $P$的直线叫做主光轴，简称主轴．靠近主轴射向镜面的光线
 
 人们在研究折射现象时早已发现，折射光线位于入射光
 线和法线所在的平面上，折射光线和入射光线分居在法线的两侧．
-结合斯涅耳的发现，我们可以把光的\textbf{折射定律}表述
+结合斯涅耳的发现，我们可以把光的\NoteBold{折射定律}表述
 如下：
 
-（1）\textit{折射光线在入射光线和法线所在的平面上，
+（1）\NoteUnderWave{折射光线在入射光线和法线所在的平面上，
 折射光线和入射光线分居在法线的两侧}；
 
-（2）\textit{入射角的正弦跟折射角的正弦之比为一常数}，即
+（2）\NoteUnderWave{入射角的正弦跟折射角的正弦之比为一常数}，即
 \[\frac{\sin i}{\sin r}=\text{常数}\]
 
 
@@ -573,14 +573,14 @@ $P$的直线叫做主光轴，简称主轴．靠近主轴射向镜面的光线
 但是对不同的媒质来说，这个常数是不同的．例如，光从空气射
 入玻璃时，这个常数约为1.50；光从空气射入水中时，这个常
 数约为1.33．可见这个常数跟媒质有关系，是一个反映媒质
-的光学性质的物理量，我们把它叫做媒质的\textbf{折射率}．如果用$n$
+的光学性质的物理量，我们把它叫做媒质的\NoteBold{折射率}．如果用$n$
 表示折射率，那么，
 \[n=\frac{\sin i}{\sin r}\]
 
 在折射现象中，光通过两种媒质，所以折射率与两种媒质
 有关系．
 设光由媒质I射入媒质II，确切地说，这个折射率叫
-做媒质II对媒质I的\textbf{相对折射率}，通常用$n_{21}$来表示．例如
+做媒质II对媒质I的\NoteBold{相对折射率}，通常用$n_{21}$来表示．例如
 玻璃对空气的相对折射率是1.50，水对空气的相对折射率是1.33．
 
 光在不同媒质中的速度不同．研究表明，媒质的折射率
@@ -593,7 +593,7 @@ $P$的直线叫做主光轴，简称主轴．靠近主轴射向镜面的光线
 光在每种媒质中的速度是一定的，所以光从一种媒质射
 入另一种媒质时折射率是一个常数．
 
-光从真空射入某种媒质时的折射率，叫做该种媒质的\textbf{绝
+光从真空射入某种媒质时的折射率，叫做该种媒质的\NoteBold{绝
 对折射率}．
 通常用$n$表示．以后我们提到某种媒质的折射率
 时，就是指这种媒质的绝对折射率．
@@ -636,8 +636,8 @@ $$n_{21}=\frac{v_1}{v_2}=\frac{n_2}{n_1}=\frac{1.51}{1.33}=1.14$$
 \[n_{21}=\frac{1}{n_{12}},\qquad n_{12}=\frac{1}{n_{21}}  \]
 
 对于两种媒质来说，光在其中传播速度较小的，绝对折射
-率较大，叫做\textbf{光密媒质}；光在其中传播速度较大的，绝对折射
-率较小，叫做\textbf{光疏媒质}．光密媒质和光疏媒质是相对而言的．
+率较大，叫做\NoteBold{光密媒质}；光在其中传播速度较大的，绝对折射
+率较小，叫做\NoteBold{光疏媒质}．光密媒质和光疏媒质是相对而言的．
 例如水跟空气相比，水是光密媒质；水跟玻璃相比，水是光疏
 媒质．
 
@@ -753,7 +753,7 @@ i'&=i
 折射光线越来越弱，反射光线越来越强．
 当入射角增大到某
 一角度时，折射光线消失，只剩下反射光线，光全部反射回玻璃中．
-这种现象叫做\textbf{全反射}．
+这种现象叫做\NoteBold{全反射}．
 \begin{figure}[htbp]
 	\centering
 	\includegraphics{fig/C/5-23.pdf}
@@ -762,7 +762,7 @@ i'&=i
 
 \subsection{临界角}
 
-折射角等于90$^\circ$时的入射角叫做\textbf{临界角}．光线
+折射角等于90$^\circ$时的入射角叫做\NoteBold{临界角}．光线
 从光密媒质射入光疏媒质，当入射角大于临界角时，就发生全
 反射现象．
 
@@ -935,7 +935,7 @@ i'&=i
 \end{figure}
 
 让一束白光射向玻璃棱镜，可以看到，白光通过棱镜后，
-发生\textbf{色散}，在光屏上形成一条彩色的光带（图~\ref{fig_C_5-32}），叫做\textbf{光
+发生\NoteBold{色散}，在光屏上形成一条彩色的光带（图~\ref{fig_C_5-32}），叫做\NoteBold{光
 谱}．红光在最上端，紫光在最下端，中间是橙、黄、绿、蓝等色．
 这表明各种色光通过棱镜后的偏折角度不同．红光的偏折角
 度最小，紫光的偏折角度最大．
@@ -975,7 +975,7 @@ i'&=i
 \subsection{全反射棱镜}
 
 从练习五的第 \ref{exe_C_5-5.2} 题知道，横截面为等腰直
-角三角形的玻璃棱镜对光能起全反射作用，这种棱镜叫做\textbf{全
+角三角形的玻璃棱镜对光能起全反射作用，这种棱镜叫做\NoteBold{全
 反射棱镜}．
 
 通常用的反光镜背面都镀有一层银膜，靠这层银膜来反
@@ -1013,17 +1013,17 @@ i'&=i
 
 \section{透镜}
 折射面是两个球面，或者一个是球面，另一个是平面的透
-明体，叫做\textbf{透镜}．透镜通常是用玻璃磨成的，它是光学仪器中
+明体，叫做\NoteBold{透镜}．透镜通常是用玻璃磨成的，它是光学仪器中
 经常使用的基本元件．
 
 \subsection{凸透镜和凹透镜}
 
 透镜可分为两类．一类是中间厚、边缘
-薄的，叫做\textbf{凸透镜}．
-凸透镜对光线起会聚作用，又叫做\textbf{会聚透
+薄的，叫做\NoteBold{凸透镜}．
+凸透镜对光线起会聚作用，又叫做\NoteBold{会聚透
 镜}．
-另一类是中间薄、边缘厚的，叫做\textbf{凹透镜}．凹透镜对光线
-起发散作用，又叫做\textbf{发散透镜}．
+另一类是中间薄、边缘厚的，叫做\NoteBold{凹透镜}．凹透镜对光线
+起发散作用，又叫做\NoteBold{发散透镜}．
 \begin{figure}[htbp]
     \centering
     \includegraphics{fig/C/5-34.pdf}
@@ -1046,7 +1046,7 @@ i'&=i
 透镜的两个球面都有自己的
 球心，如图~\ref{fig_C_5-35} 中的$C_1$、$C_2$所示．
 我们把通过两球心$C_1$、$C_2$
-的直线，叫做透镜的\textbf{主光轴}，简称主轴．通常把厚度比球面的
+的直线，叫做透镜的\NoteBold{主光轴}，简称主轴．通常把厚度比球面的
 半径小得多的透镜，叫做薄透镜．我们在后面讨论的都是薄
 透镜．
 \begin{figure}[htbp]
@@ -1056,17 +1056,17 @@ i'&=i
 \end{figure}
 
 主轴跟透镜的两面各有一个交点，对于薄透镜来说，这两
-个交点可以看作是重合在一起的，这一点叫做透镜的\textbf{光心}，用
+个交点可以看作是重合在一起的，这一点叫做透镜的\NoteBold{光心}，用
 $O$表示．透镜的中央部分相当于两面平行的薄玻璃板，通过
 光心的光线相当于通过这个薄玻璃板，因此，不管从任何方向
 通过光心的光线，传播方向都不改变．
 这是光心的重要性质．
 
 平行于主轴的光线，通过凸透镜后会聚于主轴上的一点
-（图~\ref{fig_C_5-36a} $F'$），这个点叫做\textbf{凸透镜的焦点}．平行于主轴的
+（图~\ref{fig_C_5-36a} $F'$），这个点叫做\NoteBold{凸透镜的焦点}．平行于主轴的
 光线通过凹透镜后变得发散（图~\ref{fig_C_5-36b}），这些发散光线看起
 来好像是从它们的反向延长线的交点$F'$发出来的，点$F'$也
-在主轴上，叫做\textbf{凹透镜的焦点}．凸透镜的焦点是实焦点，凹透
+在主轴上，叫做\NoteBold{凹透镜的焦点}．凸透镜的焦点是实焦点，凹透
 镜的焦点是虚焦点．
 \begin{figure}[htbp]
     \centering
@@ -1084,7 +1084,7 @@ $O$表示．透镜的中央部分相当于两面平行的薄玻璃板，通过
     \caption{}\label{fig_C_5-36}
 \end{figure}
 
-从透镜的焦点到光心的距离，叫做透镜的\textbf{焦距}，用$f$表
+从透镜的焦点到光心的距离，叫做透镜的\NoteBold{焦距}，用$f$表
 示．透镜的两侧各有一个焦点，只要透镜两侧的媒质相同，两
 个焦点对光心是对称的，两个焦距相等．
 后面讨论的都是这
@@ -1347,7 +1347,7 @@ $AE$、$BD$经过凸透镜折射后的传播方向．
 
 透镜所成的像跟物体相比，可以是放大或
 缩小的，也可以跟物体大小相等．为了说明像的放大情况，我
-们把像的长度$A'B'$跟物体的长度$AB$之比，叫做\textbf{像的放大率}，
+们把像的长度$A'B'$跟物体的长度$AB$之比，叫做\NoteBold{像的放大率}，
 并且用$m$表示．
 即放大率
 \[m=\frac{A'B'}{AB} \]
@@ -1440,9 +1440,9 @@ $\dfrac{1}{u}+\dfrac{1}{v}=\dfrac{1}{f}$，
 
 眼睛的主要构造如图~\ref{fig_C_5-49} 所示．
 最外层的无色透明部
-分叫做\textbf{角膜}，中间的透明囊状物叫做\textbf{晶状体}，晶状体和前面的
-角膜之间充满着无色透明的液体——\textbf{房水}，晶状体和后面
-的视网膜之间充满着无色透明的胶状物质——\textbf{玻璃体}．角膜、
+分叫做\NoteBold{角膜}，中间的透明囊状物叫做\NoteBold{晶状体}，晶状体和前面的
+角膜之间充满着无色透明的液体——\NoteBold{房水}，晶状体和后面
+的视网膜之间充满着无色透明的胶状物质——\NoteBold{玻璃体}．角膜、
 房水、晶状体和玻璃体都对光线产生折射，它们的共同作用
 相当于一个凸透镜，这个凸透镜的前焦点约在角膜前1.5厘米
 处，后焦点约在角膜后2.0厘米处．用眼晴观察的物体，距离
@@ -1471,17 +1471,17 @@ $\dfrac{1}{u}+\dfrac{1}{v}=\dfrac{1}{f}$，
 论是远处的物体还是近处的物体都能在视网膜上成清晰的
 像．可见，眼睛是一个精巧的变焦距系统，在物距改变时，它
 能靠改变晶状体的弯曲程度来改变焦距．眼睛的这种作用叫
-做\textbf{眼睛的调节}．
+做\NoteBold{眼睛的调节}．
 
 眼睛的调节是有限度的．
 晶状体变得最扁时能够看到的
-最远点，叫做眼睛的\textbf{远点}．正常眼睛的远点在无限远处．
+最远点，叫做眼睛的\NoteBold{远点}．正常眼睛的远点在无限远处．
 就是说，从无限远处的物体射入眼睛的平行光线，它们的像恰好
 能成在视网膜上．晶状体变得最凸时能看清的最近点，叫做
-眼睛的\textbf{近点}．正常眼睛的近点约在离眼睛10厘米的地方．所
+眼睛的\NoteBold{近点}．正常眼睛的近点约在离眼睛10厘米的地方．所
 以靠眼睛的调节能看清的范围是从离眼睛10厘米到无限远处．
 在合适的照明情况下，正常的眼睛看距眼睛25厘米远的
-物体，不容易感到疲劳，因此把距眼睛25厘米的距离叫做\textbf{明
+物体，不容易感到疲劳，因此把距眼睛25厘米的距离叫做\NoteBold{明
 视距离}．
 
 \subsection{近视眼和远视眼~~眼镜}
@@ -1541,7 +1541,7 @@ $\dfrac{1}{u}+\dfrac{1}{v}=\dfrac{1}{f}$，
 
 \subsection{视角}
 
-物体对眼的光心$O$所张的角，叫做\textbf{视角}．从图~\ref{fig_C_5-52} 中可以看出，物体在视网膜上所成的像的大小决定于视角．
+物体对眼的光心$O$所张的角，叫做\NoteBold{视角}．从图~\ref{fig_C_5-52} 中可以看出，物体在视网膜上所成的像的大小决定于视角．
 视角越大，所成的像越大，视网膜上受到刺激的感光细胞就越
 多，眼睛对物体看得就越清楚．同一个物体，离眼睛近时视角
 大，在视网膜上所成的像也大；离眼睛远时视角小，在视网膜
@@ -1580,7 +1580,7 @@ $\dfrac{1}{u}+\dfrac{1}{v}=\dfrac{1}{f}$，
 镜筒两端的两组透镜．
 每组透
 镜都相当于一个凸透镜．靠近
-被观察物体的一组透镜叫做\textbf{物镜}，靠近眼睛的一组透镜叫做\textbf{目镜}．
+被观察物体的一组透镜叫做\NoteBold{物镜}，靠近眼睛的一组透镜叫做\NoteBold{目镜}．
 物镜的焦距很短，目镜的
 焦距较长．
 
