--- a/1/C/06.tex
+++ b/1/C/06.tex
@@ -13,9 +13,9 @@
 
 \section{光的微粒说和波动说}
 光的本性问题很早就引起了人们的注意．到了十七世纪，
-形成了两种学说．一种是牛顿主张的\textbf{微粒说}，认为光是从光
+形成了两种学说．一种是牛顿主张的\NoteBold{微粒说}，认为光是从光
 源发出的一种物质微粒，在均匀媒质中以一定的速度传播．另
-一种是惠更斯（$1629 \sim 1695$）提出的\textbf{波动说}，认为光是某种振
+一种是惠更斯（$1629 \sim 1695$）提出的\NoteBold{波动说}，认为光是某种振
 动，以波的形式向周围传播．
 
 微粒说很容易解释光的直进现象，解释光的反射也很容
@@ -550,7 +550,7 @@ $\lambda/2$的奇数倍，两列波到达$P$点时反相，因而互相削弱，
 只要狭缝的方向跟绳的振动方向相同，绳上的横波就
 可以毫无阻碍地传过去；如果把狭缝的方向旋转90$^\circ$，绳上的
 横波就不能通过了．
-这种现象叫做横波的\textbf{偏振}．纵波是沿着
+这种现象叫做横波的\NoteBold{偏振}．纵波是沿着
 波的传播方向振动的，不论狭缝方向如何，纵波都可以传过
 去，不会发生偏振现象（图~\ref{fig_C_6-12}）．
 \begin{figure}[htbp]
@@ -600,10 +600,10 @@ $\lambda/2$的奇数倍，两列波到达$P$点时反相，因而互相削弱，
 源发出的光，包含着在垂直于传播方向上沿一切方向振动的
 光，并没有一个占优势的方向，也就是说，沿着各个方向振动
 的光波强度都相同．
-这种光叫做\textbf{自然光}．自然光通过第一个
+这种光叫做\NoteBold{自然光}．自然光通过第一个
 晶片（叫做起偏器）后，相当于被一个“狭缝”卡了一下，只有振
 动方向跟“狭缝”方向一致的光波才能通过（图~\ref{fig_C_6-13}），这种振
-动方向一定的光叫做\textbf{偏振光}．每个偏振片上都有一条标线，表
+动方向一定的光叫做\NoteBold{偏振光}．每个偏振片上都有一条标线，表
 示的就是偏振片允许通过的偏振光的振动方向，这个方向叫
 做偏振片的偏振化方向．
 自然光通过第一个晶片后虽然变成
@@ -715,7 +715,7 @@ $\lambda/2$的奇数倍，两列波到达$P$点时反相，因而互相削弱，
 十九世纪六十年代，麦克斯韦在研究电磁场理论时预见
 了电磁波，并且指出电磁波是横波，电磁波的传播速度等于光
 速．麦克斯韦根据电磁波跟光波的这些相似性指出，光波是
-一种电磁波，这就是\textbf{光的电磁说}．
+一种电磁波，这就是\NoteBold{光的电磁说}．
 
 二十多年以后，赫兹用实验证实了电磁波的存在，测得电
 磁波的传播速度确实等于光速，而且电磁波也能产生反射、折
@@ -749,7 +749,7 @@ $\lambda/2$的奇数倍，两列波到达$P$点时反相，因而互相削弱，
 的，他用灵敏温度计研究光谱里各种色光的热作用时，把温度
 计移到光谱的红光区域外侧，它的温度上升得更高，说明那里
 有看不见的射线照射到温度计上．
-这种射线后来就叫做\textbf{红外线}．
+这种射线后来就叫做\NoteBold{红外线}．
 给电炉丝通电，电炉丝的温度大约上升到$500\Ucede$以上时，
 才开始发出暗红色的光，随着温度的升高，它逐渐变成橙色、
 黄色；但在电炉丝发光之前，我们就已感到热了．
@@ -773,7 +773,7 @@ $\lambda/2$的奇数倍，两列波到达$P$点时反相，因而互相削弱，
 外线，并且不同的物体辐射的红外线的波长和强度不同，利用
 灵敏的红外线探测器吸收物体发出的红外线，然后用电子仪
 器对接收到的信号进行处理，就可以察知被探测物体的特征．
-这种技术叫做\textbf{红外线遥感}．利用红外线遥感技术，可以在飞
+这种技术叫做\NoteBold{红外线遥感}．利用红外线遥感技术，可以在飞
 机或卫星上勘测地热、寻找水源、监测森林火情、估计农作物
 的长势和收成、预报台风寒潮等．红外线遥感技术的应用范
 围极其广泛，还在迅速发展中．
@@ -782,7 +782,7 @@ $\lambda/2$的奇数倍，两列波到达$P$点时反相，因而互相削弱，
 
 紫外线是德物理学家里特在1801年发现的．
 如果在光谱的紫外区域放一张照相底片，或者放一个光敏电
-阻，都能够察知\textbf{紫外线}的存在．紫外线的波长比紫光还短．一
+阻，都能够察知\NoteBold{紫外线}的存在．紫外线的波长比紫光还短．一
 切高温物体，如太阳、弧光灯发出的光都含有紫外线，利用气
 体放电也可以激发紫外线．紫外线的主要作用是化学作用．
 紫外线很容易使照相底片感光．用紫外线照相能辨认出细微
@@ -801,7 +801,7 @@ $\lambda/2$的奇数倍，两列波到达$P$点时反相，因而互相削弱，
 上防护面罩．
 
 \subsection{伦琴射线}
-比紫外线波长还短的电磁波，有\textbf{伦琴射线}．德
+比紫外线波长还短的电磁波，有\NoteBold{伦琴射线}．德
 国物理学家伦琴（$1845 \sim 1923$）在1895年研究阴极射线的性质
 时，发现阴极射线的高速电子流射到玻璃管壁上，管壁会发出
 一种看不见的射线，这种射线的穿透本领很大，能使放在厚纸
@@ -837,7 +837,7 @@ $\lambda/2$的奇数倍，两列波到达$P$点时反相，因而互相削弱，
 \subsection{电磁波谱}
 
 无线电波、红外线、可见光、紫外线、伦琴射
-线、$\gamma$射线合起来，构成了范围非常广阔的\textbf{电磁波谱}（图~\ref{fig_C_6-17}），其中最长的波长是最短的波长的$10^{21}$倍以上．
+线、$\gamma$射线合起来，构成了范围非常广阔的\NoteBold{电磁波谱}（图~\ref{fig_C_6-17}），其中最长的波长是最短的波长的$10^{21}$倍以上．
 从图中
 可以看出，各种电磁波的范围已经衔接起来，并且发生了交错．
 例如长波的红外线和微波已经重叠，短波的紫外线已经
@@ -894,10 +894,10 @@ $\lambda/2$的奇数倍，两列波到达$P$点时反相，因而互相削弱，
 
 \subsection{发射光谱}
 
-物体发光直接产生的光谱叫做\textbf{发射光谱}．发
+物体发光直接产生的光谱叫做\NoteBold{发射光谱}．发
 射光谱有两种类型；连续光谱和明线光谱．
 
-连续分布的包含有从红光到紫光各种色光的光谱叫做\textbf{连续光谱}（图~\ref{fig_C_0-6-7-8-9}）．
+连续分布的包含有从红光到紫光各种色光的光谱叫做\NoteBold{连续光谱}（图~\ref{fig_C_0-6-7-8-9}）．
 炽热的固体、液体和高压气体的发射光谱
 是连续光谱．例如电灯丝发出的光、炽热的钢水发出的光都
 形成连续光谱．
@@ -909,10 +909,10 @@ $\lambda/2$的奇数倍，两列波到达$P$点时反相，因而互相削弱，
 \end{figure}
 
 
-只含有一些不连续的亮线的光谱叫做\textbf{明线光谱}（图~\ref{fig_C_0-6-7-8-9}）．
+只含有一些不连续的亮线的光谱叫做\NoteBold{明线光谱}（图~\ref{fig_C_0-6-7-8-9}）．
 明线光谱中的亮线叫做谱线，各条谱线对应于不同波长的光．
 稀薄气体或金属的蒸气的发射光谱是明线光谱．明线光谱是
-由游离状态的原子发射的，所以也叫\textbf{原子光谱}．
+由游离状态的原子发射的，所以也叫\NoteBold{原子光谱}．
 
 
 观察气体的原子光谱，可以使用光谱管（图~\ref{fig_C_6-19}），它是
@@ -935,13 +935,13 @@ $\lambda/2$的奇数倍，两列波到达$P$点时反相，因而互相削弱，
 的原子都有一定的明线光谱．
 几种元素（$\rm{Na}$、$\rm{H}$、$\rm{Hg}$、$\rm{Cu}$）的明线光谱见图~\ref{fig_C_0-6-7-8-9}．
 每种原子只能发出具有本身特征的某些波长的光，因此，
-明线光谱的谱线叫做原子的\textbf{特征谱线}．利用原子的特征谱线
+明线光谱的谱线叫做原子的\NoteBold{特征谱线}．利用原子的特征谱线
 可以鉴别物质和研究原子的结构．
 
 \subsection{吸收光谱}
 高温物体发出的白光（其中包含连续分布的
 一切波长的光）通过物质时，某些波长的光被物质吸收后产生
-的光谱，叫做\textbf{吸收光谱}．例如，让弧光灯发出的白光通过温度
+的光谱，叫做\NoteBold{吸收光谱}．例如，让弧光灯发出的白光通过温度
 较低的钠气（在酒精灯的灯心上放一些食盐，食盐受热分解就
 会产生钠气），然后用分光镜来观察，就会看到在连续光谱的
 背景中有两条挨得很近的暗线（见图~\ref{fig_C_0-6-7-8-9}．分光镜的分辨率本领不够高时，只能看见一条暗线）．
@@ -956,7 +956,7 @@ $\lambda/2$的奇数倍，两列波到达$P$点时反相，因而互相削弱，
 \subsection{光谱分析}
 
 由于每种原子都有自己的特征谱线，因此可
-以根据光谱来鉴别物质和确定它的化学组成．这种方法叫做\textbf{光谱分析}．
+以根据光谱来鉴别物质和确定它的化学组成．这种方法叫做\NoteBold{光谱分析}．
 做光谱分析时，可以利用发射光谱，也可以利用吸
 收光谱．这种方法的优点是非常灵敏而且迅速．某种元素在
 物质中的含量达$10^{-10}$克，就可以从光谱中发现它的特征谱
