--- a/1/C/app_02.tex
+++ b/1/C/app_02.tex
@@ -89,7 +89,7 @@
 光；接触的是地线时，小氖灯不发光．这样就可以辨别出火线
 和地线．
 
-要注意：\textit{手的任何部位都不要接触前面的钉子}，因为它
+要注意：\NoteUnderWave{手的任何部位都不要接触前面的钉子}，因为它
 接触的可能是火线，会使人触电．
 
 \section{测定水的折射率}
