--- a/physics.tex
+++ b/physics.tex
@@ -1,9 +1,7 @@
 \documentclass{retypeset}
 
 
-\usepackage{tabularray}
-\UseTblrLibrary{booktabs}
-\UseTblrLibrary{diagbox}
+
 
 \begin{document}
 	
@@ -26,7 +24,7 @@
 	
 	%正文内容
 	%\include{1/A/01} %力
-	%\include{1/A/02} %直线运动
+	\include{1/A/02} %直线运动
 	%\include{1/A/03} %运动定律
 	%\include{1/A/04} %曲线运动
 	%\include{1/A/05} %万有引力定律
@@ -81,7 +79,7 @@
 	%封面内容
 	%\title{\Huge\bfseries 高中物理（甲种本）\\ 第三册\vspace*{2cm} }
 	%\author{\Large 张同恂\and \Large 方玉珍\and \Large 马淑美}
-	%\date{\Large 1985年11月\\~\\~\\ \includegraphics[scale=1.8]{fig/C/cover.pdf}}
+	%\date{\Large 1985年11月\\~\\~\\ %\includegraphics[scale=1.8]{fig/C/cover.pdf}}
 	
 	%\maketitle %封面
 	%\tableofcontents %目录
@@ -100,11 +98,11 @@
 	%\include{1/C/08} %原子结构
 	%\include{1/C/09} %原子核
 	
-	\include{1/C/app_01} %学生实验
-	\include{1/C/app_02} %课外实验活动
+	%\include{1/C/app_01} %学生实验
+	%\include{1/C/app_02} %课外实验活动
 	
-	\appendix
-	\include{1/C/app_03} %附录
+	%\appendix
+	%\include{1/C/app_03} %附录
 	
 \end{document}
 
