--- a/1/A/07.tex
+++ b/1/A/07.tex
@@ -4,7 +4,7 @@
 功这个概念是十九世纪当人们广泛使用各种机械时在力学中出现的．从人的劳动到各种机械的工作，人们发现它们有一个共同的特点：有力作用在物体上，而且物体在力的作用下发生一段位移．引入功的概念，就是为了反映这个共同的特点．一个物体受到力的作用，如果在力的方向上发生一段位移，物理学中就说这个力对物体做了功．人推车前进，车在人的推力下发生一段位移，推力对车做了功．起重机提起货物，货物在起重机钢绳的拉力下发生一段位移，拉力对货物做了功．机车牵引列车前进，列车在机车的牵引力下发生位移，牵引力对列车做了功．
 
 如果有力作用在物体上，而物体没有在这个力的方向发生位移，这个力对物体就没有做功．一个人举着一个物体不动，他虽然对这个物体作用一个向上的支持力，但这个支持力对物体并没有做功．人用力推一个笨重的物体而没有推动，他虽然对这个物体作用一个向前的推力，这个推力也没有对物体做功．人在水平面上推车前进，重力并没有对车做功，因为重力的方向是竖直向下的，车虽然发生了位移，但在重力的方向上却没有位移．功这个概念和一般所说的“做工”或“工作”
-含意不同．在物理学中，\textit{力和物体在力的方向上发生的位移，是做功的两个不可缺少的因素}．
+含意不同．在物理学中，\NoteUnderWave{力和物体在力的方向上发生的位移，是做功的两个不可缺少的因素}．
 
 \subsection{功的公式}
 
@@ -28,13 +28,13 @@
     \caption{}\label{fig_A_7-2}
 \end{figure}
 
-这就是说，\textit{力对物体所做的功，等于力的大小、位移的大小、力和位移的夹角的余弦三者的乘积}．
+这就是说，\NoteUnderWave{力对物体所做的功，等于力的大小、位移的大小、力和位移的夹角的余弦三者的乘积}．
 
 这个公式是计算功的一般的公式．
 当$\alpha=0$时，$\cos\alpha=1$，$W=Fs$，这就是初中学过的公式．当$\alpha=\pi/2$时，$\cos\alpha=0$，$W=0$，表示力的方向与位移方向垂直时，力不做功．
 
 功是由力的大小和位移的大小确定的，它没有方向，是一个标量．
-在国际单位制中，功的单位是\textbf{焦耳}，简称焦，国际符号是$\UJA$．
+在国际单位制中，功的单位是\NoteBold{焦耳}，简称焦，国际符号是$\UJA$．
 1焦就是1牛的力使物体在力的方向上发生1米位移所做的功．
 \[1 \UJ=1 \UN \times 1 \Um=1 \UNm \]
 
@@ -65,7 +65,7 @@ $\cos\alpha>0$，$W>0$，即力对物体做正功．人推车前进的时候，$
     \item 在起重机的钢绳上挂着重物，当重物静止时，钢绳的拉力有没有做功？重力有没有做功？
 
     在水平桌面上滚动的小球，桌面对球的支持力有没有做功？重力有没有做功？
-    \item 在厘米$\cdot$克$\cdot$秒制中，功的单位叫做\textbf{尔格}（$\UergA$）．1尔格是1达因（$\Udyn$）的力使物体在力的方向上发生1厘米的位移所做的功．
+    \item 在厘米$\cdot$克$\cdot$秒制中，功的单位叫做\NoteBold{尔格}（$\UergA$）．1尔格是1达因（$\Udyn$）的力使物体在力的方向上发生1厘米的位移所做的功．
     试证明：
     \[1 \UJ=10^7 \Uerg \]
     \item 在水平道路上匀速前进的汽车受到哪些力的作用？其中哪些力做功，哪些力没有做功？哪个力做正功，哪个力做负功？
@@ -98,7 +98,7 @@ $\cos\alpha>0$，$W>0$，即力对物体做正功．人推车前进的时候，$
 说，做功的快慢并不相同．一台起重机在10分钟内可以把1吨重的货物举高到预定的高度，而另一台只用30秒就可以做相同的功，第二台就比第一台做功快19倍．
 
 在物理学上用功率表示做功的快慢．
-\textit{功跟完成这些功所用时间的比值，叫做功率}．如果用$P$表示功率，$W$表示功，$t$表示时间，那么，
+\NoteUnderWave{功跟完成这些功所用时间的比值，叫做功率}．如果用$P$表示功率，$W$表示功，$t$表示时间，那么，
 \[P=\frac{W}{t}\]
 
 在国际单位制中，功率的单位是瓦特，简称瓦，国际符号是$\UWA$．
@@ -156,7 +156,7 @@ $1 \UW = 1 \UJs$．
 关系将会获得进一步的认识．
 
 \section{动能}
-运动着的物体能够做功，因而具有能量．\textit{物体由于运动而具有的能叫做动能}．运动着的子弹、下落的重锤、流动的河水等等都具有动能．一个重锤，它的速度越大，能够做的功越多．在速度相同的情况下，重锤的质量越大，能够做的功越多．可见动能跟运动物体的速度和质量都有关系，速度越大，
+运动着的物体能够做功，因而具有能量．\NoteUnderWave{物体由于运动而具有的能叫做动能}．运动着的子弹、下落的重锤、流动的河水等等都具有动能．一个重锤，它的速度越大，能够做的功越多．在速度相同的情况下，重锤的质量越大，能够做的功越多．可见动能跟运动物体的速度和质量都有关系，速度越大，
 质量越大，动能就越大，一个质量为$m$的物体，以速度$v$运动时，它的动能是多大呢？
 	
 前一节讲过，我们要通过做功来定量地确定能量．设一个原来静止的物体在外力作用下发生一段位移，这时外力对物体做了功．从牛顿第二定律知道，物体在外力的作用下产生加速度，因而在发生这段位移的同时，得到一定的速度，也同时获得了一定的动能．外力对物体做多少功，物体的动能就应该增加多少．我们根据这个就可以定量地确定物体的动能．
@@ -174,10 +174,10 @@ $1 \UW = 1 \UJs$．
 
 我们看到，外力对物体所做的功等于$\dfrac{1}{2}mv^2$这样一个跟
 物体的质量和速度都有关的物理量，在物理学里就用$\dfrac{1}{2}mv^2$
-这个物理量来表示物体的\textbf{动能}．
+这个物理量来表示物体的\NoteBold{动能}．
 如果用$E_K$表示动能，那么	
 \[E_K=\frac{1}{2}mv^2 \]
-这就是说，\textit{物体的动能等于它的质量跟它的速度平方的乘积的一半}．
+这就是说，\NoteUnderWave{物体的动能等于它的质量跟它的速度平方的乘积的一半}．
 
 动能和功一样，也是标量．动能的单位跟功的单位相同，
 在国际单位制里都是焦耳．
@@ -209,11 +209,11 @@ $1 \UW = 1 \UJs$．
 或
 \[W=E_{K2}-E_{K1}\]
 
-可见，\textit{外力对物体所做的功的确等于物体动能的增加}．
+可见，\NoteUnderWave{外力对物体所做的功的确等于物体动能的增加}．
 
 上面我们设外力方向与运动方向相同，导出了关系式$W=E_{K2}-E_{K1}$．这个结论对外力方向与运动方向相反的情形同样适用．在这种情形下，外力所做的功是负值，而物体的运动速度减小，动能的增加也是负值．我们知道，外力对物体做负功，往往说成物体克服这个力做了功．因此，对这种情形，也可以说物体克服阻力所做的功等于动能的减少．例如在粗糙平面上运动的小车，在滑动摩擦力的作用下速度减小，这时动能的减少就等于它克服摩擦力所的功．	
 	
-上述结论是假定物体只受一个力而推导出来的；如物体不只受到一个力，而是受到几个力，上述结论仍旧正确．只是外力所做的功是指各个力所做的功的代数和，即外力所做的总功．这样，我们得到结论：\textbf{外力对物体所做的总功等于物体动能的增加}．这个结论叫做\textbf{动能定理}．
+上述结论是假定物体只受一个力而推导出来的；如物体不只受到一个力，而是受到几个力，上述结论仍旧正确．只是外力所做的功是指各个力所做的功的代数和，即外力所做的总功．这样，我们得到结论：\NoteBold{外力对物体所做的总功等于物体动能的增加}．这个结论叫做\NoteBold{动能定理}．
 
 动能定理是力学中一条重要规律，经常用来解决有关的力学问题．下面举一个例题来说明．
 
@@ -281,7 +281,7 @@ $1 \UW = 1 \UJs$．
    
    动能是和物体运动相联系的，静止的物体没有动能，但不能说它没有能量．除了动能，我们在初中还学过势能．举到高处的重锤具有能量，一旦让它从高处下落，就能够做功．
    拦河筑坝把水位提高，高处的水下落也能够做功（如水力发电）．
-   \textit{物体由于被举高而具有的能叫做重力势能}．举到高处的重锤、储存在高处的水都具有重力势能．
+   \NoteUnderWave{物体由于被举高而具有的能叫做重力势能}．举到高处的重锤、储存在高处的水都具有重力势能．
 
     物体由于被举高才具有重力势能，而物体在举高过程中总是要克服重力做功的．因此，重力势能跟克服重力做功有密切关系．那么，一个质量为$m$的物体，在被举到高度为$h$的
     地方，具有的重力势能是多大呢？
@@ -294,9 +294,9 @@ $1 \UW = 1 \UJs$．
 
     我们设想用一个与重力$mg$
     大小相等方向相反的外力$F$把物体举到高处（图~\ref{fig_A_7-9}）．因为物体是在相互平衡的力作用下被举高的，物体的速度没有变化，所以它的动能也没有变化．我们知道，
-物体被举高了，它的重力势能要增加，在这个过程中，我们克服重力做了功．克服重力做了多少功，重力势能就增加了多少．把物体举到高度为$h$的地方，克服重力所做的功$W=Fh=mgh$．在物理学里就用$mgh$这个物理量来表示物体的\textbf{重力势能}．如果用$E_P$表示重力势能，那么
+物体被举高了，它的重力势能要增加，在这个过程中，我们克服重力做了功．克服重力做了多少功，重力势能就增加了多少．把物体举到高度为$h$的地方，克服重力所做的功$W=Fh=mgh$．在物理学里就用$mgh$这个物理量来表示物体的\NoteBold{重力势能}．如果用$E_P$表示重力势能，那么
 \[E_P =mgh\]
-这就是说，\textit{物体的重力势能等于它的重量和高度的乘积，惑者说，等于物体的质量、重力加速度、高度三者的乘积}．物体的质量越大，高度越大，它的重力势能就越大．
+这就是说，\NoteUnderWave{物体的重力势能等于它的重量和高度的乘积，惑者说，等于物体的质量、重力加速度、高度三者的乘积}．物体的质量越大，高度越大，它的重力势能就越大．
 
 重力势能也是标量．它的单位也和功的单位相同，在国际单位制中都是焦耳．
 
@@ -372,7 +372,7 @@ W_G&= mg\Delta h_1+mg\Delta h_2+mg\Delta h_3+\cdots\\
 	\end{minipage}
 \end{figure}
 
-我们看到，\textit{重力对物体所做的功只跟起点$A$和终点$B$的位置有关，而跟物体运动的路径无关．也就是说，只要起点和终点的位置相同，不论物体沿着什么路径运动，重力所做的功都相同}．
+我们看到，\NoteUnderWave{重力对物体所做的功只跟起点$A$和终点$B$的位置有关，而跟物体运动的路径无关．也就是说，只要起点和终点的位置相同，不论物体沿着什么路径运动，重力所做的功都相同}．
 
 这就是重力做功的特点．并不是任何力做功都有这个特点．摩擦力做功就没有这个特点．
 
@@ -390,7 +390,7 @@ W_G&= mg\Delta h_1+mg\Delta h_2+mg\Delta h_3+\cdots\\
 
 \subsection{势能属于系统} 
 
-重力势能的改变是由重力做功来确定的，而重力是地球和物体之间的相互作用力，重力做功涉及的是重力这种相互作用力以及地球和物体的相对位置，所以严格说来，重力势能是地球和物体共有的，而不是物体单独具有的．在物理学中通常把相互作用的物体的全体叫做\textbf{系统}．
+重力势能的改变是由重力做功来确定的，而重力是地球和物体之间的相互作用力，重力做功涉及的是重力这种相互作用力以及地球和物体的相对位置，所以严格说来，重力势能是地球和物体共有的，而不是物体单独具有的．在物理学中通常把相互作用的物体的全体叫做\NoteBold{系统}．
 重力势能是属于地球和物体所组成的这个系统的．
 通常所说的物体具有多少重力势能，只能理解为一种简略的说法．
 
@@ -423,7 +423,7 @@ W_G&= mg\Delta h_1+mg\Delta h_2+mg\Delta h_3+\cdots\\
 
 
 \section{弹性势能}
-这一节我们研究物体因发生弹性形变而具有的势能，这种势能叫做\textbf{弹性势能}．物体发生弹性形变的时候，物体的各个部分之间发生弹力的相互作用．正像地球和物体之间由于有重力的相互作用，因而地球和物体组成的系统具有重力势能一样，发生弹性形变的物体的各个部分之间由于有弹力的相互作用，因而由这些部分组成的系统，亦即发生弹性形变的物体本身，就具有弹性势能．
+这一节我们研究物体因发生弹性形变而具有的势能，这种势能叫做\NoteBold{弹性势能}．物体发生弹性形变的时候，物体的各个部分之间发生弹力的相互作用．正像地球和物体之间由于有重力的相互作用，因而地球和物体组成的系统具有重力势能一样，发生弹性形变的物体的各个部分之间由于有弹力的相互作用，因而由这些部分组成的系统，亦即发生弹性形变的物体本身，就具有弹性势能．
 
 任何发生了弹性形变的物体都具有弹性势能．卷紧了的
 发条，拉长或压缩了的弹簧，拉弯了的弓，正在击球的网球拍或羽毛球拍，正在支撑运动员上跳的撑竿等等，都具有弹性势能（图~\ref{fig_A_7-17}）．
@@ -464,7 +464,7 @@ W_G&= mg\Delta h_1+mg\Delta h_2+mg\Delta h_3+\cdots\\
 \section{机械能守恒定律}
 \subsection{机械能的相互转化}
 
-动能和势能（重力势能和弹性势能）统称为\textbf{机械能}．一种形式的机械能是可以和另一种形式的机械能相互转化的，下面我们看一些例子．
+动能和势能（重力势能和弹性势能）统称为\NoteBold{机械能}．一种形式的机械能是可以和另一种形式的机械能相互转化的，下面我们看一些例子．
 
 物体自由下落或者沿着光滑斜面滑下的时候，重力对物
 体做功，物体的重力势能减少．
@@ -497,7 +497,7 @@ W_G&= mg\Delta h_1+mg\Delta h_2+mg\Delta h_3+\cdots\\
 
 上述结论不仅对自由落体是正确的，可以证明，在只有重力做功的情形下，它总是正确的．所谓只有重力做功，是指：物体只受重力，不受其他的力，如自由落体和各种抛体运动的情形；或者除重力而外还受其他的力，但其他力并不做功，物体沿光滑斜面运动就属于这种情形．
 
-\textbf{在只有重力做功的情形下，物体的动能和重力势能发生相互转化，但总的机械能保持不变}．这个结论叫做\textbf{机械能守恒定律}，它是力学中一条重要规律，又是更普遍的能的转化和
+\NoteBold{在只有重力做功的情形下，物体的动能和重力势能发生相互转化，但总的机械能保持不变}．这个结论叫做\NoteBold{机械能守恒定律}，它是力学中一条重要规律，又是更普遍的能的转化和
 守恒定律的一个特例．
 
 不但动能和重力势能的相互转化中机械能保持不变，在弹性势能和动能的相互转化中，如果只有弹力做功，机械能也是保持不变的．
@@ -632,14 +632,14 @@ W_G&= mg\Delta h_1+mg\Delta h_2+mg\Delta h_3+\cdots\\
 
 子弹射入墙壁，最后停在墙里，子弹的机械能减少．子弹机械能的减少是因为它克服摩擦力做了功．克服摩擦力做了多少功，机械能就减少多少．
 
-总之，\textit{物体的机械能发生变化，都是因为其他力对物体做了功；其他力做多少功，机械能就增加多少，克服其他力做多少功，机械能就减少多少}．
+总之，\NoteUnderWave{物体的机械能发生变化，都是因为其他力对物体做了功；其他力做多少功，机械能就增加多少，克服其他力做多少功，机械能就减少多少}．
 
 增加了的机械能并不是凭空产生的．飞机、火车、汽车开动的时候，发动机的牵引力做功，它们的机械能增加了，同时也消耗了燃料中储存的化学能．牵引力做功的过程，就是化学能转化成机械能的过程．
 牵引力做多少功，就有多少化学能转化成机械能．
 
 减少的机械能也不能无影无踪地消失．子弹射入墙壁的时候，克服摩擦力做功，它的机械能减少，同时产生了热能，使子弹和墙壁的温度升高．克服摩擦力做功的过程，就是机械能转化成热能的过程．克服摩擦力做多少功，就有多少机械能转化成热能．
 
-能量既不能凭空产生，也不能无影无踪地消失，不同形式的能在相互转化中保持守恒．做功的过程就是能从一种形式转化成另一种形式的过程．在机械能不守恒的运动中，做了多少功，就有多少机械能和其他形式的能发生转化．\textit{功是能的转化的量度}．
+能量既不能凭空产生，也不能无影无踪地消失，不同形式的能在相互转化中保持守恒．做功的过程就是能从一种形式转化成另一种形式的过程．在机械能不守恒的运动中，做了多少功，就有多少机械能和其他形式的能发生转化．\NoteUnderWave{功是能的转化的量度}．
 
 \section*{复习题}
 \begin{enumerate}
