--- a/1/B/01.tex
+++ b/1/B/01.tex
@@ -9,7 +9,7 @@
 在1标准大气压下，水在0$\Ucede$以下是固体(冰)，在0$\Ucede$以上才
 是液体．一段橡皮管冷却到$-100 \Ucede$以下会变得像玻璃一样
 地易碎，轻轻打一下就碎裂成许多小块．凡是跟温度有关的
-现象都叫做\textbf{热现象}．
+现象都叫做\NoteBold{热现象}．
 
 热学知识在实际中有重要的应用．各种热机和制冷设备
 的研制，化工、冶金、气象的研究，都离不开热学知识．
@@ -128,7 +128,7 @@
 的任
 何物质，其中含有的粒子数相同，都等于12克碳-12中含有
 的原子数．
-这个数叫做\textbf{阿伏伽德罗常数}．
+这个数叫做\NoteBold{阿伏伽德罗常数}．
 
     知道分子的大小，可以粗略地算出阿伏伽德罗常数．例
 如1摩的水，质量是$1.8\times 10^{-2}$千克，体积是$1.8\times 10^{-5} \Umc $．水
@@ -252,7 +252,7 @@
 
 \section{布朗运动}
 物体里的分子永不停息地做无规则运动，这个结论也是在实验事实的基础上得到的．我们在初中学过的扩散现象表明分子在不停地运动．现在我们再讲一种现象，它可以更明
-显地证实分子的无规则运动．这种现象叫做\textbf{布朗运动}．
+显地证实分子的无规则运动．这种现象叫做\NoteBold{布朗运动}．
 
 1827年英国植物学家布朗用显微镜观察悬浮在水中的花粉，发现花粉颗粒不停地做无规则运动．
 后来把颗粒的这种无规则运动叫做布朗运动．不只是花粉，悬浮在液体中的微粒，都做布朗运动．
@@ -300,7 +300,7 @@
 但是微粒的布朗运动的无规则性，却反映了液体内部分子运动的无规则性．
 
 实验表明，布朗运动随着温度的升高而愈加微烈．在扩散现象中，也是温度越高，扩散进行得越快．
-这表示分子的无规则运动跟温度有关系，温度越高，分子的无规则运动越激烈．正因为分子的无规则运动跟温度有关系，所以通常把分子的这种运动叫做\textbf{热运动}．
+这表示分子的无规则运动跟温度有关系，温度越高，分子的无规则运动越激烈．正因为分子的无规则运动跟温度有关系，所以通常把分子的这种运动叫做\NoteBold{热运动}．
 
 
 \subsection*{练习二}
