--- a/1/B/04.tex
+++ b/1/B/04.tex
@@ -1,7 +1,7 @@
 \chapter{固体和液体的性质}\label{chapter-properties-of-solids-and-liquids}
 
 \section{晶体和非晶体}
-固体可以分成晶体和非晶体两类．在常见的固体中，石英、云母、明矾、食盐、硫酸铜等都是\textbf{晶体}，玻璃、蜂蜡、松香、沥青、橡胶等都是\textbf{非晶体}．晶体和非晶体在外形上和物理性质上都有很大区别．
+固体可以分成晶体和非晶体两类．在常见的固体中，石英、云母、明矾、食盐、硫酸铜等都是\NoteBold{晶体}，玻璃、蜂蜡、松香、沥青、橡胶等都是\NoteBold{非晶体}．晶体和非晶体在外形上和物理性质上都有很大区别．
 
 晶体具有天然的规则的几何形状，它的外形是由若干个平面围成的多面体．例如食盐的晶体是立方体（图~\ref{fig_B_4-1a}），明矾的晶体是八面体（图~\ref{fig_B_4-1b}），石英的晶体（透明的石英晶体叫水晶，见图~\ref{fig_B_0-3}）中间是六面棱柱，两端是六面棱锥（图~\ref{fig_B_4-1c}）．
 冬季的雪花是水蒸气在空气中冻结时形成的冰的晶体，它们的形状虽然不同，但都呈六角形的规则图案（见图~\ref{fig_B_0-2}）．非晶体则没有规则的外形．
@@ -69,10 +69,10 @@
 
 
 晶体可以分为单晶体和多晶体．
-如果整个物体就是一个晶体，这样的物体就叫做\textbf{单晶体}．
+如果整个物体就是一个晶体，这样的物体就叫做\NoteBold{单晶体}．
 上面说的晶体就是指单晶体．单晶体是科学技术上的重要原材料，制造各种晶体管就要用纯度很高的单晶硅或单晶锗．
 
-如果整个物体是由许多杂乱无章地排列着的小晶体（晶粒）组成的，这样的物体就叫做\textbf{多晶体}．平常见到的各种金属材料就是多晶体．
+如果整个物体是由许多杂乱无章地排列着的小晶体（晶粒）组成的，这样的物体就叫做\NoteBold{多晶体}．平常见到的各种金属材料就是多晶体．
 把纯铁做成的样品放在显微镜下观察，可以
 看到它是由许许多多晶粒组成的．晶粒有大有小，最小的只有$10^{-5}$厘米那样大，最大的也超不过$10^{-3}$厘米．每个晶粒都是一个小单晶体，具有各向异性．由于晶粒在多晶体里杂乱无章地排列着，所以多晶体没有规则的几何形状，也不显示各向异性，它在不同方向上的物理性质是相同的，即各向同性．
 
@@ -80,7 +80,7 @@
 十九世纪中叶，人们根据晶体外形的规则性和各向异性提出了一种假说，认为晶体内部的微粒是有规则排列着的．
 从1912年开始的应用X射线对晶体结构进行的研究，证实了这种假说的正确．现在，人们用电子显微镜对晶体内部结构进行直接观察和照相，进一步证实了这种假说的正确．
 
-组成晶体的物质微粒（分子、原子或离子）依照一定的规律在空间中排成整齐的行列，构成所谓\textbf{空间点阵}．如果沿着这些物质微粒的行列画出直线来，可以得到若干组平行线，物质微粒就在这些组平行线的交点上．这些交点叫做空间点阵的\textbf{结点}．
+组成晶体的物质微粒（分子、原子或离子）依照一定的规律在空间中排成整齐的行列，构成所谓\NoteBold{空间点阵}．如果沿着这些物质微粒的行列画出直线来，可以得到若干组平行线，物质微粒就在这些组平行线的交点上．这些交点叫做空间点阵的\NoteBold{结点}．
 
 晶体中物质微粒的相互作用是很强的，微粒的热运动不足以克服它们的相互作用而远离，因而形成了空间点阵的结构．微粒的热运动主要表现为以结点为平衡位置不停地做微小的振动．
 
@@ -210,11 +210,11 @@
 
 这些实验表明：液体的表面就好像张紧的橡皮膜一样，具有收缩的趋势．
 
-为什么液体表面具有收缩的趋势呢？原来液体跟气体接触的表面形成一个薄层，叫做\textbf{表面层}，表面层里的情况跟液体内部有所不同．研究表明，表面层里的分子要比液体内部稀疏些，也就是分子间的距离要比液体内部大些．在液体内部分子间既存在着引力，又存在着斥力．引力和斥力的数量级相同，在通常的条件下可以认为它们的大小是相等的．在表面层里分子间的距离大，引力和斥力都减小，但斥力减小得更快，所以分子间的相互作用表现为引力．
+为什么液体表面具有收缩的趋势呢？原来液体跟气体接触的表面形成一个薄层，叫做\NoteBold{表面层}，表面层里的情况跟液体内部有所不同．研究表明，表面层里的分子要比液体内部稀疏些，也就是分子间的距离要比液体内部大些．在液体内部分子间既存在着引力，又存在着斥力．引力和斥力的数量级相同，在通常的条件下可以认为它们的大小是相等的．在表面层里分子间的距离大，引力和斥力都减小，但斥力减小得更快，所以分子间的相互作用表现为引力．
 如果在液面上划一条分界线$MN$（图~\ref{fig_B_4-11}），把液面分为(1)和(2)两部分，那么，由于表面层中分子间的引力，液面(1)对液面(2)有引力$f_1$的作用，液面(2)对液面(1)
 有引力$f_2$的作用，$f_1$和$f_2$大小相等
 方向相反．
-像这种液面各部分间相互吸引的力，叫做\textbf{表面张力}．液体的表面张力使液面具有收缩的趋势．
+像这种液面各部分间相互吸引的力，叫做\NoteBold{表面张力}．液体的表面张力使液面具有收缩的趋势．
 \begin{figure}[htbp]
     \centering
     \includegraphics{fig/B/4-11.pdf}
@@ -226,7 +226,7 @@
 就在这个平面上；如果液面是曲面，表面张力就在这个曲面的切面上．
 作用在任何一部分液面上的表面张力，总是跟这部分液面的分界线垂直．
 
-作用在液体表面单位长度分界线上的表面张力，叫做\textbf{表面张力系数}．不同液体的表面张力系数不同．分子间作用力大的液体，表面张力系数大，液态金属的表面张力系数很大，液态气体的很小．
+作用在液体表面单位长度分界线上的表面张力，叫做\NoteBold{表面张力系数}．不同液体的表面张力系数不同．分子间作用力大的液体，表面张力系数大，液态金属的表面张力系数很大，液态气体的很小．
 
 \subsection*{练习一}
 \begin{enumerate}
@@ -238,11 +238,11 @@
 
 \section{浸润和不浸润}
 在洁净的玻璃板上放一滴水银，它能够在玻璃板上滚来滚去，而不附着在上面．把一块洁净的玻璃片浸入水银里再取出来，玻璃上也不附着水银．
-这种现象叫做\textbf{不浸润}．对玻璃来说，水银是不浸润液体．
+这种现象叫做\NoteBold{不浸润}．对玻璃来说，水银是不浸润液体．
 
 在洁净的玻璃板上放一滴水，它要附着在玻璃板上形成薄层．
 把一块洁净的玻璃片浸入水里再取出来，玻璃片的表面是带有一层水的．
-这种现象叫做\textbf{浸润}．对玻璃来说，水是浸润液体．
+这种现象叫做\NoteBold{浸润}．对玻璃来说，水是浸润液体．
 
 同一种液体，对一些固体来说是浸润的，对另一些固体来说是不浸润的．水能浸润玻璃，但不能浸润石蜡．
 水银不能浸润玻璃，但能浸润锌．
@@ -267,7 +267,7 @@
     \end{minipage}
 \end{figure}
 
-浸润和不浸润现象也是分子力作用的表现．当液体与固体接触时，在接触处形成一个液体薄层，叫做\textbf{附着层}．附着层里的分子既受到固体分子的吸引，又受到液体内部分子的吸引．如果受到的固体分子的吸引比较弱，附着层里的分子就比液体内部稀疏，在附着层就出现跟表面张力相似的收缩力，这时跟固体接触的液体表面有缩小的趋势，形成不浸润现象．相反，如果受到的固体分子的吸引相当强，附着层里的分子就比液体内部更密，在附着层里就出现液体相互推斥的力，这时跟固体接触的液体表面有扩展的趋势，形成浸润现象．
+浸润和不浸润现象也是分子力作用的表现．当液体与固体接触时，在接触处形成一个液体薄层，叫做\NoteBold{附着层}．附着层里的分子既受到固体分子的吸引，又受到液体内部分子的吸引．如果受到的固体分子的吸引比较弱，附着层里的分子就比液体内部稀疏，在附着层就出现跟表面张力相似的收缩力，这时跟固体接触的液体表面有缩小的趋势，形成不浸润现象．相反，如果受到的固体分子的吸引相当强，附着层里的分子就比液体内部更密，在附着层里就出现液体相互推斥的力，这时跟固体接触的液体表面有扩展的趋势，形成浸润现象．
 
 \subsection*{练习二}
 
@@ -295,7 +295,7 @@
     \end{minipage}
 \end{figure}
 
-像这样浸润液体在细管里上升的现象和不浸润液体在细管里下降的现象，叫做\textbf{毛细现象}．发生毛细现象的管叫做毛细管．
+像这样浸润液体在细管里上升的现象和不浸润液体在细管里下降的现象，叫做\NoteBold{毛细现象}．发生毛细现象的管叫做毛细管．
 
 浸润液体为什么能在毛细管里上升呢？原来，浸润液体跟毛细管内壁接触时，引起液面的弯曲，使液面变大．而表面张力的收缩作用使液面减小，于是管内液体随着上升，以减小液面．直到表面张力向上的拉引作用和管内升高的液柱的重量达到平衡时，管内液体停止上升，稳定在一定的高度．利用类似的分析，也可以解释不浸润液体在毛细管里下降的现象．
 
