--- a/1/C/07.tex
+++ b/1/C/07.tex
@@ -26,8 +26,8 @@
     \caption{紫外线照射锌板使验电器带正电}\label{fig_C_7-1}
 \end{figure}
 
-在光的照射下物体中发射电子的现象，叫做\textbf{光电效应}．光
-电效应中发射出来的电子叫做\textbf{光电子}．实验表明，不仅紫外
+在光的照射下物体中发射电子的现象，叫做\NoteBold{光电效应}．光
+电效应中发射出来的电子叫做\NoteBold{光电子}．实验表明，不仅紫外
 线能产生光电效应，对于碱金属，例如锂、钠、钾、铯等，用可见
 光照射也能产生光电效应．
 
@@ -59,7 +59,7 @@ $K$和$A$之间是断开的．
 这表明$K$板发射的光电子已全部被$A$板吸去．这
 时增加入射光的强度，光电流值就继续上升．入射光的强度
 增加一倍，光电流的饱和值也增加一倍．
-这表明，\textit{在单位时间
+这表明，\NoteUnderWave{在单位时间
 里从极板$K$发射出的光电子数跟入射光的强度成正比}．
 
 逐渐减小极板$K$和$A$间的正向电压，当这电压减小为零
@@ -75,11 +75,11 @@ $\dfrac{1}{2}mv^2_m$
 \[\dfrac{1}{2}mv^2_m=eU \]
 式中的$e$表示电子的电量．
 因此，从实验中测出使光电流减小到零时的反向电压$U$的值，
-就可以求出光电子的最大初动能．实验表明，\textit{光电子的最大初
+就可以求出光电子的最大初动能．实验表明，\NoteUnderWave{光电子的最大初
 动能与入射光的强度无关，只随着入射光频率的增大而增大}．
 
 换用不同材料的极板$K$重做实验，结果表明，光电子的最
-大初动能还跟极板$K$的材料有关．\textit{对于任何一种金属，入射光
+大初动能还跟极板$K$的材料有关．\NoteUnderWave{对于任何一种金属，入射光
 的频率必须大于某一极限频率才能产生光电效应；低于这个
 极限频率的光，无论强度如何，照射时间多长，也不能产生光
 电效应}．
@@ -119,11 +119,11 @@ $\dfrac{1}{2}mv^2_m$
 物理学家普朗克在研究电磁辐射的规律时发现，只有假设电
 磁辐射的能量是不连续的，而是一份一份地进行的，每一份的
 能量是$h\nu$，其中$\nu$是辐射的频率，$h$是一个普适恒量，理论计
-算的结果才能跟实验事实很好地符合．这个$h$后来就叫做\textbf{普
+算的结果才能跟实验事实很好地符合．这个$h$后来就叫做\NoteBold{普
 朗克恒量}，实验测出$h=6.63\times10^{-34} \UJcdots$．
 在普朗克的量
 子说的启发下，爱因斯坦天才地预见到，为了解释光电效应必
-须假设光也是不连续的，而是一份一份的，每一份光叫做一个\textbf{光子}，光子的能量跟它的频率成正比，即$E=h\nu$，其中的$h$是
+须假设光也是不连续的，而是一份一份的，每一份光叫做一个\NoteBold{光子}，光子的能量跟它的频率成正比，即$E=h\nu$，其中的$h$是
 普朗克恒量．这就是爱因斯坦在1905年提出的光子说．爱
 因斯坦是在实验事实还不很充分的情况下做出这一假设的，
 但是从这个假设得出的一切结论都跟后来的实验结果相符．
@@ -144,11 +144,11 @@ $\dfrac{1}{2}mv^2_m$
 只有直接从金属表面出来的光
 电子才具有最大初动能．
 这些光电子克服金属原子的引力
-所做的功叫做\textbf{逸出功}．
+所做的功叫做\NoteBold{逸出功}．
 根据能量守恒定律，光电子的最大初
 动能跟入射光子的能量$h\nu$和逸出功$W$之间有下面的关系：
 \[\frac{1}{2}mv^2_m=h\nu-W \]
-这个方程叫做爱因斯坦\textbf{光电效应方程}．
+这个方程叫做爱因斯坦\NoteBold{光电效应方程}．
 
 对于一定的金属来说，逸出功$W$的值是一定的．
 所以，入
@@ -255,7 +255,7 @@ $N$在弹簧的作用下就自动离开$M$．如果把衔铁$N$跟控制机构
 影片摄制完后，要进行录音．
 录音时通过专门的设备使声
 音的变化转变成光的变化，从而把声音的“像”摄制在影片的
-边缘上，形成宽窄变化的暗条纹，这就是影片边上的\textbf{音道}．
+边缘上，形成宽窄变化的暗条纹，这就是影片边上的\NoteBold{音道}．
 
 放映电影时，利用光电管把“声音的照片”还原成声音．方
 法是：在电影放映机中用强度不变的极窄的光束照射音道，
@@ -272,7 +272,7 @@ $N$在弹簧的作用下就自动离开$M$．如果把衔铁$N$跟控制机构
 然人们现在对光的粒子性的认识比起十七世纪牛顿提出微粒
 说时已经大不相同．人类对光的本性的认识经过曲折的发展
 过程已经越来越深入了．现在，人们认识到，光既具有波动
-性，又具有粒子性，也就是说，\textit{光具有波粒二象性}．
+性，又具有粒子性，也就是说，\NoteUnderWave{光具有波粒二象性}．
 
 十七世纪的微粒说和波动说是互相对立的两种学说，都
 企图用一种观点去说明光的本性，这是受了传统观念的影响．
@@ -320,7 +320,7 @@ $$p=\frac{h}{\lambda}$$
 地方；光波强度小的地方，是光子到达的几率小的地方．
 所以，
 从这种意义上，可以把光的波动性看做是表明大量光子运动
-规律的一种\textbf{几率波}．
+规律的一种\NoteBold{几率波}．
 
 一般说来，大量光子产生的效果往往显示出波动性，个别
 光子产生的效果往往显示出粒子性，让我们稍稍详细地说明
@@ -426,7 +426,7 @@ $$p=\frac{h}{\lambda}$$
 证明了一切运动的微观粒子都具有波粒二象性，其波长与动
 量的关系都符合德布罗意公式．
 于是人们就把这种波叫做德
-布罗意波或\textbf{物质波}．
+布罗意波或\NoteBold{物质波}．
 
 那么，物质波是一种什么波呢？我们知道，机械波是周期
 性的振动在媒质内的传播，电磁波是周期变化的电磁场的传播．
@@ -437,7 +437,7 @@ $$p=\frac{h}{\lambda}$$
 年，德国物理学家玻恩（$1882 \sim 1970$）提出了符合实验事实的
 后来为大家公认的统计解释：物质波在某一地方的强度跟在
 该处找到它所代表的粒子的几率成正比．
-按玻恩的解释，\textit{物质波乃是一种几率波}．
+按玻恩的解释，\NoteUnderWave{物质波乃是一种几率波}．
 
 牛顿力学完全不能解释电子等微观粒子的衍射现象，用
 物质波的统计解释却很容易说明这种现象．
